@@ -28,8 +28,8 @@ import com.gs.collections.impl.lazy.LazyIterableAdapter;
 import com.gs.collections.impl.list.mutable.FastList;
 import com.gs.collections.impl.set.mutable.UnifiedSet;
 import com.gs.collections.impl.test.Verify;
-import org.junit.Assert;
-import org.junit.Test;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.Test;
 
 import static com.gs.collections.impl.factory.Iterables.iList;
 import static com.gs.collections.impl.factory.Iterables.mSet;
@@ -45,7 +45,7 @@ public abstract class AbstractCollectionTestCase extends AbstractRichIterableTes
         MutableCollection<Object> collection = this.newWith().newEmpty();
         Verify.assertEmpty(collection);
         Verify.assertSize(0, collection);
-        Assert.assertFalse(collection.notEmpty());
+        Assertions.assertFalse(collection.notEmpty());
     }
 
     @Test
@@ -98,17 +98,17 @@ public abstract class AbstractCollectionTestCase extends AbstractRichIterableTes
     public void addAll()
     {
         MutableCollection<Integer> collection = this.newWith();
-        Assert.assertTrue(collection.addAll(FastList.newListWith(1, 2, 3)));
+        Assertions.assertTrue(collection.addAll(FastList.newListWith(1, 2, 3)));
         Verify.assertContainsAll(collection, 1, 2, 3);
 
         boolean result = collection.addAll(FastList.newListWith(1, 2, 3));
         if (collection.size() == 3)
         {
-            Assert.assertFalse("addAll did not modify the collection", result);
+            Assertions.assertFalse(result, "addAll did not modify the collection");
         }
         else
         {
-            Assert.assertTrue("addAll modified the collection", result);
+            Assertions.assertTrue(result, "addAll modified the collection");
         }
         Verify.assertContainsAll(collection, 1, 2, 3);
     }
@@ -117,32 +117,32 @@ public abstract class AbstractCollectionTestCase extends AbstractRichIterableTes
     public void addAllIterable()
     {
         MutableCollection<Integer> collection1 = this.newWith();
-        Assert.assertTrue(collection1.addAllIterable(FastList.newListWith(1, 2, 3)));
+        Assertions.assertTrue(collection1.addAllIterable(FastList.newListWith(1, 2, 3)));
         Verify.assertContainsAll(collection1, 1, 2, 3);
 
         boolean result1 = collection1.addAllIterable(FastList.newListWith(1, 2, 3));
         if (collection1.size() == 3)
         {
-            Assert.assertFalse("addAllIterable did not modify the collection", result1);
+            Assertions.assertFalse(result1, "addAllIterable did not modify the collection");
         }
         else
         {
-            Assert.assertTrue("addAllIterable modified the collection", result1);
+            Assertions.assertTrue(result1, "addAllIterable modified the collection");
         }
         Verify.assertContainsAll(collection1, 1, 2, 3);
 
         MutableCollection<Integer> collection2 = this.newWith();
-        Assert.assertTrue(collection2.addAllIterable(UnifiedSet.newSetWith(1, 2, 3)));
+        Assertions.assertTrue(collection2.addAllIterable(UnifiedSet.newSetWith(1, 2, 3)));
         Verify.assertContainsAll(collection2, 1, 2, 3);
 
         boolean result2 = collection2.addAllIterable(UnifiedSet.newSetWith(1, 2, 3));
         if (collection1.size() == 3)
         {
-            Assert.assertFalse("addAllIterable did not modify the collection", result2);
+            Assertions.assertFalse(result2, "addAllIterable did not modify the collection");
         }
         else
         {
-            Assert.assertTrue("addAllIterable modified the collection", result2);
+            Assertions.assertTrue(result2, "addAllIterable modified the collection");
         }
         Verify.assertContainsAll(collection2, 1, 2, 3);
     }
@@ -151,56 +151,56 @@ public abstract class AbstractCollectionTestCase extends AbstractRichIterableTes
     public void removeAll()
     {
         MutableCollection<Integer> objects = this.newWith(1, 2, 3);
-        Assert.assertTrue(objects.removeAll(FastList.newListWith(1, 2, 4)));
-        Assert.assertEquals(Bags.mutable.of(3), objects.toBag());
+        Assertions.assertTrue(objects.removeAll(FastList.newListWith(1, 2, 4)));
+        Assertions.assertEquals(Bags.mutable.of(3), objects.toBag());
 
         MutableCollection<Integer> objects2 = this.newWith(1, 2, 3);
-        Assert.assertFalse(objects2.removeAll(FastList.newListWith(4, 5)));
-        Assert.assertEquals(Bags.mutable.of(1, 2, 3), objects2.toBag());
+        Assertions.assertFalse(objects2.removeAll(FastList.newListWith(4, 5)));
+        Assertions.assertEquals(Bags.mutable.of(1, 2, 3), objects2.toBag());
     }
 
     @Test
     public void removeAllIterable()
     {
         MutableCollection<Integer> objects = this.newWith(1, 2, 3);
-        Assert.assertTrue(objects.removeAllIterable(FastList.newListWith(1, 2, 4)));
-        Assert.assertEquals(Bags.mutable.of(3), objects.toBag());
+        Assertions.assertTrue(objects.removeAllIterable(FastList.newListWith(1, 2, 4)));
+        Assertions.assertEquals(Bags.mutable.of(3), objects.toBag());
 
         MutableCollection<Integer> objects2 = this.newWith(1, 2, 3);
-        Assert.assertFalse(objects2.removeAllIterable(FastList.newListWith(4, 5)));
-        Assert.assertEquals(Bags.mutable.of(1, 2, 3), objects2.toBag());
+        Assertions.assertFalse(objects2.removeAllIterable(FastList.newListWith(4, 5)));
+        Assertions.assertEquals(Bags.mutable.of(1, 2, 3), objects2.toBag());
     }
 
     @Test
     public void retainAll()
     {
         MutableCollection<Integer> objects = this.newWith(1, 2, 3);
-        Assert.assertTrue(objects.retainAll(mSet(1, 2)));
+        Assertions.assertTrue(objects.retainAll(mSet(1, 2)));
         Verify.assertSize(2, objects);
         Verify.assertContainsAll(objects, 1, 2);
 
         MutableCollection<Integer> integers1 = this.newWith(0);
-        Assert.assertFalse(integers1.retainAll(FastList.newListWith(1, 0)));
-        Assert.assertEquals(Bags.mutable.of(0), integers1.toBag());
+        Assertions.assertFalse(integers1.retainAll(FastList.newListWith(1, 0)));
+        Assertions.assertEquals(Bags.mutable.of(0), integers1.toBag());
 
         MutableCollection<Integer> integers2 = this.newWith(1, 2, 3);
-        Integer copy = new Integer(1);
-        Assert.assertTrue(integers2.retainAll(FastList.newListWith(copy)));
-        Assert.assertEquals(Bags.mutable.of(1), integers2.toBag());
-        Assert.assertNotSame(copy, integers2.getFirst());
+        Integer copy = Integer.valueOf(1);
+        Assertions.assertTrue(integers2.retainAll(FastList.newListWith(copy)));
+        Assertions.assertEquals(Bags.mutable.of(1), integers2.toBag());
+        Assertions.assertNotSame(copy, integers2.getFirst());
     }
 
     @Test
     public void retainAllIterable()
     {
         MutableCollection<Integer> objects = this.newWith(1, 2, 3);
-        Assert.assertTrue(objects.retainAllIterable(iList(1, 2)));
+        Assertions.assertTrue(objects.retainAllIterable(iList(1, 2)));
         Verify.assertSize(2, objects);
         Verify.assertContainsAll(objects, 1, 2);
 
         MutableCollection<Integer> integers = this.newWith(0);
-        Assert.assertFalse(integers.retainAllIterable(FastList.newListWith(1, 0)));
-        Assert.assertEquals(Bags.mutable.of(0), integers.toBag());
+        Assertions.assertFalse(integers.retainAllIterable(FastList.newListWith(1, 0)));
+        Assertions.assertEquals(Bags.mutable.of(0), integers.toBag());
     }
 
     @Test
@@ -219,7 +219,7 @@ public abstract class AbstractCollectionTestCase extends AbstractRichIterableTes
     {
         MutableCollection<Integer> objects = this.newWith(1, 2, 3);
         Integer result = objects.injectIntoWith(1, (injectedValued, item, parameter) -> injectedValued + item + parameter, 0);
-        Assert.assertEquals(Integer.valueOf(7), result);
+        Assertions.assertEquals(Integer.valueOf(7), result);
     }
 
     @Test
@@ -244,31 +244,31 @@ public abstract class AbstractCollectionTestCase extends AbstractRichIterableTes
     {
         MutableCollection<Integer> objects1 = this.newWith(1, 2, 3);
         objects1.add(null);
-        Assert.assertTrue(objects1.removeIf(Predicates.isNull()));
+        Assertions.assertTrue(objects1.removeIf(Predicates.isNull()));
         Verify.assertSize(3, objects1);
         Verify.assertContainsAll(objects1, 1, 2, 3);
 
         MutableCollection<Integer> objects2 = this.newWith(3, 4, 5);
-        Assert.assertTrue(objects2.removeIf(Predicates.equal(3)));
-        Assert.assertFalse(objects2.removeIf(Predicates.equal(6)));
+        Assertions.assertTrue(objects2.removeIf(Predicates.equal(3)));
+        Assertions.assertFalse(objects2.removeIf(Predicates.equal(6)));
 
         MutableCollection<Integer> objects3 = this.newWith(1, 2, 3, 4, 5);
-        Assert.assertTrue(objects3.removeIf(Predicates.greaterThan(0)));
-        Assert.assertFalse(objects3.removeIf(Predicates.equal(5)));
+        Assertions.assertTrue(objects3.removeIf(Predicates.greaterThan(0)));
+        Assertions.assertFalse(objects3.removeIf(Predicates.equal(5)));
     }
 
     @Test
     public void removeIfWith()
     {
         MutableCollection<Integer> objects1 = this.newWith(1, 2, 3, 4);
-        Assert.assertTrue(objects1.removeIfWith(Predicates2.<Integer>lessThan(), 3));
+        Assertions.assertTrue(objects1.removeIfWith(Predicates2.<Integer>lessThan(), 3));
         Verify.assertSize(2, objects1);
         Verify.assertContainsAll(objects1, 3, 4);
-        Assert.assertFalse(objects1.removeIfWith(Predicates2.greaterThan(), 6));
+        Assertions.assertFalse(objects1.removeIfWith(Predicates2.greaterThan(), 6));
 
         MutableCollection<Integer> objects2 = this.newWith(1, 2, 3, 4, 5);
-        Assert.assertTrue(objects2.removeIfWith(Predicates2.greaterThan(), 0));
-        Assert.assertFalse(objects2.removeIfWith(Predicates2.greaterThan(), 3));
+        Assertions.assertTrue(objects2.removeIfWith(Predicates2.greaterThan(), 0));
+        Assertions.assertFalse(objects2.removeIfWith(Predicates2.greaterThan(), 3));
     }
 
     @Test
@@ -276,8 +276,8 @@ public abstract class AbstractCollectionTestCase extends AbstractRichIterableTes
     {
         MutableCollection<Integer> coll = this.newWith(1, 2, 3);
         MutableCollection<Integer> collWith = coll.with(4);
-        Assert.assertSame(coll, collWith);
-        Assert.assertEquals(this.newWith(1, 2, 3, 4), collWith);
+        Assertions.assertSame(coll, collWith);
+        Assertions.assertEquals(this.newWith(1, 2, 3, 4), collWith);
     }
 
     @Test
@@ -285,8 +285,8 @@ public abstract class AbstractCollectionTestCase extends AbstractRichIterableTes
     {
         MutableCollection<Integer> coll = this.newWith(1, 2, 3);
         MutableCollection<Integer> collWith = coll.withAll(FastList.newListWith(4, 5));
-        Assert.assertSame(coll, collWith);
-        Assert.assertEquals(this.newWith(1, 2, 3, 4, 5), collWith);
+        Assertions.assertSame(coll, collWith);
+        Assertions.assertEquals(this.newWith(1, 2, 3, 4, 5), collWith);
     }
 
     @Test
@@ -294,8 +294,8 @@ public abstract class AbstractCollectionTestCase extends AbstractRichIterableTes
     {
         MutableCollection<Integer> coll = this.newWith(1, 2, 3);
         MutableCollection<Integer> collWithout = coll.without(2);
-        Assert.assertSame(coll, collWithout);
-        Assert.assertEquals(this.newWith(1, 3), collWithout);
+        Assertions.assertSame(coll, collWithout);
+        Assertions.assertEquals(this.newWith(1, 3), collWithout);
     }
 
     @Test
@@ -303,8 +303,8 @@ public abstract class AbstractCollectionTestCase extends AbstractRichIterableTes
     {
         MutableCollection<Integer> coll = this.newWith(1, 2, 3, 4, 5);
         MutableCollection<Integer> collWithout = coll.withoutAll(FastList.newListWith(2, 4));
-        Assert.assertSame(coll, collWithout);
-        Assert.assertEquals(this.newWith(1, 3, 5), collWithout);
+        Assertions.assertSame(coll, collWithout);
+        Assertions.assertEquals(this.newWith(1, 3, 5), collWithout);
     }
 
     @Test
