@@ -43,8 +43,8 @@ import com.gs.collections.impl.test.domain.Key;
 import com.gs.collections.impl.tuple.ImmutableEntry;
 import com.gs.collections.impl.tuple.Tuples;
 import com.gs.collections.impl.utility.Iterate;
-import org.junit.Assert;
-import org.junit.Test;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.Test;
 
 import static com.gs.collections.impl.factory.Iterables.iMap;
 import static com.gs.collections.impl.factory.Iterables.mList;
@@ -74,7 +74,7 @@ public abstract class MutableMapIterableTestCase extends MapIterableTestCase
     {
         MutableMapIterable<Integer, String> map = this.newMapWithKeyValue(1, "One");
         ImmutableMapIterable<Integer, String> immutable = map.toImmutable();
-        Assert.assertEquals(Maps.immutable.with(1, "One"), immutable);
+        Assertions.assertEquals(Maps.immutable.with(1, "One"), immutable);
     }
 
     @Test
@@ -102,58 +102,58 @@ public abstract class MutableMapIterableTestCase extends MapIterableTestCase
     public void removeFromEntrySet()
     {
         MutableMapIterable<String, Integer> map = this.newMapWithKeysValues("One", 1, "Two", 2, "Three", 3);
-        Assert.assertTrue(map.entrySet().remove(ImmutableEntry.of("Two", 2)));
-        Assert.assertEquals(UnifiedMap.newWithKeysValues("One", 1, "Three", 3), map);
+        Assertions.assertTrue(map.entrySet().remove(ImmutableEntry.of("Two", 2)));
+        Assertions.assertEquals(UnifiedMap.newWithKeysValues("One", 1, "Three", 3), map);
 
-        Assert.assertFalse(map.entrySet().remove(ImmutableEntry.of("Four", 4)));
-        Assert.assertEquals(UnifiedMap.newWithKeysValues("One", 1, "Three", 3), map);
+        Assertions.assertFalse(map.entrySet().remove(ImmutableEntry.of("Four", 4)));
+        Assertions.assertEquals(UnifiedMap.newWithKeysValues("One", 1, "Three", 3), map);
 
-        Assert.assertFalse(map.entrySet().remove(null));
+        Assertions.assertFalse(map.entrySet().remove(null));
 
         MutableMapIterable<String, Integer> mapWithNullKey = this.newMapWithKeysValues("One", 1, null, 2, "Three", 3);
-        Assert.assertTrue(mapWithNullKey.entrySet().remove(new ImmutableEntry<String, Integer>(null, 2)));
+        Assertions.assertTrue(mapWithNullKey.entrySet().remove(new ImmutableEntry<String, Integer>(null, 2)));
     }
 
     @Test
     public void removeAllFromEntrySet()
     {
         MutableMapIterable<String, Integer> map = this.newMapWithKeysValues("One", 1, "Two", 2, "Three", 3);
-        Assert.assertTrue(map.entrySet().removeAll(FastList.newListWith(
+        Assertions.assertTrue(map.entrySet().removeAll(FastList.newListWith(
                 ImmutableEntry.of("One", 1),
                 ImmutableEntry.of("Three", 3))));
-        Assert.assertEquals(UnifiedMap.newWithKeysValues("Two", 2), map);
+        Assertions.assertEquals(UnifiedMap.newWithKeysValues("Two", 2), map);
 
-        Assert.assertFalse(map.entrySet().removeAll(FastList.newListWith(ImmutableEntry.of("Four", 4))));
-        Assert.assertEquals(UnifiedMap.newWithKeysValues("Two", 2), map);
+        Assertions.assertFalse(map.entrySet().removeAll(FastList.newListWith(ImmutableEntry.of("Four", 4))));
+        Assertions.assertEquals(UnifiedMap.newWithKeysValues("Two", 2), map);
 
-        Assert.assertFalse(map.entrySet().remove(null));
+        Assertions.assertFalse(map.entrySet().remove(null));
 
         MutableMapIterable<String, Integer> mapWithNullKey = this.newMapWithKeysValues("One", 1, null, 2, "Three", 3);
-        Assert.assertTrue(mapWithNullKey.entrySet().removeAll(FastList.newListWith(ImmutableEntry.of(null, 2))));
+        Assertions.assertTrue(mapWithNullKey.entrySet().removeAll(FastList.newListWith(ImmutableEntry.of(null, 2))));
     }
 
     @Test
     public void retainAllFromEntrySet()
     {
         MutableMapIterable<String, Integer> map = this.newMapWithKeysValues("One", 1, "Two", 2, "Three", 3);
-        Assert.assertFalse(map.entrySet().retainAll(FastList.newListWith(
+        Assertions.assertFalse(map.entrySet().retainAll(FastList.newListWith(
                 ImmutableEntry.of("One", 1),
                 ImmutableEntry.of("Two", 2),
                 ImmutableEntry.of("Three", 3),
                 ImmutableEntry.of("Four", 4))));
 
-        Assert.assertTrue(map.entrySet().retainAll(FastList.newListWith(
+        Assertions.assertTrue(map.entrySet().retainAll(FastList.newListWith(
                 ImmutableEntry.of("One", 1),
                 ImmutableEntry.of("Three", 3),
                 ImmutableEntry.of("Four", 4))));
-        Assert.assertEquals(UnifiedMap.newWithKeysValues("One", 1, "Three", 3), map);
+        Assertions.assertEquals(UnifiedMap.newWithKeysValues("One", 1, "Three", 3), map);
 
         MutableMapIterable<Integer, Integer> integers = this.newMapWithKeysValues(1, 1, 2, 2, 3, 3);
-        Integer copy = new Integer(1);
-        Assert.assertTrue(integers.entrySet().retainAll(mList(ImmutableEntry.of(copy, copy))));
-        Assert.assertEquals(iMap(copy, copy), integers);
-        Assert.assertNotSame(copy, Iterate.getOnly(integers.entrySet()).getKey());
-        Assert.assertNotSame(copy, Iterate.getOnly(integers.entrySet()).getValue());
+        Integer copy = Integer.valueOf(1);
+        Assertions.assertTrue(integers.entrySet().retainAll(mList(ImmutableEntry.of(copy, copy))));
+        Assertions.assertEquals(iMap(copy, copy), integers);
+        Assertions.assertNotSame(copy, Iterate.getOnly(integers.entrySet()).getKey());
+        Assertions.assertNotSame(copy, Iterate.getOnly(integers.entrySet()).getValue());
     }
 
     @Test
@@ -180,10 +180,10 @@ public abstract class MutableMapIterableTestCase extends MapIterableTestCase
     public void removeFromKeySet()
     {
         MutableMapIterable<String, Integer> map = this.newMapWithKeysValues("One", 1, "Two", 2, "Three", 3);
-        Assert.assertFalse(map.keySet().remove("Four"));
+        Assertions.assertFalse(map.keySet().remove("Four"));
 
-        Assert.assertTrue(map.keySet().remove("Two"));
-        Assert.assertEquals(UnifiedMap.newWithKeysValues("One", 1, "Three", 3), map);
+        Assertions.assertTrue(map.keySet().remove("Two"));
+        Assertions.assertEquals(UnifiedMap.newWithKeysValues("One", 1, "Three", 3), map);
     }
 
     @Test
@@ -195,31 +195,31 @@ public abstract class MutableMapIterableTestCase extends MapIterableTestCase
         }
 
         MutableMapIterable<String, Integer> map = this.newMapWithKeysValues("One", 1, "Two", 2, "Three", 3);
-        Assert.assertFalse(map.keySet().remove(null));
-        Assert.assertEquals(UnifiedMap.newWithKeysValues("One", 1, "Two", 2, "Three", 3), map);
+        Assertions.assertFalse(map.keySet().remove(null));
+        Assertions.assertEquals(UnifiedMap.newWithKeysValues("One", 1, "Two", 2, "Three", 3), map);
         map.put(null, 4);
-        Assert.assertTrue(map.keySet().remove(null));
-        Assert.assertEquals(UnifiedMap.newWithKeysValues("One", 1, "Two", 2, "Three", 3), map);
+        Assertions.assertTrue(map.keySet().remove(null));
+        Assertions.assertEquals(UnifiedMap.newWithKeysValues("One", 1, "Two", 2, "Three", 3), map);
     }
 
     @Test
     public void removeAllFromKeySet()
     {
         MutableMapIterable<String, Integer> map = this.newMapWithKeysValues("One", 1, "Two", 2, "Three", 3);
-        Assert.assertFalse(map.keySet().removeAll(FastList.newListWith("Four")));
+        Assertions.assertFalse(map.keySet().removeAll(FastList.newListWith("Four")));
 
-        Assert.assertTrue(map.keySet().removeAll(FastList.newListWith("Two", "Four")));
-        Assert.assertEquals(UnifiedMap.newWithKeysValues("One", 1, "Three", 3), map);
+        Assertions.assertTrue(map.keySet().removeAll(FastList.newListWith("Two", "Four")));
+        Assertions.assertEquals(UnifiedMap.newWithKeysValues("One", 1, "Three", 3), map);
     }
 
     @Test
     public void retainAllFromKeySet()
     {
         MutableMapIterable<String, Integer> map = this.newMapWithKeysValues("One", 1, "Two", 2, "Three", 3);
-        Assert.assertFalse(map.keySet().retainAll(FastList.newListWith("One", "Two", "Three", "Four")));
+        Assertions.assertFalse(map.keySet().retainAll(FastList.newListWith("One", "Two", "Three", "Four")));
 
-        Assert.assertTrue(map.keySet().retainAll(FastList.newListWith("One", "Three")));
-        Assert.assertEquals(UnifiedMap.newWithKeysValues("One", 1, "Three", 3), map);
+        Assertions.assertTrue(map.keySet().retainAll(FastList.newListWith("One", "Three")));
+        Assertions.assertEquals(UnifiedMap.newWithKeysValues("One", 1, "Three", 3), map);
     }
 
     @Test
@@ -243,18 +243,18 @@ public abstract class MutableMapIterableTestCase extends MapIterableTestCase
         MutableMapIterable<String, Integer> map = this.newMapWithKeysValues("One", 1, "Two", 2, "Three", 3);
         MutableList<String> expected = FastList.newListWith("One", "Two", "Three").toSortedList();
         Set<String> keySet = map.keySet();
-        Assert.assertEquals(expected, FastList.newListWith(keySet.toArray()).toSortedList());
-        Assert.assertEquals(expected, FastList.newListWith(keySet.toArray(new String[keySet.size()])).toSortedList());
+        Assertions.assertEquals(expected, FastList.newListWith(keySet.toArray()).toSortedList());
+        Assertions.assertEquals(expected, FastList.newListWith(keySet.toArray(new String[keySet.size()])).toSortedList());
     }
 
     @Test
     public void removeFromValues()
     {
         MutableMapIterable<String, Integer> map = this.newMapWithKeysValues("One", 1, "Two", 2, "Three", 3);
-        Assert.assertFalse(map.values().remove(4));
+        Assertions.assertFalse(map.values().remove(4));
 
-        Assert.assertTrue(map.values().remove(2));
-        Assert.assertEquals(UnifiedMap.newWithKeysValues("One", 1, "Three", 3), map);
+        Assertions.assertTrue(map.values().remove(2));
+        Assertions.assertEquals(UnifiedMap.newWithKeysValues("One", 1, "Three", 3), map);
     }
 
     @Test
@@ -266,39 +266,39 @@ public abstract class MutableMapIterableTestCase extends MapIterableTestCase
         }
 
         MutableMapIterable<String, Integer> map = this.newMapWithKeysValues("One", 1, "Two", 2, "Three", 3);
-        Assert.assertFalse(map.values().remove(null));
-        Assert.assertEquals(UnifiedMap.newWithKeysValues("One", 1, "Two", 2, "Three", 3), map);
+        Assertions.assertFalse(map.values().remove(null));
+        Assertions.assertEquals(UnifiedMap.newWithKeysValues("One", 1, "Two", 2, "Three", 3), map);
         map.put("Four", null);
-        Assert.assertTrue(map.values().remove(null));
-        Assert.assertEquals(UnifiedMap.newWithKeysValues("One", 1, "Two", 2, "Three", 3), map);
+        Assertions.assertTrue(map.values().remove(null));
+        Assertions.assertEquals(UnifiedMap.newWithKeysValues("One", 1, "Two", 2, "Three", 3), map);
     }
 
     @Test
     public void removeAllFromValues()
     {
         MutableMapIterable<String, Integer> map = this.newMapWithKeysValues("One", 1, "Two", 2, "Three", 3);
-        Assert.assertFalse(map.values().removeAll(FastList.newListWith(4)));
+        Assertions.assertFalse(map.values().removeAll(FastList.newListWith(4)));
 
-        Assert.assertTrue(map.values().removeAll(FastList.newListWith(2, 4)));
-        Assert.assertEquals(UnifiedMap.newWithKeysValues("One", 1, "Three", 3), map);
+        Assertions.assertTrue(map.values().removeAll(FastList.newListWith(2, 4)));
+        Assertions.assertEquals(UnifiedMap.newWithKeysValues("One", 1, "Three", 3), map);
     }
 
     @Test
     public void retainAllFromValues()
     {
         MutableMapIterable<String, Integer> map = this.newMapWithKeysValues("One", 1, "Two", 2, "Three", 3);
-        Assert.assertFalse(map.values().retainAll(FastList.newListWith(1, 2, 3, 4)));
+        Assertions.assertFalse(map.values().retainAll(FastList.newListWith(1, 2, 3, 4)));
 
-        Assert.assertTrue(map.values().retainAll(FastList.newListWith(1, 3)));
-        Assert.assertEquals(UnifiedMap.newWithKeysValues("One", 1, "Three", 3), map);
+        Assertions.assertTrue(map.values().retainAll(FastList.newListWith(1, 3)));
+        Assertions.assertEquals(UnifiedMap.newWithKeysValues("One", 1, "Three", 3), map);
     }
 
     @Test
     public void put()
     {
         MutableMapIterable<Integer, String> map = this.newMapWithKeysValues(1, "One", 2, "Two");
-        Assert.assertNull(map.put(3, "Three"));
-        Assert.assertEquals(UnifiedMap.newWithKeysValues(1, "One", 2, "Two", 3, "Three"), map);
+        Assertions.assertNull(map.put(3, "Three"));
+        Assertions.assertEquals(UnifiedMap.newWithKeysValues(1, "One", 2, "Two", 3, "Three"), map);
 
         ImmutableList<Integer> key1 = Lists.immutable.with(null);
         ImmutableList<Integer> key2 = Lists.immutable.with(null);
@@ -306,8 +306,8 @@ public abstract class MutableMapIterableTestCase extends MapIterableTestCase
         Object value2 = new Object();
         MutableMapIterable<ImmutableList<Integer>, Object> map2 = this.newMapWithKeyValue(key1, value1);
         Object previousValue = map2.put(key2, value2);
-        Assert.assertSame(value1, previousValue);
-        Assert.assertSame(key1, map2.keysView().getFirst());
+        Assertions.assertSame(value1, previousValue);
+        Assertions.assertSame(key1, map2.keysView().getFirst());
     }
 
     @Test
@@ -333,14 +333,14 @@ public abstract class MutableMapIterableTestCase extends MapIterableTestCase
     {
         MutableMapIterable<Integer, String> map = this.newMapWithKeysValues(1, "1", 2, "Two");
 
-        Assert.assertEquals("1", map.removeKey(1));
+        Assertions.assertEquals("1", map.removeKey(1));
         Verify.assertSize(1, map);
         Verify.denyContainsKey(1, map);
 
-        Assert.assertNull(map.removeKey(42));
+        Assertions.assertNull(map.removeKey(42));
         Verify.assertSize(1, map);
 
-        Assert.assertEquals("Two", map.removeKey(2));
+        Assertions.assertEquals("Two", map.removeKey(2));
         Verify.assertEmpty(map);
     }
 
@@ -348,9 +348,9 @@ public abstract class MutableMapIterableTestCase extends MapIterableTestCase
     public void getIfAbsentPut()
     {
         MutableMapIterable<Integer, String> map = this.newMapWithKeysValues(1, "1", 2, "2", 3, "3");
-        Assert.assertNull(map.get(4));
-        Assert.assertEquals("4", map.getIfAbsentPut(4, new PassThruFunction0<>("4")));
-        Assert.assertEquals("3", map.getIfAbsentPut(3, new PassThruFunction0<>("3")));
+        Assertions.assertNull(map.get(4));
+        Assertions.assertEquals("4", map.getIfAbsentPut(4, new PassThruFunction0<>("4")));
+        Assertions.assertEquals("3", map.getIfAbsentPut(3, new PassThruFunction0<>("3")));
         Verify.assertContainsKeyValue(4, "4", map);
     }
 
@@ -358,9 +358,9 @@ public abstract class MutableMapIterableTestCase extends MapIterableTestCase
     public void getIfAbsentPutValue()
     {
         MutableMapIterable<Integer, String> map = this.newMapWithKeysValues(1, "1", 2, "2", 3, "3");
-        Assert.assertNull(map.get(4));
-        Assert.assertEquals("4", map.getIfAbsentPut(4, "4"));
-        Assert.assertEquals("3", map.getIfAbsentPut(3, "5"));
+        Assertions.assertNull(map.get(4));
+        Assertions.assertEquals("4", map.getIfAbsentPut(4, "4"));
+        Assertions.assertEquals("3", map.getIfAbsentPut(3, "5"));
         Verify.assertContainsKeyValue(1, "1", map);
         Verify.assertContainsKeyValue(2, "2", map);
         Verify.assertContainsKeyValue(3, "3", map);
@@ -371,9 +371,9 @@ public abstract class MutableMapIterableTestCase extends MapIterableTestCase
     public void getIfAbsentPutWithKey()
     {
         MutableMapIterable<Integer, Integer> map = this.newMapWithKeysValues(1, 1, 2, 2, 3, 3);
-        Assert.assertNull(map.get(4));
-        Assert.assertEquals(Integer.valueOf(4), map.getIfAbsentPutWithKey(4, Functions.getIntegerPassThru()));
-        Assert.assertEquals(Integer.valueOf(3), map.getIfAbsentPutWithKey(3, Functions.getIntegerPassThru()));
+        Assertions.assertNull(map.get(4));
+        Assertions.assertEquals(Integer.valueOf(4), map.getIfAbsentPutWithKey(4, Functions.getIntegerPassThru()));
+        Assertions.assertEquals(Integer.valueOf(3), map.getIfAbsentPutWithKey(3, Functions.getIntegerPassThru()));
         Verify.assertContainsKeyValue(Integer.valueOf(4), Integer.valueOf(4), map);
     }
 
@@ -381,9 +381,9 @@ public abstract class MutableMapIterableTestCase extends MapIterableTestCase
     public void getIfAbsentPutWith()
     {
         MutableMapIterable<Integer, String> map = this.newMapWithKeysValues(1, "1", 2, "2", 3, "3");
-        Assert.assertNull(map.get(4));
-        Assert.assertEquals("4", map.getIfAbsentPutWith(4, String::valueOf, 4));
-        Assert.assertEquals("3", map.getIfAbsentPutWith(3, String::valueOf, 3));
+        Assertions.assertNull(map.get(4));
+        Assertions.assertEquals("4", map.getIfAbsentPutWith(4, String::valueOf, 4));
+        Assertions.assertEquals("3", map.getIfAbsentPutWith(3, String::valueOf, 3));
         Verify.assertContainsKeyValue(4, "4", map);
     }
 
@@ -394,7 +394,7 @@ public abstract class MutableMapIterableTestCase extends MapIterableTestCase
         Verify.assertThrows(RuntimeException.class, () -> map.getIfAbsentPut(4, () -> {
             throw new RuntimeException();
         }));
-        Assert.assertEquals(UnifiedMap.newWithKeysValues(1, "1", 2, "2", 3, "3"), map);
+        Assertions.assertEquals(UnifiedMap.newWithKeysValues(1, "1", 2, "2", 3, "3"), map);
     }
 
     @Test
@@ -404,7 +404,7 @@ public abstract class MutableMapIterableTestCase extends MapIterableTestCase
         Verify.assertThrows(RuntimeException.class, () -> map.getIfAbsentPutWith(4, object -> {
             throw new RuntimeException();
         }, null));
-        Assert.assertEquals(UnifiedMap.newWithKeysValues(1, "1", 2, "2", 3, "3"), map);
+        Assertions.assertEquals(UnifiedMap.newWithKeysValues(1, "1", 2, "2", 3, "3"), map);
     }
 
     @Test
@@ -426,10 +426,10 @@ public abstract class MutableMapIterableTestCase extends MapIterableTestCase
     public void keysAndValues_toString()
     {
         MutableMapIterable<Integer, String> map = this.newMapWithKeysValues(1, "1", 2, "2");
-        Verify.assertContains(map.keySet().toString(), FastList.newListWith("[1, 2]", "[2, 1]"));
-        Verify.assertContains(map.values().toString(), FastList.newListWith("[1, 2]", "[2, 1]"));
-        Verify.assertContains(map.keysView().toString(), FastList.newListWith("[1, 2]", "[2, 1]"));
-        Verify.assertContains(map.valuesView().toString(), FastList.newListWith("[1, 2]", "[2, 1]"));
+        Verify.assertContains(FastList.newListWith("[1, 2]", "[2, 1]"), map.keySet().toString());
+        Verify.assertContains(FastList.newListWith("[1, 2]", "[2, 1]"), map.values().toString());
+        Verify.assertContains(FastList.newListWith("[1, 2]", "[2, 1]"), map.keysView().toString());
+        Verify.assertContains(FastList.newListWith("[1, 2]", "[2, 1]"), map.valuesView().toString());
     }
 
     @Test
@@ -441,30 +441,30 @@ public abstract class MutableMapIterableTestCase extends MapIterableTestCase
         MapIterable<Key, Integer> map1 = this.newMapWithKeysValues(key, 1, duplicateKey1, 2);
         Verify.assertSize(1, map1);
         Verify.assertContainsKeyValue(key, 2, map1);
-        Assert.assertSame(key, map1.keysView().getFirst());
+        Assertions.assertSame(key, map1.keysView().getFirst());
 
         Key duplicateKey2 = new Key("key");
         MapIterable<Key, Integer> map2 = this.newMapWithKeysValues(key, 1, duplicateKey1, 2, duplicateKey2, 3);
         Verify.assertSize(1, map2);
         Verify.assertContainsKeyValue(key, 3, map2);
-        Assert.assertSame(key, map1.keysView().getFirst());
+        Assertions.assertSame(key, map1.keysView().getFirst());
 
         Key duplicateKey3 = new Key("key");
         MapIterable<Key, Integer> map3 = this.newMapWithKeysValues(key, 1, new Key("not a dupe"), 2, duplicateKey3, 3);
         Verify.assertSize(2, map3);
         Verify.assertContainsAllKeyValues(map3, key, 3, new Key("not a dupe"), 2);
-        Assert.assertSame(key, map3.keysView().detect(key::equals));
+        Assertions.assertSame(key, map3.keysView().detect(key::equals));
 
         Key duplicateKey4 = new Key("key");
         MapIterable<Key, Integer> map4 = this.newMapWithKeysValues(key, 1, new Key("still not a dupe"), 2, new Key("me neither"), 3, duplicateKey4, 4);
         Verify.assertSize(3, map4);
         Verify.assertContainsAllKeyValues(map4, key, 4, new Key("still not a dupe"), 2, new Key("me neither"), 3);
-        Assert.assertSame(key, map4.keysView().detect(key::equals));
+        Assertions.assertSame(key, map4.keysView().detect(key::equals));
 
         MapIterable<Key, Integer> map5 = this.newMapWithKeysValues(key, 1, duplicateKey1, 2, duplicateKey3, 3, duplicateKey4, 4);
         Verify.assertSize(1, map5);
         Verify.assertContainsKeyValue(key, 4, map5);
-        Assert.assertSame(key, map5.keysView().getFirst());
+        Assertions.assertSame(key, map5.keysView().getFirst());
     }
 
     @Test
@@ -485,8 +485,8 @@ public abstract class MutableMapIterableTestCase extends MapIterableTestCase
     {
         MutableMapIterable<String, Integer> map = this.newMapWithKeyValue("A", 1);
 
-        Assert.assertEquals(Integer.valueOf(1), map.add(Tuples.pair("A", 3)));
-        Assert.assertNull(map.add(Tuples.pair("B", 2)));
+        Assertions.assertEquals(Integer.valueOf(1), map.add(Tuples.pair("A", 3)));
+        Assertions.assertNull(map.add(Tuples.pair("B", 2)));
         Verify.assertMapsEqual(UnifiedMap.newWithKeysValues("A", 3, "B", 2), map);
     }
 
@@ -496,7 +496,7 @@ public abstract class MutableMapIterableTestCase extends MapIterableTestCase
         MutableMapIterable<String, Integer> map = this.newMapWithKeyValue("A", 1);
 
         MutableMapIterable<String, Integer> mapWith = map.withKeyValue("B", 2);
-        Assert.assertSame(map, mapWith);
+        Assertions.assertSame(map, mapWith);
         Verify.assertMapsEqual(UnifiedMap.newWithKeysValues("A", 1, "B", 2), mapWith);
 
         MutableMapIterable<String, Integer> mapWith2 = mapWith.withKeyValue("A", 11);
@@ -509,7 +509,7 @@ public abstract class MutableMapIterableTestCase extends MapIterableTestCase
         MutableMapIterable<String, Integer> map = this.newMapWithKeysValues("A", 1, "B", 2);
         MutableMapIterable<String, Integer> mapWith = map.withAllKeyValues(
                 FastList.newListWith(Tuples.pair("B", 22), Tuples.pair("C", 3)));
-        Assert.assertSame(map, mapWith);
+        Assertions.assertSame(map, mapWith);
         Verify.assertMapsEqual(UnifiedMap.newWithKeysValues("A", 1, "B", 22, "C", 3), mapWith);
     }
 
@@ -518,7 +518,7 @@ public abstract class MutableMapIterableTestCase extends MapIterableTestCase
     {
         MutableMapIterable<String, Integer> map = this.newMapWithKeysValues("A", 1, "B", 2);
         MutableMapIterable<String, Integer> mapWith = map.withAllKeyValueArguments(Tuples.pair("B", 22), Tuples.pair("C", 3));
-        Assert.assertSame(map, mapWith);
+        Assertions.assertSame(map, mapWith);
         Verify.assertMapsEqual(UnifiedMap.newWithKeysValues("A", 1, "B", 22, "C", 3), mapWith);
     }
 
@@ -527,7 +527,7 @@ public abstract class MutableMapIterableTestCase extends MapIterableTestCase
     {
         MutableMapIterable<String, Integer> map = this.newMapWithKeysValues("A", 1, "B", 2);
         MutableMapIterable<String, Integer> mapWithout = map.withoutKey("B");
-        Assert.assertSame(map, mapWithout);
+        Assertions.assertSame(map, mapWithout);
         Verify.assertMapsEqual(UnifiedMap.newWithKeysValues("A", 1), mapWithout);
     }
 
@@ -536,7 +536,7 @@ public abstract class MutableMapIterableTestCase extends MapIterableTestCase
     {
         MutableMapIterable<String, Integer> map = this.newMapWithKeysValues("A", 1, "B", 2, "C", 3);
         MutableMapIterable<String, Integer> mapWithout = map.withoutAllKeys(FastList.newListWith("A", "C"));
-        Assert.assertSame(map, mapWithout);
+        Assertions.assertSame(map, mapWithout);
         Verify.assertMapsEqual(UnifiedMap.newWithKeysValues("B", 2), mapWithout);
     }
 
@@ -553,9 +553,9 @@ public abstract class MutableMapIterableTestCase extends MapIterableTestCase
                 null, "Test 1",
                 key, "Test 2");
 
-        Assert.assertFalse(mutableMapIterable.keySet().retainAll(FastList.newListWith(key, null)));
+        Assertions.assertFalse(mutableMapIterable.keySet().retainAll(FastList.newListWith(key, null)));
 
-        Assert.assertEquals(
+        Assertions.assertEquals(
                 this.newMapWithKeysValues(
                         null, "Test 1",
                         key, "Test 2"),
@@ -582,8 +582,8 @@ public abstract class MutableMapIterableTestCase extends MapIterableTestCase
     {
         MutableMapIterable<Integer, Integer> map = this.newMap();
         Iterate.forEach(Interval.oneTo(1000), each -> map.updateValue(each % 10, () -> 0, integer -> integer + 1));
-        Assert.assertEquals(Interval.zeroTo(9).toSet(), map.keySet());
-        Assert.assertEquals(FastList.newList(Collections.nCopies(10, 100)), FastList.newList(map.values()));
+        Assertions.assertEquals(Interval.zeroTo(9).toSet(), map.keySet());
+        Assertions.assertEquals(FastList.newList(Collections.nCopies(10, 100)), FastList.newList(map.values()));
     }
 
     @Test
@@ -592,11 +592,11 @@ public abstract class MutableMapIterableTestCase extends MapIterableTestCase
         MutableMapIterable<Integer, Integer> map = this.newMap();
         MutableList<Integer> list = Interval.oneTo(2000).toList().shuffleThis();
         Iterate.forEach(list, each -> map.updateValue(each % 1000, () -> 0, integer -> integer + 1));
-        Assert.assertEquals(Interval.zeroTo(999).toSet(), map.keySet());
-        Assert.assertEquals(
-                HashBag.newBag(map.values()).toStringOfItemToCount(),
+        Assertions.assertEquals(Interval.zeroTo(999).toSet(), map.keySet());
+        Assertions.assertEquals(
                 FastList.newList(Collections.nCopies(1000, 2)),
-                FastList.newList(map.values()));
+                FastList.newList(map.values()),
+                HashBag.newBag(map.values()).toStringOfItemToCount());
     }
 
     @Test
@@ -604,11 +604,11 @@ public abstract class MutableMapIterableTestCase extends MapIterableTestCase
     {
         MutableMapIterable<Integer, Integer> map = this.newMap();
         Iterate.forEach(Interval.oneTo(1000), each -> map.updateValueWith(each % 10, () -> 0, (integer, parameter) -> {
-            Assert.assertEquals("test", parameter);
+            Assertions.assertEquals("test", parameter);
             return integer + 1;
         }, "test"));
-        Assert.assertEquals(Interval.zeroTo(9).toSet(), map.keySet());
-        Assert.assertEquals(FastList.newList(Collections.nCopies(10, 100)), FastList.newList(map.values()));
+        Assertions.assertEquals(Interval.zeroTo(9).toSet(), map.keySet());
+        Assertions.assertEquals(FastList.newList(Collections.nCopies(10, 100)), FastList.newList(map.values()));
     }
 
     @Test
@@ -617,13 +617,13 @@ public abstract class MutableMapIterableTestCase extends MapIterableTestCase
         MutableMapIterable<Integer, Integer> map = this.newMap();
         MutableList<Integer> list = Interval.oneTo(2000).toList().shuffleThis();
         Iterate.forEach(list, each -> map.updateValueWith(each % 1000, () -> 0, (integer, parameter) -> {
-            Assert.assertEquals("test", parameter);
+            Assertions.assertEquals("test", parameter);
             return integer + 1;
         }, "test"));
-        Assert.assertEquals(Interval.zeroTo(999).toSet(), map.keySet());
-        Assert.assertEquals(
-                HashBag.newBag(map.values()).toStringOfItemToCount(),
+        Assertions.assertEquals(Interval.zeroTo(999).toSet(), map.keySet());
+        Assertions.assertEquals(
                 FastList.newList(Collections.nCopies(1000, 2)),
-                FastList.newList(map.values()));
+                FastList.newList(map.values()),
+                HashBag.newBag(map.values()).toStringOfItemToCount());
     }
 }
