@@ -43,11 +43,12 @@ import com.gs.collections.impl.list.fixed.ArrayAdapter;
 import com.gs.collections.impl.list.mutable.FastList;
 import com.gs.collections.impl.test.Verify;
 import com.gs.collections.impl.utility.Iterate;
-import org.junit.Assert;
-import org.junit.Test;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.Test;
 
 import static com.gs.collections.impl.factory.Iterables.iSet;
 import static com.gs.collections.impl.factory.Iterables.mList;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 
 /**
  * JUnit test for {@link AbstractMutableSet}.
@@ -92,11 +93,11 @@ public abstract class AbstractMutableSetTestCase extends AbstractCollectionTestC
         UnifiedSet<Integer> expected = UnifiedSet.newSetWith(1, 2, 3);
         MutableSet<Integer> collection = this.newWith();
 
-        Assert.assertTrue(collection.addAll(FastList.newListWith(1, 2, 3)));
-        Assert.assertEquals(expected, collection);
+        Assertions.assertTrue(collection.addAll(FastList.newListWith(1, 2, 3)));
+        Assertions.assertEquals(expected, collection);
 
-        Assert.assertFalse(collection.addAll(FastList.newListWith(1, 2, 3)));
-        Assert.assertEquals(expected, collection);
+        Assertions.assertFalse(collection.addAll(FastList.newListWith(1, 2, 3)));
+        Assertions.assertEquals(expected, collection);
     }
 
     @Override
@@ -108,11 +109,11 @@ public abstract class AbstractMutableSetTestCase extends AbstractCollectionTestC
         UnifiedSet<Integer> expected = UnifiedSet.newSetWith(1, 2, 3);
         MutableSet<Integer> collection = this.newWith();
 
-        Assert.assertTrue(collection.addAllIterable(FastList.newListWith(1, 2, 3)));
-        Assert.assertEquals(expected, collection);
+        Assertions.assertTrue(collection.addAllIterable(FastList.newListWith(1, 2, 3)));
+        Assertions.assertEquals(expected, collection);
 
-        Assert.assertFalse(collection.addAllIterable(FastList.newListWith(1, 2, 3)));
-        Assert.assertEquals(expected, collection);
+        Assertions.assertFalse(collection.addAllIterable(FastList.newListWith(1, 2, 3)));
+        Assertions.assertEquals(expected, collection);
     }
 
     @Test
@@ -121,10 +122,10 @@ public abstract class AbstractMutableSetTestCase extends AbstractCollectionTestC
         MutableSet<String> set = this.newWith("1", "2", "3", "4");
         MutableSet<String> union = set.union(UnifiedSet.newSetWith("a", "b", "c", "1"));
         Verify.assertSize(set.size() + 3, union);
-        Assert.assertTrue(union.containsAllIterable(Interval.oneTo(set.size()).collect(String::valueOf)));
+        Assertions.assertTrue(union.containsAllIterable(Interval.oneTo(set.size()).collect(String::valueOf)));
         Verify.assertContainsAll(union, "a", "b", "c");
 
-        Assert.assertEquals(set, set.union(UnifiedSet.newSetWith("1")));
+        Assertions.assertEquals(set, set.union(UnifiedSet.newSetWith("1")));
     }
 
     @Test
@@ -133,10 +134,10 @@ public abstract class AbstractMutableSetTestCase extends AbstractCollectionTestC
         MutableSet<String> set = this.newWith("1", "2", "3", "4");
         MutableSet<String> union = set.unionInto(UnifiedSet.newSetWith("a", "b", "c", "1"), UnifiedSet.<String>newSet());
         Verify.assertSize(set.size() + 3, union);
-        Assert.assertTrue(union.containsAllIterable(Interval.oneTo(set.size()).collect(String::valueOf)));
+        Assertions.assertTrue(union.containsAllIterable(Interval.oneTo(set.size()).collect(String::valueOf)));
         Verify.assertContainsAll(union, "a", "b", "c");
 
-        Assert.assertEquals(set, set.unionInto(UnifiedSet.newSetWith("1"), UnifiedSet.<String>newSet()));
+        Assertions.assertEquals(set, set.unionInto(UnifiedSet.newSetWith("1"), UnifiedSet.<String>newSet()));
     }
 
     @Test
@@ -145,7 +146,7 @@ public abstract class AbstractMutableSetTestCase extends AbstractCollectionTestC
         MutableSet<String> set = this.newWith("1", "2", "3", "4");
         MutableSet<String> intersect = set.intersect(UnifiedSet.newSetWith("a", "b", "c", "1"));
         Verify.assertSize(1, intersect);
-        Assert.assertEquals(UnifiedSet.newSetWith("1"), intersect);
+        Assertions.assertEquals(UnifiedSet.newSetWith("1"), intersect);
 
         Verify.assertEmpty(set.intersect(UnifiedSet.newSetWith("not present")));
     }
@@ -156,7 +157,7 @@ public abstract class AbstractMutableSetTestCase extends AbstractCollectionTestC
         MutableSet<String> set = this.newWith("1", "2", "3", "4");
         MutableSet<String> intersect = set.intersectInto(UnifiedSet.newSetWith("a", "b", "c", "1"), UnifiedSet.<String>newSet());
         Verify.assertSize(1, intersect);
-        Assert.assertEquals(UnifiedSet.newSetWith("1"), intersect);
+        Assertions.assertEquals(UnifiedSet.newSetWith("1"), intersect);
 
         Verify.assertEmpty(set.intersectInto(UnifiedSet.newSetWith("not present"), UnifiedSet.<String>newSet()));
     }
@@ -166,8 +167,8 @@ public abstract class AbstractMutableSetTestCase extends AbstractCollectionTestC
     {
         MutableSet<String> set = this.newWith("1", "2", "3", "4");
         MutableSet<String> difference = set.difference(UnifiedSet.newSetWith("2", "3", "4", "not present"));
-        Assert.assertEquals(UnifiedSet.newSetWith("1"), difference);
-        Assert.assertEquals(set, set.difference(UnifiedSet.newSetWith("not present")));
+        Assertions.assertEquals(UnifiedSet.newSetWith("1"), difference);
+        Assertions.assertEquals(set, set.difference(UnifiedSet.newSetWith("not present")));
     }
 
     @Test
@@ -175,8 +176,8 @@ public abstract class AbstractMutableSetTestCase extends AbstractCollectionTestC
     {
         MutableSet<String> set = this.newWith("1", "2", "3", "4");
         MutableSet<String> difference = set.differenceInto(UnifiedSet.newSetWith("2", "3", "4", "not present"), UnifiedSet.<String>newSet());
-        Assert.assertEquals(UnifiedSet.newSetWith("1"), difference);
-        Assert.assertEquals(set, set.differenceInto(UnifiedSet.newSetWith("not present"), UnifiedSet.<String>newSet()));
+        Assertions.assertEquals(UnifiedSet.newSetWith("1"), difference);
+        Assertions.assertEquals(set, set.differenceInto(UnifiedSet.newSetWith("not present"), UnifiedSet.<String>newSet()));
     }
 
     @Test
@@ -184,11 +185,11 @@ public abstract class AbstractMutableSetTestCase extends AbstractCollectionTestC
     {
         MutableSet<String> set = this.newWith("1", "2", "3", "4");
         MutableSet<String> difference = set.symmetricDifference(UnifiedSet.newSetWith("2", "3", "4", "5", "not present"));
-        Verify.assertContains("1", difference);
-        Assert.assertTrue(difference.containsAllIterable(Interval.fromTo(set.size() + 1, 5).collect(String::valueOf)));
+        Verify.assertContains(difference, "1");
+        Assertions.assertTrue(difference.containsAllIterable(Interval.fromTo(set.size() + 1, 5).collect(String::valueOf)));
         for (int i = 2; i <= set.size(); i++)
         {
-            Verify.assertNotContains(String.valueOf(i), difference);
+            Verify.assertNotContains(difference, String.valueOf(i));
         }
 
         Verify.assertSize(set.size() + 1, set.symmetricDifference(UnifiedSet.newSetWith("not present")));
@@ -201,11 +202,11 @@ public abstract class AbstractMutableSetTestCase extends AbstractCollectionTestC
         MutableSet<String> difference = set.symmetricDifferenceInto(
                 UnifiedSet.newSetWith("2", "3", "4", "5", "not present"),
                 UnifiedSet.<String>newSet());
-        Verify.assertContains("1", difference);
-        Assert.assertTrue(difference.containsAllIterable(Interval.fromTo(set.size() + 1, 5).collect(String::valueOf)));
+        Verify.assertContains(difference, "1");
+        Assertions.assertTrue(difference.containsAllIterable(Interval.fromTo(set.size() + 1, 5).collect(String::valueOf)));
         for (int i = 2; i <= set.size(); i++)
         {
-            Verify.assertNotContains(String.valueOf(i), difference);
+            Verify.assertNotContains(difference, String.valueOf(i));
         }
 
         Verify.assertSize(
@@ -217,15 +218,15 @@ public abstract class AbstractMutableSetTestCase extends AbstractCollectionTestC
     public void isSubsetOf()
     {
         MutableSet<String> set = this.newWith("1", "2", "3", "4");
-        Assert.assertTrue(set.isSubsetOf(UnifiedSet.newSetWith("1", "2", "3", "4", "5")));
+        Assertions.assertTrue(set.isSubsetOf(UnifiedSet.newSetWith("1", "2", "3", "4", "5")));
     }
 
     @Test
     public void isProperSubsetOf()
     {
         MutableSet<String> set = this.newWith("1", "2", "3", "4");
-        Assert.assertTrue(set.isProperSubsetOf(UnifiedSet.newSetWith("1", "2", "3", "4", "5")));
-        Assert.assertFalse(set.isProperSubsetOf(set));
+        Assertions.assertTrue(set.isProperSubsetOf(UnifiedSet.newSetWith("1", "2", "3", "4", "5")));
+        Assertions.assertFalse(set.isProperSubsetOf(set));
     }
 
     @Test
@@ -244,7 +245,7 @@ public abstract class AbstractMutableSetTestCase extends AbstractCollectionTestC
         MutableSet<String> set = this.newWith("1", "2", "3", "4");
         LazyIterable<Pair<String, String>> cartesianProduct = set.cartesianProduct(UnifiedSet.newSetWith("One", "Two"));
         Verify.assertIterableSize(set.size() * 2, cartesianProduct);
-        Assert.assertEquals(
+        Assertions.assertEquals(
                 set,
                 cartesianProduct
                         .select(Predicates.attributeEqual((Function<Pair<?, String>, String>) Pair::getTwo, "One"))
@@ -286,16 +287,16 @@ public abstract class AbstractMutableSetTestCase extends AbstractCollectionTestC
     {
         super.getFirst();
 
-        Assert.assertNotNull(this.newWith(1, 2, 3).getFirst());
-        Assert.assertNull(this.newWith().getFirst());
+        Assertions.assertNotNull(this.newWith(1, 2, 3).getFirst());
+        Assertions.assertNull(this.newWith().getFirst());
     }
 
     @Override
     @Test
     public void getLast()
     {
-        Assert.assertNotNull(this.newWith(1, 2, 3).getLast());
-        Assert.assertNull(this.newWith().getLast());
+        Assertions.assertNotNull(this.newWith(1, 2, 3).getLast());
+        Assertions.assertNull(this.newWith().getLast());
     }
 
     @Test
@@ -307,7 +308,7 @@ public abstract class AbstractMutableSetTestCase extends AbstractCollectionTestC
         Integer[] result = set.toArray(dest);
         Verify.assertSize(4, result);
         Arrays.sort(result);
-        Assert.assertArrayEquals(new Integer[]{1, 2, 3, 4}, result);
+        Assertions.assertArrayEquals(new Integer[]{1, 2, 3, 4}, result);
     }
 
     @Test
@@ -315,7 +316,7 @@ public abstract class AbstractMutableSetTestCase extends AbstractCollectionTestC
     {
         MutableSet<Integer> set = this.newWith(1, 2);
         String s = set.toString();
-        Assert.assertTrue("[1, 2]".equals(s) || "[2, 1]".equals(s));
+        Assertions.assertTrue("[1, 2]".equals(s) || "[2, 1]".equals(s));
     }
 
     @Test
@@ -323,7 +324,7 @@ public abstract class AbstractMutableSetTestCase extends AbstractCollectionTestC
     {
         MutableSet<String> set = this.newWith();
         MutableSet<String> clone = set.clone();
-        Assert.assertNotSame(clone, set);
+        Assertions.assertNotSame(clone, set);
         Verify.assertEqualsAndHashCode(clone, set);
     }
 
@@ -353,8 +354,8 @@ public abstract class AbstractMutableSetTestCase extends AbstractCollectionTestC
 
     private void assertIsEmpty(boolean isEmpty, MutableSet<?> set)
     {
-        Assert.assertEquals(isEmpty, set.isEmpty());
-        Assert.assertEquals(!isEmpty, set.notEmpty());
+        Assertions.assertEquals(isEmpty, set.isEmpty());
+        Assertions.assertEquals(!isEmpty, set.notEmpty());
     }
 
     @Test
@@ -366,10 +367,10 @@ public abstract class AbstractMutableSetTestCase extends AbstractCollectionTestC
         set.removeAll(collisions);
         for (Integer integer : COLLISIONS)
         {
-            Assert.assertTrue(set.add(new IntegerWithCast(integer)));
-            Assert.assertFalse(set.add(new IntegerWithCast(integer)));
+            Assertions.assertTrue(set.add(new IntegerWithCast(integer)));
+            Assertions.assertFalse(set.add(new IntegerWithCast(integer)));
         }
-        Assert.assertEquals(collisions.toSet(), set);
+        Assertions.assertEquals(collisions.toSet(), set);
     }
 
     @Override
@@ -382,45 +383,45 @@ public abstract class AbstractMutableSetTestCase extends AbstractCollectionTestC
         MutableList<IntegerWithCast> collisions = COLLISIONS.collect(IntegerWithCast::new);
         set.addAll(collisions);
         collisions.reverseForEach(each -> {
-            Assert.assertFalse(set.remove(null));
-            Assert.assertTrue(set.remove(each));
-            Assert.assertFalse(set.remove(each));
-            Assert.assertFalse(set.remove(null));
-            Assert.assertFalse(set.remove(new IntegerWithCast(COLLISION_10)));
+            Assertions.assertFalse(set.remove(null));
+            Assertions.assertTrue(set.remove(each));
+            Assertions.assertFalse(set.remove(each));
+            Assertions.assertFalse(set.remove(null));
+            Assertions.assertFalse(set.remove(new IntegerWithCast(COLLISION_10)));
         });
 
-        Assert.assertEquals(UnifiedSet.<IntegerWithCast>newSet(), set);
+        Assertions.assertEquals(UnifiedSet.<IntegerWithCast>newSet(), set);
 
         collisions.forEach(Procedures.cast(each -> {
             MutableSet<IntegerWithCast> set2 = this.newWith();
             set2.addAll(collisions);
 
-            Assert.assertFalse(set2.remove(null));
-            Assert.assertTrue(set2.remove(each));
-            Assert.assertFalse(set2.remove(each));
-            Assert.assertFalse(set2.remove(null));
-            Assert.assertFalse(set2.remove(new IntegerWithCast(COLLISION_10)));
+            Assertions.assertFalse(set2.remove(null));
+            Assertions.assertTrue(set2.remove(each));
+            Assertions.assertFalse(set2.remove(each));
+            Assertions.assertFalse(set2.remove(null));
+            Assertions.assertFalse(set2.remove(new IntegerWithCast(COLLISION_10)));
         }));
 
         // remove the second-to-last item in a fully populated single chain to cause the last item to move
         MutableSet<Integer> set3 = this.newWith(COLLISION_1, COLLISION_2, COLLISION_3, COLLISION_4);
-        Assert.assertTrue(set3.remove(COLLISION_3));
-        Assert.assertEquals(UnifiedSet.newSetWith(COLLISION_1, COLLISION_2, COLLISION_4), set3);
+        Assertions.assertTrue(set3.remove(COLLISION_3));
+        Assertions.assertEquals(UnifiedSet.newSetWith(COLLISION_1, COLLISION_2, COLLISION_4), set3);
 
-        Assert.assertTrue(set3.remove(COLLISION_2));
-        Assert.assertEquals(UnifiedSet.newSetWith(COLLISION_1, COLLISION_4), set3);
+        Assertions.assertTrue(set3.remove(COLLISION_2));
+        Assertions.assertEquals(UnifiedSet.newSetWith(COLLISION_1, COLLISION_4), set3);
 
         // search a chain for a non-existent element
         MutableSet<Integer> chain = this.newWith(COLLISION_1, COLLISION_2, COLLISION_3, COLLISION_4);
-        Assert.assertFalse(chain.remove(COLLISION_5));
+        Assertions.assertFalse(chain.remove(COLLISION_5));
 
         // search a deep chain for a non-existent element
         MutableSet<Integer> deepChain = this.newWith(COLLISION_1, COLLISION_2, COLLISION_3, COLLISION_4, COLLISION_5, COLLISION_6, COLLISION_7);
-        Assert.assertFalse(deepChain.remove(COLLISION_8));
+        Assertions.assertFalse(deepChain.remove(COLLISION_8));
 
         // search for a non-existent element
         MutableSet<Integer> empty = this.newWith();
-        Assert.assertFalse(empty.remove(COLLISION_1));
+        Assertions.assertFalse(empty.remove(COLLISION_1));
     }
 
     @Override
@@ -437,24 +438,24 @@ public abstract class AbstractMutableSetTestCase extends AbstractCollectionTestC
         {
             MutableList<Integer> list = MORE_COLLISIONS.subList(0, i);
             MutableSet<Integer> set = this.<Integer>newWith().withAll(list);
-            Assert.assertFalse(set.retainAll(collisions));
-            Assert.assertEquals(list.toSet(), set);
+            Assertions.assertFalse(set.retainAll(collisions));
+            Assertions.assertEquals(list.toSet(), set);
         }
 
         for (Integer item : MORE_COLLISIONS)
         {
             MutableSet<Integer> integers = this.<Integer>newWith().withAll(MORE_COLLISIONS);
             @SuppressWarnings("BoxingBoxedValue")
-            Integer keyCopy = new Integer(item);
-            Assert.assertTrue(integers.retainAll(mList(keyCopy)));
-            Assert.assertEquals(iSet(keyCopy), integers);
-            Assert.assertNotSame(keyCopy, Iterate.getOnly(integers));
+            Integer keyCopy = Integer.valueOf(item);
+            Assertions.assertTrue(integers.retainAll(mList(keyCopy)));
+            Assertions.assertEquals(iSet(keyCopy), integers);
+            Assertions.assertNotSame(keyCopy, Iterate.getOnly(integers));
         }
 
         // retain all on a bucket with a single element
         MutableSet<Integer> singleCollisionBucket = this.newWith(COLLISION_1, COLLISION_2);
         singleCollisionBucket.remove(COLLISION_2);
-        Assert.assertTrue(singleCollisionBucket.retainAll(FastList.newListWith(COLLISION_2)));
+        Assertions.assertTrue(singleCollisionBucket.retainAll(FastList.newListWith(COLLISION_2)));
     }
 
     @Override
@@ -464,12 +465,12 @@ public abstract class AbstractMutableSetTestCase extends AbstractCollectionTestC
         super.equalsAndHashCode();
 
         UnifiedSet<Integer> expected = UnifiedSet.newSetWith(COLLISION_1, COLLISION_2, COLLISION_3, COLLISION_4);
-        Assert.assertNotEquals(expected, this.newWith(COLLISION_2, COLLISION_3, COLLISION_4, COLLISION_5));
-        Assert.assertNotEquals(expected, this.newWith(COLLISION_1, COLLISION_3, COLLISION_4, COLLISION_5));
-        Assert.assertNotEquals(expected, this.newWith(COLLISION_1, COLLISION_2, COLLISION_4, COLLISION_5));
-        Assert.assertNotEquals(expected, this.newWith(COLLISION_1, COLLISION_2, COLLISION_3, COLLISION_5));
+        Assertions.assertNotEquals(expected, this.newWith(COLLISION_2, COLLISION_3, COLLISION_4, COLLISION_5));
+        Assertions.assertNotEquals(expected, this.newWith(COLLISION_1, COLLISION_3, COLLISION_4, COLLISION_5));
+        Assertions.assertNotEquals(expected, this.newWith(COLLISION_1, COLLISION_2, COLLISION_4, COLLISION_5));
+        Assertions.assertNotEquals(expected, this.newWith(COLLISION_1, COLLISION_2, COLLISION_3, COLLISION_5));
 
-        Assert.assertEquals(expected, this.newWith(COLLISION_1, COLLISION_2, COLLISION_3, COLLISION_4));
+        Assertions.assertEquals(expected, this.newWith(COLLISION_1, COLLISION_2, COLLISION_3, COLLISION_4));
     }
 
     @Override
@@ -484,16 +485,16 @@ public abstract class AbstractMutableSetTestCase extends AbstractCollectionTestC
             MutableList<Integer> tapResult = Lists.mutable.of();
             MutableSet<Integer> set = this.newWith();
             set.addAll(MORE_COLLISIONS.subList(0, i));
-            Assert.assertSame(set, set.tap(tapResult::add));
-            Assert.assertEquals(set.toList(), tapResult);
+            Assertions.assertSame(set, set.tap(tapResult::add));
+            Assertions.assertEquals(set.toList(), tapResult);
         }
 
         // test iterating on a bucket with only one element
         MutableSet<Integer> set = this.newWith(COLLISION_1, COLLISION_2);
         set.remove(COLLISION_2);
         Counter counter = new Counter();
-        Assert.assertSame(set, set.tap(x -> counter.increment()));
-        Assert.assertEquals(1, counter.getCount());
+        Assertions.assertSame(set, set.tap(x -> counter.increment()));
+        Assertions.assertEquals(1, counter.getCount());
     }
 
     @Override
@@ -509,7 +510,7 @@ public abstract class AbstractMutableSetTestCase extends AbstractCollectionTestC
             set.addAll(MORE_COLLISIONS.subList(0, i));
             MutableSet<Integer> result = UnifiedSet.newSet();
             set.forEach(CollectionAddProcedure.on(result));
-            Assert.assertEquals(set, result);
+            Assertions.assertEquals(set, result);
         }
 
         // test iterating on a bucket with only one element
@@ -517,7 +518,7 @@ public abstract class AbstractMutableSetTestCase extends AbstractCollectionTestC
         set.remove(COLLISION_2);
         Counter counter = new Counter();
         set.forEach(Procedures.cast(each -> counter.increment()));
-        Assert.assertEquals(1, counter.getCount());
+        Assertions.assertEquals(1, counter.getCount());
     }
 
     @Override
@@ -535,10 +536,10 @@ public abstract class AbstractMutableSetTestCase extends AbstractCollectionTestC
             MutableSet<Integer> result = UnifiedSet.newSet();
 
             set.forEachWith((argument1, argument2) -> {
-                Assert.assertSame(sentinel, argument2);
+                Assertions.assertSame(sentinel, argument2);
                 result.add(argument1);
             }, sentinel);
-            Assert.assertEquals(set, result);
+            Assertions.assertEquals(set, result);
         }
 
         // test iterating on a bucket with only one element
@@ -546,7 +547,7 @@ public abstract class AbstractMutableSetTestCase extends AbstractCollectionTestC
         set.remove(COLLISION_2);
         Counter counter = new Counter();
         set.forEachWith((argument1, argument2) -> argument2.increment(), counter);
-        Assert.assertEquals(1, counter.getCount());
+        Assertions.assertEquals(1, counter.getCount());
     }
 
     @Override
@@ -566,8 +567,8 @@ public abstract class AbstractMutableSetTestCase extends AbstractCollectionTestC
                 result.add(each);
                 indexes.add(index);
             });
-            Assert.assertEquals(set, result);
-            Assert.assertEquals(Interval.zeroTo(i - 1), indexes);
+            Assertions.assertEquals(set, result);
+            Assertions.assertEquals(Interval.zeroTo(i - 1), indexes);
         }
 
         // test iterating on a bucket with only one element
@@ -575,7 +576,7 @@ public abstract class AbstractMutableSetTestCase extends AbstractCollectionTestC
         set.remove(COLLISION_2);
         Counter counter = new Counter();
         set.forEachWithIndex((each, index) -> counter.increment());
-        Assert.assertEquals(1, counter.getCount());
+        Assertions.assertEquals(1, counter.getCount());
     }
 
     @Override
@@ -589,15 +590,15 @@ public abstract class AbstractMutableSetTestCase extends AbstractCollectionTestC
         {
             MutableSet<Integer> set = this.newWith();
             set.addAll(MORE_COLLISIONS.subList(0, i));
-            Assert.assertTrue(set.anySatisfy(MORE_COLLISIONS.subList(0, i).getLast()::equals));
-            Assert.assertFalse(set.anySatisfy(Predicates.greaterThan(MORE_COLLISIONS.subList(0, i).getLast())));
+            Assertions.assertTrue(set.anySatisfy(MORE_COLLISIONS.subList(0, i).getLast()::equals));
+            Assertions.assertFalse(set.anySatisfy(Predicates.greaterThan(MORE_COLLISIONS.subList(0, i).getLast())));
         }
 
         // test anySatisfy on a bucket with only one element
         MutableSet<Integer> set = this.newWith(COLLISION_1, COLLISION_2);
         set.remove(COLLISION_2);
-        Assert.assertTrue(set.anySatisfy(COLLISION_1::equals));
-        Assert.assertFalse(set.anySatisfy(COLLISION_2::equals));
+        Assertions.assertTrue(set.anySatisfy(COLLISION_1::equals));
+        Assertions.assertFalse(set.anySatisfy(COLLISION_2::equals));
 
         // Rehashing Case A: a bucket with only one entry and a low capacity forcing a rehash, where the triggering element goes in the bucket
         // set up a chained bucket
@@ -610,7 +611,7 @@ public abstract class AbstractMutableSetTestCase extends AbstractCollectionTestC
 
         // add the colliding value back and force the rehash
         caseA.add(COLLISION_2);
-        Assert.assertTrue(caseA.anySatisfy(COLLISION_2::equals));
+        Assertions.assertTrue(caseA.anySatisfy(COLLISION_2::equals));
     }
 
     @Override
@@ -624,15 +625,15 @@ public abstract class AbstractMutableSetTestCase extends AbstractCollectionTestC
         {
             MutableSet<Integer> set = this.newWith();
             set.addAll(MORE_COLLISIONS.subList(0, i));
-            Assert.assertTrue(set.anySatisfyWith(Object::equals, MORE_COLLISIONS.subList(0, i).getLast()));
-            Assert.assertFalse(set.anySatisfyWith(Predicates2.greaterThan(), MORE_COLLISIONS.subList(0, i).getLast()));
+            Assertions.assertTrue(set.anySatisfyWith(Object::equals, MORE_COLLISIONS.subList(0, i).getLast()));
+            Assertions.assertFalse(set.anySatisfyWith(Predicates2.greaterThan(), MORE_COLLISIONS.subList(0, i).getLast()));
         }
 
         // test anySatisfyWith on a bucket with only one element
         MutableSet<Integer> set = this.newWith(COLLISION_1, COLLISION_2);
         set.remove(COLLISION_2);
-        Assert.assertTrue(set.anySatisfyWith(Object::equals, COLLISION_1));
-        Assert.assertFalse(set.anySatisfyWith(Object::equals, COLLISION_2));
+        Assertions.assertTrue(set.anySatisfyWith(Object::equals, COLLISION_1));
+        Assertions.assertFalse(set.anySatisfyWith(Object::equals, COLLISION_2));
 
         // Rehashing Case A: a bucket with only one entry and a low capacity forcing a rehash, where the triggering element goes in the bucket
         // set up a chained bucket
@@ -645,7 +646,7 @@ public abstract class AbstractMutableSetTestCase extends AbstractCollectionTestC
 
         // add the colliding value back and force the rehash
         caseA.add(COLLISION_2);
-        Assert.assertTrue(caseA.anySatisfyWith(Object::equals, COLLISION_2));
+        Assertions.assertTrue(caseA.anySatisfyWith(Object::equals, COLLISION_2));
     }
 
     @Override
@@ -659,15 +660,15 @@ public abstract class AbstractMutableSetTestCase extends AbstractCollectionTestC
         {
             MutableSet<Integer> set = this.newWith();
             set.addAll(MORE_COLLISIONS.subList(0, i));
-            Assert.assertTrue(set.allSatisfy(Predicates.greaterThanOrEqualTo(MORE_COLLISIONS.subList(0, i).getFirst())));
-            Assert.assertFalse(set.allSatisfy(Predicates.lessThan(MORE_COLLISIONS.subList(0, i).get(i - 1))));
+            Assertions.assertTrue(set.allSatisfy(Predicates.greaterThanOrEqualTo(MORE_COLLISIONS.subList(0, i).getFirst())));
+            Assertions.assertFalse(set.allSatisfy(Predicates.lessThan(MORE_COLLISIONS.subList(0, i).get(i - 1))));
         }
 
         // test allSatisfy on a bucket with only one element
         MutableSet<Integer> set = this.newWith(COLLISION_1, COLLISION_2);
         set.remove(COLLISION_2);
-        Assert.assertTrue(set.allSatisfy(COLLISION_1::equals));
-        Assert.assertFalse(set.allSatisfy(COLLISION_2::equals));
+        Assertions.assertTrue(set.allSatisfy(COLLISION_1::equals));
+        Assertions.assertFalse(set.allSatisfy(COLLISION_2::equals));
 
         // Rehashing Case A: a bucket with only one entry and a low capacity forcing a rehash, where the triggering element goes in the bucket
         // set up a chained bucket
@@ -680,7 +681,7 @@ public abstract class AbstractMutableSetTestCase extends AbstractCollectionTestC
 
         // add the colliding value back and force the rehash
         caseA.add(COLLISION_2);
-        Assert.assertTrue(caseA.allSatisfy(Predicates.lessThanOrEqualTo(COLLISION_2)));
+        Assertions.assertTrue(caseA.allSatisfy(Predicates.lessThanOrEqualTo(COLLISION_2)));
     }
 
     @Override
@@ -694,15 +695,15 @@ public abstract class AbstractMutableSetTestCase extends AbstractCollectionTestC
         {
             MutableSet<Integer> set = this.newWith();
             set.addAll(MORE_COLLISIONS.subList(0, i));
-            Assert.assertTrue(set.allSatisfyWith(Predicates2.greaterThanOrEqualTo(), MORE_COLLISIONS.subList(0, i).getFirst()));
-            Assert.assertFalse(set.allSatisfyWith(Predicates2.lessThan(), MORE_COLLISIONS.subList(0, i).get(i - 1)));
+            Assertions.assertTrue(set.allSatisfyWith(Predicates2.greaterThanOrEqualTo(), MORE_COLLISIONS.subList(0, i).getFirst()));
+            Assertions.assertFalse(set.allSatisfyWith(Predicates2.lessThan(), MORE_COLLISIONS.subList(0, i).get(i - 1)));
         }
 
         // test allSatisfyWith on a bucket with only one element
         MutableSet<Integer> set = this.newWith(COLLISION_1, COLLISION_2);
         set.remove(COLLISION_2);
-        Assert.assertTrue(set.allSatisfyWith(Object::equals, COLLISION_1));
-        Assert.assertFalse(set.allSatisfyWith(Object::equals, COLLISION_2));
+        Assertions.assertTrue(set.allSatisfyWith(Object::equals, COLLISION_1));
+        Assertions.assertFalse(set.allSatisfyWith(Object::equals, COLLISION_2));
 
         // Rehashing Case A: a bucket with only one entry and a low capacity forcing a rehash, where the triggering element goes in the bucket
         // set up a chained bucket
@@ -715,7 +716,7 @@ public abstract class AbstractMutableSetTestCase extends AbstractCollectionTestC
 
         // add the colliding value back and force the rehash
         caseA.add(COLLISION_2);
-        Assert.assertTrue(caseA.allSatisfyWith(Predicates2.lessThanOrEqualTo(), COLLISION_2));
+        Assertions.assertTrue(caseA.allSatisfyWith(Predicates2.lessThanOrEqualTo(), COLLISION_2));
     }
 
     @Override
@@ -729,15 +730,15 @@ public abstract class AbstractMutableSetTestCase extends AbstractCollectionTestC
         {
             MutableSet<Integer> set = this.newWith();
             set.addAll(MORE_COLLISIONS.subList(0, i));
-            Assert.assertTrue(set.noneSatisfy(Predicates.lessThan(MORE_COLLISIONS.subList(0, i).getFirst())));
-            Assert.assertFalse(set.noneSatisfy(Predicates.greaterThanOrEqualTo(MORE_COLLISIONS.subList(0, i).get(i - 1))));
+            Assertions.assertTrue(set.noneSatisfy(Predicates.lessThan(MORE_COLLISIONS.subList(0, i).getFirst())));
+            Assertions.assertFalse(set.noneSatisfy(Predicates.greaterThanOrEqualTo(MORE_COLLISIONS.subList(0, i).get(i - 1))));
         }
 
         // test noneSatisfy on a bucket with only one element
         MutableSet<Integer> set = this.newWith(COLLISION_1, COLLISION_2);
         set.remove(COLLISION_2);
-        Assert.assertFalse(set.noneSatisfy(COLLISION_1::equals));
-        Assert.assertTrue(set.noneSatisfy(COLLISION_2::equals));
+        Assertions.assertFalse(set.noneSatisfy(COLLISION_1::equals));
+        Assertions.assertTrue(set.noneSatisfy(COLLISION_2::equals));
 
         // Rehashing Case A: a bucket with only one entry and a low capacity forcing a rehash, where the triggering element goes in the bucket
         // set up a chained bucket
@@ -750,7 +751,7 @@ public abstract class AbstractMutableSetTestCase extends AbstractCollectionTestC
 
         // add the colliding value back and force the rehash
         caseA.add(COLLISION_2);
-        Assert.assertTrue(caseA.noneSatisfy(Predicates.greaterThan(COLLISION_2)));
+        Assertions.assertTrue(caseA.noneSatisfy(Predicates.greaterThan(COLLISION_2)));
     }
 
     @Override
@@ -764,15 +765,15 @@ public abstract class AbstractMutableSetTestCase extends AbstractCollectionTestC
         {
             MutableSet<Integer> set = this.newWith();
             set.addAll(MORE_COLLISIONS.subList(0, i));
-            Assert.assertTrue(set.noneSatisfyWith(Predicates2.lessThan(), MORE_COLLISIONS.subList(0, i).getFirst()));
-            Assert.assertFalse(set.noneSatisfyWith(Predicates2.greaterThanOrEqualTo(), MORE_COLLISIONS.subList(0, i).get(i - 1)));
+            Assertions.assertTrue(set.noneSatisfyWith(Predicates2.lessThan(), MORE_COLLISIONS.subList(0, i).getFirst()));
+            Assertions.assertFalse(set.noneSatisfyWith(Predicates2.greaterThanOrEqualTo(), MORE_COLLISIONS.subList(0, i).get(i - 1)));
         }
 
         // test noneSatisfyWith on a bucket with only one element
         MutableSet<Integer> set = this.newWith(COLLISION_1, COLLISION_2);
         set.remove(COLLISION_2);
-        Assert.assertFalse(set.noneSatisfyWith(Object::equals, COLLISION_1));
-        Assert.assertTrue(set.noneSatisfyWith(Object::equals, COLLISION_2));
+        Assertions.assertFalse(set.noneSatisfyWith(Object::equals, COLLISION_1));
+        Assertions.assertTrue(set.noneSatisfyWith(Object::equals, COLLISION_2));
 
         // Rehashing Case A: a bucket with only one entry and a low capacity forcing a rehash, where the triggering element goes in the bucket
         // set up a chained bucket
@@ -785,7 +786,7 @@ public abstract class AbstractMutableSetTestCase extends AbstractCollectionTestC
 
         // add the colliding value back and force the rehash
         caseA.add(COLLISION_2);
-        Assert.assertTrue(caseA.noneSatisfyWith(Predicates2.greaterThan(), COLLISION_2));
+        Assertions.assertTrue(caseA.noneSatisfyWith(Predicates2.greaterThan(), COLLISION_2));
     }
 
     @Override
@@ -805,8 +806,8 @@ public abstract class AbstractMutableSetTestCase extends AbstractCollectionTestC
         // test detect on a bucket with only one element
         MutableSet<Integer> set = this.newWith(COLLISION_1, COLLISION_2);
         set.remove(COLLISION_2);
-        Assert.assertEquals(COLLISION_1, set.detect(COLLISION_1::equals));
-        Assert.assertNull(set.detect(COLLISION_2::equals));
+        Assertions.assertEquals(COLLISION_1, set.detect(COLLISION_1::equals));
+        Assertions.assertNull(set.detect(COLLISION_2::equals));
 
         for (int i = 0; i < COLLISIONS.size(); i++)
         {
@@ -822,25 +823,29 @@ public abstract class AbstractMutableSetTestCase extends AbstractCollectionTestC
             }
 
             rehashingSet.add(last);
-            Assert.assertEquals(last, rehashingSet.detect(Predicates.equal(last)));
-            Assert.assertNull(rehashingSet.detect(Integer.valueOf(5)::equals));
+            Assertions.assertEquals(last, rehashingSet.detect(Predicates.equal(last)));
+            Assertions.assertNull(rehashingSet.detect(Integer.valueOf(5)::equals));
         }
     }
 
-    @Test(expected = NoSuchElementException.class)
+    @Test
     public void iterator_increment_past_end()
     {
-        MutableSet<Integer> set = this.newWith();
-        Iterator<Integer> iterator = set.iterator();
-        iterator.next();
-        iterator.next();
+        assertThrows(NoSuchElementException.class, () -> {
+            MutableSet<Integer> set = this.newWith();
+            Iterator<Integer> iterator = set.iterator();
+            iterator.next();
+            iterator.next();
+        });
     }
 
-    @Test(expected = IllegalStateException.class)
+    @Test
     public void iterator_remove_without_next()
     {
-        Iterator<Integer> iterator = this.<Integer>newWith().iterator();
-        iterator.remove();
+        assertThrows(IllegalStateException.class, () -> {
+            Iterator<Integer> iterator = this.<Integer>newWith().iterator();
+            iterator.remove();
+        });
     }
 
     @Override
@@ -855,7 +860,7 @@ public abstract class AbstractMutableSetTestCase extends AbstractCollectionTestC
         target[1] = 2;
         target[2] = 2;
         integers.toArray(target);
-        Assert.assertArrayEquals(new Integer[]{1, null, 2}, target);
+        Assertions.assertArrayEquals(new Integer[]{1, null, 2}, target);
     }
 
     @Override
@@ -877,10 +882,12 @@ public abstract class AbstractMutableSetTestCase extends AbstractCollectionTestC
     }
 
     @Override
-    @Test(expected = NullPointerException.class)
+    @Test
     public void toSortedBag_with_null()
     {
-        this.newWith(3, 4, null, 1, 2).toSortedBag();
+        assertThrows(NullPointerException.class, () -> {
+            this.newWith(3, 4, null, 1, 2).toSortedBag();
+        });
     }
 
     @Override
@@ -906,6 +913,6 @@ public abstract class AbstractMutableSetTestCase extends AbstractCollectionTestC
 
         set1.retainAll(set2);
 
-        Verify.assertArrayEquals(expected, set1.toArray());
+        Assertions.assertArrayEquals(expected, set1.toArray());
     }
 }
