@@ -35,8 +35,10 @@ import com.gs.collections.impl.math.SumProcedure;
 import com.gs.collections.impl.test.Verify;
 import com.gs.collections.impl.test.domain.Key;
 import com.gs.collections.impl.utility.ArrayIterate;
-import org.junit.Assert;
-import org.junit.Test;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.Test;
+
+import static org.junit.jupiter.api.Assertions.assertThrows;
 
 /**
  * JUnit test suite for {@link UnifiedSet}.
@@ -86,7 +88,7 @@ public class UnifiedSetTest extends AbstractMutableSetTestCase
     public void newSetWithIterable()
     {
         MutableSet<Integer> integers = UnifiedSet.newSet(Interval.oneTo(3));
-        Assert.assertEquals(UnifiedSet.newSetWith(1, 2, 3), integers);
+        Assertions.assertEquals(UnifiedSet.newSetWith(1, 2, 3), integers);
     }
 
     @Override
@@ -109,7 +111,7 @@ public class UnifiedSetTest extends AbstractMutableSetTestCase
                 unifiedSet.add(Integer.valueOf(2));
             }
             Integer value = COLLISIONS.get(i);
-            Assert.assertTrue(unifiedSet.add(value));
+            Assertions.assertTrue(unifiedSet.add(value));
         }
 
         // Rehashing Case A: a bucket with only one entry and a low capacity forcing a rehash, where the trigging element goes in the bucket
@@ -122,7 +124,7 @@ public class UnifiedSetTest extends AbstractMutableSetTestCase
         caseA.add(Integer.valueOf(2));
 
         // add the colliding value back and force the rehash
-        Assert.assertTrue(caseA.add(COLLISION_2));
+        Assertions.assertTrue(caseA.add(COLLISION_2));
 
         // Rehashing Case B: a bucket with only one entry and a low capacity forcing a rehash, where the triggering element is not in the chain
         // set up a chained bucket
@@ -134,7 +136,7 @@ public class UnifiedSetTest extends AbstractMutableSetTestCase
         caseB.add(Integer.valueOf(2));
 
         // add a new value and force the rehash
-        Assert.assertTrue(caseB.add(3));
+        Assertions.assertTrue(caseB.add(3));
     }
 
     @Override
@@ -145,11 +147,11 @@ public class UnifiedSetTest extends AbstractMutableSetTestCase
 
         // test adding a fully populated chained bucket
         MutableSet<Integer> expected = UnifiedSet.newSetWith(COLLISION_1, COLLISION_2, COLLISION_3, COLLISION_4, COLLISION_5, COLLISION_6, COLLISION_7);
-        Assert.assertTrue(UnifiedSet.<Integer>newSet().addAllIterable(expected));
+        Assertions.assertTrue(UnifiedSet.<Integer>newSet().addAllIterable(expected));
 
         // add an odd-sized collection to a set with a small max to ensure that its capacity is maintained after the operation.
         UnifiedSet<Integer> tiny = UnifiedSet.newSet(0);
-        Assert.assertTrue(tiny.addAllIterable(FastList.newListWith(COLLISION_1)));
+        Assertions.assertTrue(tiny.addAllIterable(FastList.newListWith(COLLISION_1)));
     }
 
     @Test
@@ -159,23 +161,23 @@ public class UnifiedSetTest extends AbstractMutableSetTestCase
         set.removeAll(COLLISIONS);
         for (Integer integer : COLLISIONS)
         {
-            Assert.assertNull(set.get(integer));
-            Assert.assertNull(set.get(null));
+            Assertions.assertNull(set.get(integer));
+            Assertions.assertNull(set.get(null));
             set.add(integer);
             //noinspection UnnecessaryBoxing,CachedNumberConstructorCall,BoxingBoxedValue
-            Assert.assertSame(integer, set.get(new Integer(integer)));
+            Assertions.assertSame(integer, set.get(Integer.valueOf(integer)));
         }
-        Assert.assertEquals(COLLISIONS.toSet(), set);
+        Assertions.assertEquals(COLLISIONS.toSet(), set);
 
         // the pool interface supports getting null keys
         UnifiedSet<Integer> chainedWithNull = UnifiedSet.newSetWith(null, COLLISION_1);
         Verify.assertContains(null, chainedWithNull);
-        Assert.assertNull(chainedWithNull.get(null));
+        Assertions.assertNull(chainedWithNull.get(null));
 
         // getting a non-existent from a chain with one slot should short-circuit to return null
         UnifiedSet<Integer> chainedWithOneSlot = UnifiedSet.newSetWith(COLLISION_1, COLLISION_2);
         chainedWithOneSlot.remove(COLLISION_2);
-        Assert.assertNull(chainedWithOneSlot.get(COLLISION_2));
+        Assertions.assertNull(chainedWithOneSlot.get(COLLISION_2));
     }
 
     @Test
@@ -187,9 +189,9 @@ public class UnifiedSetTest extends AbstractMutableSetTestCase
             Pool<Integer> unifiedSet = UnifiedSet.<Integer>newSet(1).withAll(MORE_COLLISIONS.subList(0, i - 1));
             Integer newValue = MORE_COLLISIONS.get(i - 1);
 
-            Assert.assertSame(newValue, unifiedSet.put(newValue));
+            Assertions.assertSame(newValue, unifiedSet.put(newValue));
             //noinspection UnnecessaryBoxing,CachedNumberConstructorCall,BoxingBoxedValue
-            Assert.assertSame(newValue, unifiedSet.put(new Integer(newValue)));
+            Assertions.assertSame(newValue, unifiedSet.put(Integer.valueOf(newValue)));
         }
 
         // assert that all redundant puts into a each position of chain bucket return the original element added
@@ -197,7 +199,7 @@ public class UnifiedSetTest extends AbstractMutableSetTestCase
         for (int i = 0; i < set.size(); i++)
         {
             Integer value = COLLISIONS.get(i);
-            Assert.assertSame(value, set.put(value));
+            Assertions.assertSame(value, set.put(value));
         }
 
         // force rehashing at each step of putting a new colliding entry
@@ -214,7 +216,7 @@ public class UnifiedSetTest extends AbstractMutableSetTestCase
                 pool.put(Integer.valueOf(2));
             }
             Integer value = COLLISIONS.get(i);
-            Assert.assertSame(value, pool.put(value));
+            Assertions.assertSame(value, pool.put(value));
         }
 
         // cover one case not covered in the above: a bucket with only one entry and a low capacity forcing a rehash
@@ -227,12 +229,12 @@ public class UnifiedSetTest extends AbstractMutableSetTestCase
         pool.put(Integer.valueOf(2));
 
         // put the colliding value back and force the rehash
-        Assert.assertSame(COLLISION_2, pool.put(COLLISION_2));
+        Assertions.assertSame(COLLISION_2, pool.put(COLLISION_2));
 
         // put chained items into a pool without causing a rehash
         Pool<Integer> olympicPool = UnifiedSet.newSet();
-        Assert.assertSame(COLLISION_1, olympicPool.put(COLLISION_1));
-        Assert.assertSame(COLLISION_2, olympicPool.put(COLLISION_2));
+        Assertions.assertSame(COLLISION_1, olympicPool.put(COLLISION_1));
+        Assertions.assertSame(COLLISION_2, olympicPool.put(COLLISION_2));
     }
 
     @Test
@@ -240,36 +242,36 @@ public class UnifiedSetTest extends AbstractMutableSetTestCase
     {
         Pool<Integer> unifiedSet = UnifiedSet.<Integer>newSet(8).withAll(COLLISIONS);
         COLLISIONS.reverseForEach(each -> {
-            Assert.assertNull(unifiedSet.removeFromPool(null));
-            Assert.assertSame(each, unifiedSet.removeFromPool(each));
-            Assert.assertNull(unifiedSet.removeFromPool(each));
-            Assert.assertNull(unifiedSet.removeFromPool(null));
-            Assert.assertNull(unifiedSet.removeFromPool(COLLISION_10));
+            Assertions.assertNull(unifiedSet.removeFromPool(null));
+            Assertions.assertSame(each, unifiedSet.removeFromPool(each));
+            Assertions.assertNull(unifiedSet.removeFromPool(each));
+            Assertions.assertNull(unifiedSet.removeFromPool(null));
+            Assertions.assertNull(unifiedSet.removeFromPool(COLLISION_10));
         });
 
-        Assert.assertEquals(UnifiedSet.<Integer>newSet(), unifiedSet);
+        Assertions.assertEquals(UnifiedSet.<Integer>newSet(), unifiedSet);
 
         COLLISIONS.forEach(Procedures.cast(each -> {
             Pool<Integer> unifiedSet2 = UnifiedSet.<Integer>newSet(8).withAll(COLLISIONS);
 
-            Assert.assertNull(unifiedSet2.removeFromPool(null));
-            Assert.assertSame(each, unifiedSet2.removeFromPool(each));
-            Assert.assertNull(unifiedSet2.removeFromPool(each));
-            Assert.assertNull(unifiedSet2.removeFromPool(null));
-            Assert.assertNull(unifiedSet2.removeFromPool(COLLISION_10));
+            Assertions.assertNull(unifiedSet2.removeFromPool(null));
+            Assertions.assertSame(each, unifiedSet2.removeFromPool(each));
+            Assertions.assertNull(unifiedSet2.removeFromPool(each));
+            Assertions.assertNull(unifiedSet2.removeFromPool(null));
+            Assertions.assertNull(unifiedSet2.removeFromPool(COLLISION_10));
         }));
 
         // search a chain for a non-existent element
         Pool<Integer> chain = UnifiedSet.newSetWith(COLLISION_1, COLLISION_2, COLLISION_3, COLLISION_4);
-        Assert.assertNull(chain.removeFromPool(COLLISION_5));
+        Assertions.assertNull(chain.removeFromPool(COLLISION_5));
 
         // search a deep chain for a non-existent element
         Pool<Integer> deepChain = UnifiedSet.newSetWith(COLLISION_1, COLLISION_2, COLLISION_3, COLLISION_4, COLLISION_5, COLLISION_6, COLLISION_7);
-        Assert.assertNull(deepChain.removeFromPool(COLLISION_8));
+        Assertions.assertNull(deepChain.removeFromPool(COLLISION_8));
 
         // search for a non-existent element
         Pool<Integer> empty = UnifiedSet.newSetWith(COLLISION_1);
-        Assert.assertNull(empty.removeFromPool(COLLISION_2));
+        Assertions.assertNull(empty.removeFromPool(COLLISION_2));
     }
 
     @Test
@@ -297,25 +299,25 @@ public class UnifiedSetTest extends AbstractMutableSetTestCase
     {
         UnifiedSet<Integer> unifiedSet = UnifiedSet.<Integer>newSet(10).withAll(MORE_COLLISIONS);
         MORE_COLLISIONS.clone().reverseForEach(each -> {
-            Assert.assertTrue(unifiedSet.add(null));
-            Assert.assertFalse(unifiedSet.add(null));
+            Assertions.assertTrue(unifiedSet.add(null));
+            Assertions.assertFalse(unifiedSet.add(null));
             Verify.assertContains(null, unifiedSet);
             Verify.assertPostSerializedEqualsAndHashCode(unifiedSet);
 
-            Assert.assertTrue(unifiedSet.remove(null));
-            Assert.assertFalse(unifiedSet.remove(null));
+            Assertions.assertTrue(unifiedSet.remove(null));
+            Assertions.assertFalse(unifiedSet.remove(null));
             Verify.assertNotContains(null, unifiedSet);
 
             Verify.assertPostSerializedEqualsAndHashCode(unifiedSet);
 
-            Assert.assertNull(unifiedSet.put(null));
-            Assert.assertNull(unifiedSet.put(null));
-            Assert.assertNull(unifiedSet.removeFromPool(null));
-            Assert.assertNull(unifiedSet.removeFromPool(null));
+            Assertions.assertNull(unifiedSet.put(null));
+            Assertions.assertNull(unifiedSet.put(null));
+            Assertions.assertNull(unifiedSet.removeFromPool(null));
+            Assertions.assertNull(unifiedSet.removeFromPool(null));
 
             Verify.assertContains(each, unifiedSet);
-            Assert.assertTrue(unifiedSet.remove(each));
-            Assert.assertFalse(unifiedSet.remove(each));
+            Assertions.assertTrue(unifiedSet.remove(each));
+            Assertions.assertFalse(unifiedSet.remove(each));
             Verify.assertNotContains(each, unifiedSet);
         });
     }
@@ -328,7 +330,7 @@ public class UnifiedSetTest extends AbstractMutableSetTestCase
 
         UnifiedSet<Integer> singleCollisionBucket = UnifiedSet.newSetWith(COLLISION_1, COLLISION_2);
         singleCollisionBucket.remove(COLLISION_2);
-        Assert.assertEquals(singleCollisionBucket, UnifiedSet.newSetWith(COLLISION_1));
+        Assertions.assertEquals(singleCollisionBucket, UnifiedSet.newSetWith(COLLISION_1));
 
         Verify.assertEqualsAndHashCode(UnifiedSet.newSetWith(null, COLLISION_1, COLLISION_2, COLLISION_3), UnifiedSet.newSetWith(null, COLLISION_1, COLLISION_2, COLLISION_3));
         Verify.assertEqualsAndHashCode(UnifiedSet.newSetWith(COLLISION_1, null, COLLISION_2, COLLISION_3), UnifiedSet.newSetWith(COLLISION_1, null, COLLISION_2, COLLISION_3));
@@ -386,19 +388,19 @@ public class UnifiedSetTest extends AbstractMutableSetTestCase
                 capacity <<= 1;
             }
 
-            Assert.assertEquals(capacity, table.length, 0.00);
+            Assertions.assertEquals(capacity, table.length, 0.00);
         }
         catch (SecurityException ignored)
         {
-            Assert.fail("Unable to modify the visibility of the table on UnifiedSet");
+            Assertions.fail("Unable to modify the visibility of the table on UnifiedSet");
         }
         catch (NoSuchFieldException ignored)
         {
-            Assert.fail("No field named table UnifiedSet");
+            Assertions.fail("No field named table UnifiedSet");
         }
         catch (IllegalAccessException ignored)
         {
-            Assert.fail("No access the field table in UnifiedSet");
+            Assertions.fail("No access the field table in UnifiedSet");
         }
     }
 
@@ -414,7 +416,7 @@ public class UnifiedSetTest extends AbstractMutableSetTestCase
             {
                 set.batchForEach(new SumProcedure<>(sum), sectionIndex, sectionCount);
             }
-            Assert.assertEquals(55, sum.getValue());
+            Assertions.assertEquals(55, sum.getValue());
         }
 
         //Testing 1 batch with chains
@@ -425,8 +427,8 @@ public class UnifiedSetTest extends AbstractMutableSetTestCase
         {
             set2.batchForEach(new SumProcedure<>(sum2), i, numBatches);
         }
-        Assert.assertEquals(1, numBatches);
-        Assert.assertEquals(54, sum2.getValue());
+        Assertions.assertEquals(1, numBatches);
+        Assertions.assertEquals(54, sum2.getValue());
 
         //Testing batch size of 3 with chains and uneven last batch
         Sum sum3 = new IntegerSum(0);
@@ -436,13 +438,13 @@ public class UnifiedSetTest extends AbstractMutableSetTestCase
         {
             set3.batchForEach(new SumProcedure<>(sum3), i, numBatches2);
         }
-        Assert.assertEquals(32, sum3.getValue());
+        Assertions.assertEquals(32, sum3.getValue());
 
         //Test batchForEach on empty set, it should simply do nothing and not throw any exceptions
         Sum sum4 = new IntegerSum(0);
         UnifiedSet<Integer> set4 = UnifiedSet.newSet();
         set4.batchForEach(new SumProcedure<>(sum4), 0, set4.getBatchCount(1));
-        Assert.assertEquals(0, sum4.getValue());
+        Assertions.assertEquals(0, sum4.getValue());
     }
 
     @Override
@@ -456,21 +458,21 @@ public class UnifiedSetTest extends AbstractMutableSetTestCase
         {
             MutableSet<Integer> set = UnifiedSet.<Integer>newSet(SIZE).withAll(COLLISIONS.subList(0, i));
             Object[] objects = set.toArray();
-            Assert.assertEquals(set, UnifiedSet.newSetWith(objects));
+            Assertions.assertEquals(set, UnifiedSet.newSetWith(objects));
         }
 
         MutableSet<Integer> deepChain = UnifiedSet.newSetWith(COLLISION_1, COLLISION_2, COLLISION_3, COLLISION_4, COLLISION_5, COLLISION_6);
-        Assert.assertArrayEquals(new Integer[]{COLLISION_1, COLLISION_2, COLLISION_3, COLLISION_4, COLLISION_5, COLLISION_6}, deepChain.toArray());
+        Assertions.assertArrayEquals(new Integer[]{COLLISION_1, COLLISION_2, COLLISION_3, COLLISION_4, COLLISION_5, COLLISION_6}, deepChain.toArray());
 
         MutableSet<Integer> minimumChain = UnifiedSet.newSetWith(COLLISION_1, COLLISION_2);
         minimumChain.remove(COLLISION_2);
-        Assert.assertArrayEquals(new Integer[]{COLLISION_1}, minimumChain.toArray());
+        Assertions.assertArrayEquals(new Integer[]{COLLISION_1}, minimumChain.toArray());
 
         MutableSet<Integer> set = UnifiedSet.newSetWith(COLLISION_1, COLLISION_2, COLLISION_3, COLLISION_4);
         Integer[] target = {Integer.valueOf(1), Integer.valueOf(1), Integer.valueOf(1), Integer.valueOf(1), Integer.valueOf(1), Integer.valueOf(1)};
         Integer[] actual = set.toArray(target);
         ArrayIterate.sort(actual, actual.length, Comparators.safeNullsHigh(Integer::compareTo));
-        Assert.assertArrayEquals(new Integer[]{COLLISION_1, 1, COLLISION_2, COLLISION_3, COLLISION_4, null}, actual);
+        Assertions.assertArrayEquals(new Integer[]{COLLISION_1, 1, COLLISION_2, COLLISION_3, COLLISION_4, null}, actual);
     }
 
     @Test
@@ -483,14 +485,14 @@ public class UnifiedSetTest extends AbstractMutableSetTestCase
             Iterator<Integer> iterator = actual.iterator();
             for (int j = 0; j <= i; j++)
             {
-                Assert.assertTrue(iterator.hasNext());
+                Assertions.assertTrue(iterator.hasNext());
                 iterator.next();
             }
             iterator.remove();
 
             MutableSet<Integer> expected = UnifiedSet.newSet(MORE_COLLISIONS);
             expected.remove(MORE_COLLISIONS.get(i));
-            Assert.assertEquals(expected, actual);
+            Assertions.assertEquals(expected, actual);
         }
 
         // remove the last element from within a 2-level long chain that is fully populated
@@ -501,7 +503,7 @@ public class UnifiedSetTest extends AbstractMutableSetTestCase
             iterator1.next();
         }
         iterator1.remove();
-        Assert.assertEquals(UnifiedSet.newSetWith(COLLISION_1, COLLISION_2, COLLISION_3, COLLISION_4, COLLISION_5, COLLISION_6), set);
+        Assertions.assertEquals(UnifiedSet.newSetWith(COLLISION_1, COLLISION_2, COLLISION_3, COLLISION_4, COLLISION_5, COLLISION_6), set);
 
         // remove the second-to-last element from a 2-level long chain that that has one empty slot
         Iterator<Integer> iterator2 = set.iterator();
@@ -510,7 +512,7 @@ public class UnifiedSetTest extends AbstractMutableSetTestCase
             iterator2.next();
         }
         iterator2.remove();
-        Assert.assertEquals(UnifiedSet.newSetWith(COLLISION_1, COLLISION_2, COLLISION_3, COLLISION_4, COLLISION_5), set);
+        Assertions.assertEquals(UnifiedSet.newSetWith(COLLISION_1, COLLISION_2, COLLISION_3, COLLISION_4, COLLISION_5), set);
 
         //Testing removing the last element in a fully populated chained bucket
         MutableSet<Integer> set2 = this.newWith(COLLISION_1, COLLISION_2, COLLISION_3, COLLISION_4);
@@ -533,28 +535,28 @@ public class UnifiedSetTest extends AbstractMutableSetTestCase
         MutableSet<Key> set1 = UnifiedSet.<Key>newSet().with(key, duplicateKey1);
         Verify.assertSize(1, set1);
         Verify.assertContains(key, set1);
-        Assert.assertSame(key, set1.getFirst());
+        Assertions.assertSame(key, set1.getFirst());
 
         Key duplicateKey2 = new Key("key");
         MutableSet<Key> set2 = UnifiedSet.<Key>newSet().with(key, duplicateKey1, duplicateKey2);
         Verify.assertSize(1, set2);
         Verify.assertContains(key, set2);
-        Assert.assertSame(key, set2.getFirst());
+        Assertions.assertSame(key, set2.getFirst());
 
         Key duplicateKey3 = new Key("key");
         MutableSet<Key> set3 = UnifiedSet.<Key>newSet().with(key, new Key("not a dupe"), duplicateKey3);
         Verify.assertSize(2, set3);
         Verify.assertContainsAll(set3, key, new Key("not a dupe"));
-        Assert.assertSame(key, set3.detect(key::equals));
+        Assertions.assertSame(key, set3.detect(key::equals));
     }
 
     @Test
     public void withSameIfNotModified()
     {
         UnifiedSet<Integer> integers = UnifiedSet.newSet();
-        Assert.assertEquals(UnifiedSet.newSetWith(1, 2), integers.with(1, 2));
-        Assert.assertEquals(UnifiedSet.newSetWith(1, 2, 3, 4), integers.with(2, 3, 4));
-        Assert.assertSame(integers, integers.with(5, 6, 7));
+        Assertions.assertEquals(UnifiedSet.newSetWith(1, 2), integers.with(1, 2));
+        Assertions.assertEquals(UnifiedSet.newSetWith(1, 2, 3, 4), integers.with(2, 3, 4));
+        Assertions.assertSame(integers, integers.with(5, 6, 7));
     }
 
     @Override
@@ -564,23 +566,28 @@ public class UnifiedSetTest extends AbstractMutableSetTestCase
         super.retainAll();
 
         MutableSet<Object> setWithNull = this.newWith((Object) null);
-        Assert.assertFalse(setWithNull.retainAll(FastList.newListWith((Object) null)));
-        Assert.assertEquals(UnifiedSet.newSetWith((Object) null), setWithNull);
+        Assertions.assertFalse(setWithNull.retainAll(FastList.newListWith((Object) null)));
+        Assertions.assertEquals(UnifiedSet.newSetWith((Object) null), setWithNull);
     }
 
-    @Test(expected = NullPointerException.class)
+    @Test
     public void asParallelNullExecutorService()
     {
-        this.newWith(1, 2, 3, 4, 5, 6, 7, 8, 9, 10).asParallel(null, 2);
+        assertThrows(NullPointerException.class, () -> {
+            this.newWith(1, 2, 3, 4, 5, 6, 7, 8, 9, 10).asParallel(null, 2);
+        });
     }
 
-    @Test(expected = IllegalArgumentException.class)
+    @Test
     public void asParallelLessThanOneBatchSize()
     {
-        this.newWith(1, 2, 3, 4, 5, 6, 7, 8, 9, 10).asParallel(Executors.newFixedThreadPool(10), 0);
+        assertThrows(IllegalArgumentException.class, () -> {
+            this.newWith(1, 2, 3, 4, 5, 6, 7, 8, 9, 10).asParallel(Executors.newFixedThreadPool(10), 0);
+        });
     }
 
     @Override
+    @Test
     public void getFirst()
     {
         super.getFirst();
@@ -589,11 +596,12 @@ public class UnifiedSetTest extends AbstractMutableSetTestCase
         for (int i = 1; i <= size - 1; i++)
         {
             MutableSet<Integer> unifiedSet = UnifiedSet.<Integer>newSet(1).withAll(MORE_COLLISIONS.subList(0, i));
-            Assert.assertSame(MORE_COLLISIONS.get(0), unifiedSet.getFirst());
+            Assertions.assertSame(MORE_COLLISIONS.get(0), unifiedSet.getFirst());
         }
     }
 
     @Override
+    @Test
     public void getLast()
     {
         super.getLast();
@@ -602,11 +610,11 @@ public class UnifiedSetTest extends AbstractMutableSetTestCase
         for (int i = 1; i <= size - 1; i++)
         {
             MutableSet<Integer> unifiedSet = UnifiedSet.<Integer>newSet(1).withAll(MORE_COLLISIONS.subList(0, i));
-            Assert.assertSame(MORE_COLLISIONS.get(i - 1), unifiedSet.getLast());
+            Assertions.assertSame(MORE_COLLISIONS.get(i - 1), unifiedSet.getLast());
         }
 
         MutableSet<Integer> chainedWithOneSlot = UnifiedSet.newSetWith(COLLISION_1, COLLISION_2);
         chainedWithOneSlot.remove(COLLISION_2);
-        Assert.assertSame(COLLISION_1, chainedWithOneSlot.getLast());
+        Assertions.assertSame(COLLISION_1, chainedWithOneSlot.getLast());
     }
 }
