@@ -44,8 +44,10 @@ import com.gs.collections.impl.test.Verify;
 import com.gs.collections.impl.test.domain.Key;
 import com.gs.collections.impl.test.domain.Person;
 import com.gs.collections.impl.utility.ArrayIterate;
-import org.junit.Assert;
-import org.junit.Test;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.Test;
+
+import static org.junit.jupiter.api.Assertions.assertThrows;
 
 /**
  * JUnit test suite for {@link UnifiedSetWithHashingStrategy}.
@@ -109,8 +111,8 @@ public class UnifiedSetWithHashingStrategyTest extends AbstractUnifiedSetTestCas
 
         MutableList<Person> tapResult = Lists.mutable.of();
         UnifiedSetWithHashingStrategy<Person> people = UnifiedSetWithHashingStrategy.newSet(LAST_NAME_HASHING_STRATEGY).withAll(PEOPLE.castToList());
-        Assert.assertSame(people, people.tap(tapResult::add));
-        Assert.assertEquals(people.toList(), tapResult);
+        Assertions.assertSame(people, people.tap(tapResult::add));
+        Assertions.assertEquals(people.toList(), tapResult);
     }
 
     @Override
@@ -147,11 +149,11 @@ public class UnifiedSetWithHashingStrategyTest extends AbstractUnifiedSetTestCas
         Procedure<String> builder = Procedures.append(new StringBuilder());
         select.forEach(builder);
         String result = builder.toString();
-        Verify.assertContains("1", result);
-        Verify.assertContains("2", result);
-        Verify.assertContains("3", result);
-        Verify.assertContains("4", result);
-        Verify.assertContains("5", result);
+        Verify.assertContains(result, "1");
+        Verify.assertContains(result, "2");
+        Verify.assertContains(result, "3");
+        Verify.assertContains(result, "4");
+        Verify.assertContains(result, "5");
     }
 
     /**
@@ -166,7 +168,7 @@ public class UnifiedSetWithHashingStrategyTest extends AbstractUnifiedSetTestCas
         LazyIterable<Integer> select = integers.lazyReject(Predicates.lessThan(5));
         Sum sum = new IntegerSum(0);
         select.forEach(new SumProcedure<>(sum));
-        Assert.assertEquals(5L, sum.getValue().intValue());
+        Assertions.assertEquals(5L, sum.getValue().intValue());
     }
 
     /**
@@ -181,7 +183,7 @@ public class UnifiedSetWithHashingStrategyTest extends AbstractUnifiedSetTestCas
         LazyIterable<Integer> select = integers.lazySelect(Predicates.lessThan(5));
         Sum sum = new IntegerSum(0);
         select.forEach(new SumProcedure<>(sum));
-        Assert.assertEquals(10, sum.getValue().intValue());
+        Assertions.assertEquals(10, sum.getValue().intValue());
     }
 
     @Override
@@ -214,12 +216,12 @@ public class UnifiedSetWithHashingStrategyTest extends AbstractUnifiedSetTestCas
     {
         //testing collection
         MutableSet<Integer> integers = UnifiedSetWithHashingStrategy.newSet(INTEGER_HASHING_STRATEGY, Interval.oneTo(3));
-        Assert.assertEquals(UnifiedSetWithHashingStrategy.newSetWith(INTEGER_HASHING_STRATEGY, 1, 2, 3), integers);
+        Assertions.assertEquals(UnifiedSetWithHashingStrategy.newSetWith(INTEGER_HASHING_STRATEGY, 1, 2, 3), integers);
 
         //testing iterable
         UnifiedSetWithHashingStrategy<Integer> set1 = UnifiedSetWithHashingStrategy.newSet(
                 INTEGER_HASHING_STRATEGY, FastList.newListWith(1, 2, 3).asLazy());
-        Assert.assertEquals(UnifiedSetWithHashingStrategy.newSetWith(INTEGER_HASHING_STRATEGY, 1, 2, 3), set1);
+        Assertions.assertEquals(UnifiedSetWithHashingStrategy.newSetWith(INTEGER_HASHING_STRATEGY, 1, 2, 3), set1);
 
         //testing null
         Verify.assertThrows(NullPointerException.class, () -> UnifiedSetWithHashingStrategy.newSet(INTEGER_HASHING_STRATEGY, null));
@@ -246,7 +248,7 @@ public class UnifiedSetWithHashingStrategyTest extends AbstractUnifiedSetTestCas
                 unifiedSet.add(Integer.valueOf(2));
             }
             Integer value = COLLISIONS.get(i);
-            Assert.assertTrue(unifiedSet.add(value));
+            Assertions.assertTrue(unifiedSet.add(value));
         }
 
         // Rehashing Case A: a bucket with only one entry and a low capacity forcing a rehash, where the trigging element goes in the bucket
@@ -260,7 +262,7 @@ public class UnifiedSetWithHashingStrategyTest extends AbstractUnifiedSetTestCas
         caseA.add(Integer.valueOf(2));
 
         // add the colliding value back and force the rehash
-        Assert.assertTrue(caseA.add(COLLISION_2));
+        Assertions.assertTrue(caseA.add(COLLISION_2));
 
         // Rehashing Case B: a bucket with only one entry and a low capacity forcing a rehash, where the triggering element is not in the chain
         // set up a chained bucket
@@ -273,7 +275,7 @@ public class UnifiedSetWithHashingStrategyTest extends AbstractUnifiedSetTestCas
         caseB.add(Integer.valueOf(2));
 
         // add a new value and force the rehash
-        Assert.assertTrue(caseB.add(3));
+        Assertions.assertTrue(caseB.add(3));
     }
 
     @Test
@@ -295,25 +297,25 @@ public class UnifiedSetWithHashingStrategyTest extends AbstractUnifiedSetTestCas
         //Same as case A above except with a different hashing strategy
         UnifiedSetWithHashingStrategy<Integer> caseA = UnifiedSetWithHashingStrategy.newSet(hashingStrategy, 2);
         //Adding an element to a slot
-        Assert.assertTrue(caseA.add(COLLISION_1));
+        Assertions.assertTrue(caseA.add(COLLISION_1));
         //Setting up a chained bucked by forcing a collision
-        Assert.assertTrue(caseA.add(COLLISION_1 + 1000));
+        Assertions.assertTrue(caseA.add(COLLISION_1 + 1000));
         //Increasing the occupied to the thresh hold
-        Assert.assertTrue(caseA.add(COLLISION_1 + 2000));
+        Assertions.assertTrue(caseA.add(COLLISION_1 + 2000));
         //Forcing a rehash where the element that forced the rehash goes in the chained bucket
-        Assert.assertTrue(caseA.add(null));
+        Assertions.assertTrue(caseA.add(null));
         Verify.assertSetsEqual(UnifiedSet.newSetWith(COLLISION_1, COLLISION_1 + 1000, COLLISION_1 + 2000, null), caseA);
 
         //Same as case B above except with a different hashing strategy
         UnifiedSetWithHashingStrategy<Integer> caseB = UnifiedSetWithHashingStrategy.newSet(hashingStrategy, 2);
         //Adding an element to a slot
-        Assert.assertTrue(caseB.add(null));
+        Assertions.assertTrue(caseB.add(null));
         //Setting up a chained bucked by forcing a collision
-        Assert.assertTrue(caseB.add(1));
+        Assertions.assertTrue(caseB.add(1));
         //Increasing the occupied to the threshold
-        Assert.assertTrue(caseB.add(2));
+        Assertions.assertTrue(caseB.add(2));
         //Forcing a rehash where the element that forced the rehash does not go in the chained bucket
-        Assert.assertTrue(caseB.add(3));
+        Assertions.assertTrue(caseB.add(3));
         Verify.assertSetsEqual(UnifiedSet.newSetWith(null, 1, 2, 3), caseB);
 
         //Testing add throws NullPointerException if the hashingStrategy is not null safe
@@ -329,29 +331,29 @@ public class UnifiedSetWithHashingStrategyTest extends AbstractUnifiedSetTestCas
         // test adding a fully populated chained bucket
         MutableSet<Integer> expected = UnifiedSetWithHashingStrategy.newSetWith(
                 INTEGER_HASHING_STRATEGY, COLLISION_1, COLLISION_2, COLLISION_3, COLLISION_4, COLLISION_5, COLLISION_6, COLLISION_7);
-        Assert.assertTrue(UnifiedSetWithHashingStrategy.newSet(INTEGER_HASHING_STRATEGY).addAllIterable(expected));
+        Assertions.assertTrue(UnifiedSetWithHashingStrategy.newSet(INTEGER_HASHING_STRATEGY).addAllIterable(expected));
 
         // add an odd-sized collection to a set with a small max to ensure that its capacity is maintained after the operation.
         UnifiedSetWithHashingStrategy<Integer> tiny = UnifiedSetWithHashingStrategy.newSet(INTEGER_HASHING_STRATEGY, 0);
-        Assert.assertTrue(tiny.addAllIterable(FastList.newListWith(COLLISION_1)));
+        Assertions.assertTrue(tiny.addAllIterable(FastList.newListWith(COLLISION_1)));
 
         //Testing copying set with 3rd slot in chained bucket == null
         UnifiedSetWithHashingStrategy<Integer> integers = UnifiedSetWithHashingStrategy.newSetWith(
                 INTEGER_HASHING_STRATEGY, COLLISION_1, COLLISION_2, COLLISION_3, COLLISION_4);
         UnifiedSetWithHashingStrategy<Integer> set = UnifiedSetWithHashingStrategy.newSet(INTEGER_HASHING_STRATEGY);
         integers.remove(COLLISION_4);
-        Assert.assertTrue(set.addAllIterable(integers));
-        Assert.assertEquals(UnifiedSet.newSetWith(COLLISION_1, COLLISION_2, COLLISION_3), set);
+        Assertions.assertTrue(set.addAllIterable(integers));
+        Assertions.assertEquals(UnifiedSet.newSetWith(COLLISION_1, COLLISION_2, COLLISION_3), set);
 
         //Testing copying set with 2nd slot in chained bucket == null
         integers.remove(COLLISION_3);
-        Assert.assertFalse(set.addAllIterable(integers));
+        Assertions.assertFalse(set.addAllIterable(integers));
 
         //Testing copying set with the 1st slot in chained bucket == null
         integers.remove(COLLISION_2);
-        Assert.assertFalse(set.addAllIterable(integers));
+        Assertions.assertFalse(set.addAllIterable(integers));
 
-        Assert.assertEquals(UnifiedSet.newSetWith(COLLISION_1, COLLISION_2, COLLISION_3), set);
+        Assertions.assertEquals(UnifiedSet.newSetWith(COLLISION_1, COLLISION_2, COLLISION_3), set);
     }
 
     @Test
@@ -360,16 +362,16 @@ public class UnifiedSetWithHashingStrategyTest extends AbstractUnifiedSetTestCas
         UnifiedSetWithHashingStrategy<Person> people = UnifiedSetWithHashingStrategy.newSet(
                 HashingStrategies.nullSafeHashingStrategy(LAST_NAME_HASHING_STRATEGY), 2);
         //Testing adding an iterable
-        Assert.assertTrue(people.addAllIterable(PEOPLE));
+        Assertions.assertTrue(people.addAllIterable(PEOPLE));
         Verify.assertSetsEqual(UnifiedSet.newSet(LAST_NAME_HASHED_SET), people);
 
         //Testing the set uses its own hashing strategy and not the target sets
-        Assert.assertFalse(people.addAllIterable(UnifiedSetWithHashingStrategy.newSet(FIRST_NAME_HASHING_STRATEGY, PEOPLE)));
+        Assertions.assertFalse(people.addAllIterable(UnifiedSetWithHashingStrategy.newSet(FIRST_NAME_HASHING_STRATEGY, PEOPLE)));
         Verify.assertSize(2, people);
 
         //Testing adding with null where the call to addALLIterable forces a rehash
         Person notInSet = new Person("Not", "InSet");
-        Assert.assertTrue(people.addAllIterable(UnifiedSet.newSetWith(notInSet, null)));
+        Assertions.assertTrue(people.addAllIterable(UnifiedSet.newSetWith(notInSet, null)));
         Verify.assertSetsEqual(UnifiedSet.newSet(LAST_NAME_HASHED_SET).with(notInSet, null), people);
 
         //Testing addAllIterable throws NullPointerException if the hashingStrategy is not null safe
@@ -384,25 +386,25 @@ public class UnifiedSetWithHashingStrategyTest extends AbstractUnifiedSetTestCas
         set.removeAll(COLLISIONS);
         for (Integer integer : COLLISIONS)
         {
-            Assert.assertNull(set.get(integer));
-            Assert.assertNull(set.get(null));
+            Assertions.assertNull(set.get(integer));
+            Assertions.assertNull(set.get(null));
             set.add(integer);
             //noinspection UnnecessaryBoxing,CachedNumberConstructorCall,BoxingBoxedValue
-            Assert.assertSame(integer, set.get(new Integer(integer)));
+            Assertions.assertSame(integer, set.get(Integer.valueOf(integer)));
         }
-        Assert.assertEquals(COLLISIONS.toSet(), set);
+        Assertions.assertEquals(COLLISIONS.toSet(), set);
 
         // the pool interface supports getting null keys
         UnifiedSetWithHashingStrategy<Integer> chainedWithNull = UnifiedSetWithHashingStrategy.newSetWith(
                 INTEGER_HASHING_STRATEGY, null, COLLISION_1);
         Verify.assertContains(null, chainedWithNull);
-        Assert.assertNull(chainedWithNull.get(null));
+        Assertions.assertNull(chainedWithNull.get(null));
 
         // getting a non-existent from a chain with one slot should short-circuit to return null
         UnifiedSetWithHashingStrategy<Integer> chainedWithOneSlot = UnifiedSetWithHashingStrategy.newSetWith(
                 INTEGER_HASHING_STRATEGY, COLLISION_1, COLLISION_2);
         chainedWithOneSlot.remove(COLLISION_2);
-        Assert.assertNull(chainedWithOneSlot.get(COLLISION_2));
+        Assertions.assertNull(chainedWithOneSlot.get(COLLISION_2));
     }
 
     @Test
@@ -413,16 +415,16 @@ public class UnifiedSetWithHashingStrategyTest extends AbstractUnifiedSetTestCas
 
         //Putting null then testing geting a null
         Verify.assertSize(3, people.with((Person) null));
-        Assert.assertNull(people.get(null));
+        Assertions.assertNull(people.get(null));
 
         //Testing it is getting the same reference
-        Assert.assertSame(JOHNSMITH, people.get(JANESMITH));
-        Assert.assertSame(JOHNSMITH, people.get(JOHNSMITH));
-        Assert.assertSame(JOHNDOE, people.get(JANEDOE));
-        Assert.assertSame(JOHNDOE, people.get(JOHNDOE));
+        Assertions.assertSame(JOHNSMITH, people.get(JANESMITH));
+        Assertions.assertSame(JOHNSMITH, people.get(JOHNSMITH));
+        Assertions.assertSame(JOHNDOE, people.get(JANEDOE));
+        Assertions.assertSame(JOHNDOE, people.get(JOHNDOE));
 
-        Assert.assertSame(JOHNSMITH, people.get(new Person("Anything", "Smith")));
-        Assert.assertNull(people.get(new Person("John", "NotHere")));
+        Assertions.assertSame(JOHNSMITH, people.get(new Person("Anything", "Smith")));
+        Assertions.assertNull(people.get(new Person("John", "NotHere")));
 
         //Testing get throws NullPointerException if the hashingStrategy is not null safe
         Verify.assertThrows(NullPointerException.class, () -> UnifiedSetWithHashingStrategy.newSet(LAST_NAME_HASHING_STRATEGY).get(null));
@@ -438,9 +440,9 @@ public class UnifiedSetWithHashingStrategyTest extends AbstractUnifiedSetTestCas
                     INTEGER_HASHING_STRATEGY, 1).withAll(MORE_COLLISIONS.subList(0, i - 1));
             Integer newValue = MORE_COLLISIONS.get(i - 1);
 
-            Assert.assertSame(newValue, unifiedSet.put(newValue));
+            Assertions.assertSame(newValue, unifiedSet.put(newValue));
             //noinspection UnnecessaryBoxing,CachedNumberConstructorCall,BoxingBoxedValue
-            Assert.assertSame(newValue, unifiedSet.put(new Integer(newValue)));
+            Assertions.assertSame(newValue, unifiedSet.put(Integer.valueOf(newValue)));
         }
 
         // assert that all redundant puts into a each position of chain bucket return the original element added
@@ -449,7 +451,7 @@ public class UnifiedSetWithHashingStrategyTest extends AbstractUnifiedSetTestCas
         for (int i = 0; i < set.size(); i++)
         {
             Integer value = COLLISIONS.get(i);
-            Assert.assertSame(value, set.put(value));
+            Assertions.assertSame(value, set.put(value));
         }
 
         // force rehashing at each step of putting a new colliding entry
@@ -466,7 +468,7 @@ public class UnifiedSetWithHashingStrategyTest extends AbstractUnifiedSetTestCas
                 pool.put(Integer.valueOf(2));
             }
             Integer value = COLLISIONS.get(i);
-            Assert.assertSame(value, pool.put(value));
+            Assertions.assertSame(value, pool.put(value));
         }
 
         // cover one case not covered in the above: a bucket with only one entry and a low capacity forcing a rehash
@@ -479,12 +481,12 @@ public class UnifiedSetWithHashingStrategyTest extends AbstractUnifiedSetTestCas
         pool.put(Integer.valueOf(2));
 
         // put the colliding value back and force the rehash
-        Assert.assertSame(COLLISION_2, pool.put(COLLISION_2));
+        Assertions.assertSame(COLLISION_2, pool.put(COLLISION_2));
 
         // put chained items into a pool without causing a rehash
         Pool<Integer> olympicPool = UnifiedSetWithHashingStrategy.newSet(INTEGER_HASHING_STRATEGY);
-        Assert.assertSame(COLLISION_1, olympicPool.put(COLLISION_1));
-        Assert.assertSame(COLLISION_2, olympicPool.put(COLLISION_2));
+        Assertions.assertSame(COLLISION_1, olympicPool.put(COLLISION_1));
+        Assertions.assertSame(COLLISION_2, olympicPool.put(COLLISION_2));
     }
 
     @Test
@@ -493,16 +495,16 @@ public class UnifiedSetWithHashingStrategyTest extends AbstractUnifiedSetTestCas
         UnifiedSetWithHashingStrategy<Person> people = UnifiedSetWithHashingStrategy.newSet(
                 HashingStrategies.nullSafeHashingStrategy(LAST_NAME_HASHING_STRATEGY), 2).withAll(PEOPLE.castToList());
         //Testing if element already exists, returns the instance in the set
-        Assert.assertSame(JOHNSMITH, people.put(new Person("Anything", "Smith")));
+        Assertions.assertSame(JOHNSMITH, people.put(new Person("Anything", "Smith")));
         Verify.assertSize(2, people);
 
         //Testing if the element doesn't exist, returns the element itself
         Person notInSet = new Person("Not", "inSet");
-        Assert.assertSame(notInSet, people.put(notInSet));
+        Assertions.assertSame(notInSet, people.put(notInSet));
         Verify.assertSize(3, people);
 
         //Testing putting a null to force a rehash
-        Assert.assertNull(people.put(null));
+        Assertions.assertNull(people.put(null));
         Verify.assertSize(4, people);
 
         //Testing put throws NullPointerException if the hashingStrategy is not null safe
@@ -529,29 +531,29 @@ public class UnifiedSetWithHashingStrategyTest extends AbstractUnifiedSetTestCas
                 hashingStrategy, 2).with(COLLISION_1, COLLISION_1 + 1000, COLLISION_1 + 2000, null);
 
         //Testing remove null from the end of the chain
-        Assert.assertTrue(integers.remove(null));
+        Assertions.assertTrue(integers.remove(null));
 
         //Adding null back and creating a deep chain.
         integers.with(null, COLLISION_1 + 3000, COLLISION_1 + 4000, COLLISION_1 + 5000);
 
         //Removing null from the first position of a bucket in the deep chain
-        Assert.assertTrue(integers.remove(null));
-        Assert.assertFalse(integers.remove(null));
+        Assertions.assertTrue(integers.remove(null));
+        Assertions.assertFalse(integers.remove(null));
 
         //Removing from the end of the deep chain
-        Assert.assertTrue(integers.remove(COLLISION_1 + 4000));
+        Assertions.assertTrue(integers.remove(COLLISION_1 + 4000));
 
         //Removing from the first spot of the chain
-        Assert.assertTrue(integers.remove(COLLISION_1));
+        Assertions.assertTrue(integers.remove(COLLISION_1));
         Verify.assertSize(4, integers);
 
         //Testing removing a non existent element from a non bucket slot
         integers.add(2);
         integers.add(4);
-        Assert.assertFalse(integers.remove(1002));
+        Assertions.assertFalse(integers.remove(1002));
 
         //Testing removeIf
-        Assert.assertTrue(integers.removeIf(IntegerPredicates.isEven()));
+        Assertions.assertTrue(integers.removeIf(IntegerPredicates.isEven()));
         Verify.assertEmpty(integers);
     }
 
@@ -561,40 +563,40 @@ public class UnifiedSetWithHashingStrategyTest extends AbstractUnifiedSetTestCas
         Pool<Integer> unifiedSet = UnifiedSetWithHashingStrategy.newSet(
                 INTEGER_HASHING_STRATEGY, 8).withAll(COLLISIONS);
         COLLISIONS.reverseForEach(each -> {
-            Assert.assertNull(unifiedSet.removeFromPool(null));
-            Assert.assertSame(each, unifiedSet.removeFromPool(each));
-            Assert.assertNull(unifiedSet.removeFromPool(each));
-            Assert.assertNull(unifiedSet.removeFromPool(null));
-            Assert.assertNull(unifiedSet.removeFromPool(COLLISION_10));
+            Assertions.assertNull(unifiedSet.removeFromPool(null));
+            Assertions.assertSame(each, unifiedSet.removeFromPool(each));
+            Assertions.assertNull(unifiedSet.removeFromPool(each));
+            Assertions.assertNull(unifiedSet.removeFromPool(null));
+            Assertions.assertNull(unifiedSet.removeFromPool(COLLISION_10));
         });
 
-        Assert.assertEquals(UnifiedSetWithHashingStrategy.newSet(INTEGER_HASHING_STRATEGY), unifiedSet);
+        Assertions.assertEquals(UnifiedSetWithHashingStrategy.newSet(INTEGER_HASHING_STRATEGY), unifiedSet);
 
         COLLISIONS.forEach(Procedures.cast(each -> {
             Pool<Integer> unifiedSet2 = UnifiedSetWithHashingStrategy.newSet(
                     INTEGER_HASHING_STRATEGY, 8).withAll(COLLISIONS);
 
-            Assert.assertNull(unifiedSet2.removeFromPool(null));
-            Assert.assertSame(each, unifiedSet2.removeFromPool(each));
-            Assert.assertNull(unifiedSet2.removeFromPool(each));
-            Assert.assertNull(unifiedSet2.removeFromPool(null));
-            Assert.assertNull(unifiedSet2.removeFromPool(COLLISION_10));
+            Assertions.assertNull(unifiedSet2.removeFromPool(null));
+            Assertions.assertSame(each, unifiedSet2.removeFromPool(each));
+            Assertions.assertNull(unifiedSet2.removeFromPool(each));
+            Assertions.assertNull(unifiedSet2.removeFromPool(null));
+            Assertions.assertNull(unifiedSet2.removeFromPool(COLLISION_10));
         }));
 
         // search a chain for a non-existent element
         Pool<Integer> chain = UnifiedSetWithHashingStrategy.newSetWith(
                 INTEGER_HASHING_STRATEGY, COLLISION_1, COLLISION_2, COLLISION_3, COLLISION_4);
-        Assert.assertNull(chain.removeFromPool(COLLISION_5));
+        Assertions.assertNull(chain.removeFromPool(COLLISION_5));
 
         // search a deep chain for a non-existent element
         Pool<Integer> deepChain = UnifiedSetWithHashingStrategy.newSetWith(
                 INTEGER_HASHING_STRATEGY, COLLISION_1, COLLISION_2, COLLISION_3, COLLISION_4, COLLISION_5, COLLISION_6, COLLISION_7);
-        Assert.assertNull(deepChain.removeFromPool(COLLISION_8));
+        Assertions.assertNull(deepChain.removeFromPool(COLLISION_8));
 
         // search for a non-existent element
         Pool<Integer> empty = UnifiedSetWithHashingStrategy.newSetWith(
                 INTEGER_HASHING_STRATEGY, COLLISION_1);
-        Assert.assertNull(empty.removeFromPool(COLLISION_2));
+        Assertions.assertNull(empty.removeFromPool(COLLISION_2));
     }
 
     @Test
@@ -617,27 +619,27 @@ public class UnifiedSetWithHashingStrategyTest extends AbstractUnifiedSetTestCas
                 hashingStrategy, 2).with(COLLISION_1, COLLISION_1 + 1000, COLLISION_1 + 2000, null);
 
         //Testing remove null from the end of the chain
-        Assert.assertNull(integers.removeFromPool(null));
+        Assertions.assertNull(integers.removeFromPool(null));
 
         Integer collision4000 = COLLISION_1 + 4000;
         //Adding null back and creating a deep chain.
         integers.with(null, COLLISION_1 + 3000, collision4000, COLLISION_1 + 5000);
 
         //Removing null from the first position of a bucket in the deep chain
-        Assert.assertNull(integers.removeFromPool(null));
+        Assertions.assertNull(integers.removeFromPool(null));
         Verify.assertSize(6, integers);
-        Assert.assertNull(integers.removeFromPool(null));
+        Assertions.assertNull(integers.removeFromPool(null));
         Verify.assertSize(6, integers);
 
         //Removing from the end of the deep chain
-        Assert.assertSame(collision4000, integers.removeFromPool(COLLISION_1 + 4000));
+        Assertions.assertSame(collision4000, integers.removeFromPool(COLLISION_1 + 4000));
 
         //Removing from the first spot of the chain
-        Assert.assertSame(COLLISION_1, integers.removeFromPool(COLLISION_1));
+        Assertions.assertSame(COLLISION_1, integers.removeFromPool(COLLISION_1));
         Verify.assertSize(4, integers);
 
         //Testing removing an element that is not in a chained bucket
-        Assert.assertSame(JOHNSMITH, UnifiedSetWithHashingStrategy.newSetWith(LAST_NAME_HASHING_STRATEGY, JOHNSMITH).removeFromPool(JOHNSMITH));
+        Assertions.assertSame(JOHNSMITH, UnifiedSetWithHashingStrategy.newSetWith(LAST_NAME_HASHING_STRATEGY, JOHNSMITH).removeFromPool(JOHNSMITH));
     }
 
     @Test
@@ -673,25 +675,25 @@ public class UnifiedSetWithHashingStrategyTest extends AbstractUnifiedSetTestCas
         UnifiedSetWithHashingStrategy<Integer> unifiedSet = UnifiedSetWithHashingStrategy.newSet(
                 INTEGER_HASHING_STRATEGY, 8).withAll(MORE_COLLISIONS);
         MORE_COLLISIONS.clone().reverseForEach(each -> {
-            Assert.assertTrue(unifiedSet.add(null));
-            Assert.assertFalse(unifiedSet.add(null));
+            Assertions.assertTrue(unifiedSet.add(null));
+            Assertions.assertFalse(unifiedSet.add(null));
             Verify.assertContains(null, unifiedSet);
             Verify.assertPostSerializedEqualsAndHashCode(unifiedSet);
 
-            Assert.assertTrue(unifiedSet.remove(null));
-            Assert.assertFalse(unifiedSet.remove(null));
+            Assertions.assertTrue(unifiedSet.remove(null));
+            Assertions.assertFalse(unifiedSet.remove(null));
             Verify.assertNotContains(null, unifiedSet);
 
             Verify.assertPostSerializedEqualsAndHashCode(unifiedSet);
 
-            Assert.assertNull(unifiedSet.put(null));
-            Assert.assertNull(unifiedSet.put(null));
-            Assert.assertNull(unifiedSet.removeFromPool(null));
-            Assert.assertNull(unifiedSet.removeFromPool(null));
+            Assertions.assertNull(unifiedSet.put(null));
+            Assertions.assertNull(unifiedSet.put(null));
+            Assertions.assertNull(unifiedSet.removeFromPool(null));
+            Assertions.assertNull(unifiedSet.removeFromPool(null));
 
             Verify.assertContains(each, unifiedSet);
-            Assert.assertTrue(unifiedSet.remove(each));
-            Assert.assertFalse(unifiedSet.remove(each));
+            Assertions.assertTrue(unifiedSet.remove(each));
+            Assertions.assertFalse(unifiedSet.remove(each));
             Verify.assertNotContains(each, unifiedSet);
         });
     }
@@ -705,7 +707,7 @@ public class UnifiedSetWithHashingStrategyTest extends AbstractUnifiedSetTestCas
         UnifiedSetWithHashingStrategy<Integer> singleCollisionBucket = UnifiedSetWithHashingStrategy.newSetWith(
                 INTEGER_HASHING_STRATEGY, COLLISION_1, COLLISION_2);
         singleCollisionBucket.remove(COLLISION_2);
-        Assert.assertEquals(singleCollisionBucket, UnifiedSetWithHashingStrategy.newSetWith(
+        Assertions.assertEquals(singleCollisionBucket, UnifiedSetWithHashingStrategy.newSetWith(
                 INTEGER_HASHING_STRATEGY, COLLISION_1));
 
         Verify.assertEqualsAndHashCode(
@@ -736,11 +738,11 @@ public class UnifiedSetWithHashingStrategyTest extends AbstractUnifiedSetTestCas
 
         //Checking that a hashing set is symmetrically equal to an identical JDK set
         HashSet<Person> hashSet = new HashSet<>(setA);
-        Assert.assertTrue(hashSet.equals(setA) && setA.equals(hashSet));
+        Assertions.assertTrue(hashSet.equals(setA) && setA.equals(hashSet));
 
         //Checking that a hash set is symmetrically equal to an identical GS Collections set
         UnifiedSet<Person> unifiedSet = UnifiedSet.newSet(setA);
-        Assert.assertTrue(unifiedSet.equals(setA) && setA.equals(unifiedSet));
+        Assertions.assertTrue(unifiedSet.equals(setA) && setA.equals(unifiedSet));
 
         //Testing the asymmetry of equals
         HashingStrategy<String> firstLetterHashingStrategy = new HashingStrategy<String>()
@@ -762,13 +764,13 @@ public class UnifiedSetWithHashingStrategyTest extends AbstractUnifiedSetTestCas
         UnifiedSet<String> normalString = UnifiedSet.newSetWith("alpha", "bravo", "charlie");
 
         //Testing hashedString equals normalString
-        Assert.assertTrue(hashedString.equals(normalString) && hashedString.equals(hashedString));
+        Assertions.assertTrue(hashedString.equals(normalString) && hashedString.equals(hashedString));
         //Testing normalString does not equal a hashedString, note cannot use Assert.notEquals because it assumes symmetric equals behavior
-        Assert.assertFalse(normalString.equals(hashedString) && hashedString.equals(normalString));
+        Assertions.assertFalse(normalString.equals(hashedString) && hashedString.equals(normalString));
         //Testing 2 sets with same hashing strategies must obey object equals definition
         Verify.assertEqualsAndHashCode(hashedString, anotherHashedString);
         //Testing set size matters
-        Assert.assertNotEquals(hashedString, normalString.remove("alpha"));
+        Assertions.assertNotEquals(hashedString, normalString.remove("alpha"));
     }
 
     @Test
@@ -789,16 +791,20 @@ public class UnifiedSetWithHashingStrategyTest extends AbstractUnifiedSetTestCas
         Verify.assertEqualsAndHashCode(set, UnifiedSetWithHashingStrategy.newSet(INTEGER_HASHING_STRATEGY, set));
     }
 
-    @Test(expected = NullPointerException.class)
+    @Test
     public void newSet_null()
     {
-        UnifiedSetWithHashingStrategy.newSet((UnifiedSetWithHashingStrategy<Object>) null);
+        assertThrows(NullPointerException.class, () -> {
+            UnifiedSetWithHashingStrategy.newSet((UnifiedSetWithHashingStrategy<Object>) null);
+        });
     }
 
-    @Test(expected = IllegalArgumentException.class)
+    @Test
     public void newSet_null_hashingStrategy()
     {
-        UnifiedSetWithHashingStrategy.newSet((HashingStrategy<Object>) null);
+        assertThrows(IllegalArgumentException.class, () -> {
+            UnifiedSetWithHashingStrategy.newSet((HashingStrategy<Object>) null);
+        });
     }
 
     @Test
@@ -813,7 +819,7 @@ public class UnifiedSetWithHashingStrategyTest extends AbstractUnifiedSetTestCas
             {
                 set.batchForEach(new SumProcedure<>(sum), sectionIndex, sectionCount);
             }
-            Assert.assertEquals(55, sum.getValue());
+            Assertions.assertEquals(55, sum.getValue());
         }
 
         //Testing 1 batch with chains
@@ -825,8 +831,8 @@ public class UnifiedSetWithHashingStrategyTest extends AbstractUnifiedSetTestCas
         {
             set2.batchForEach(new SumProcedure<>(sum2), i, numBatches);
         }
-        Assert.assertEquals(1, numBatches);
-        Assert.assertEquals(54, sum2.getValue());
+        Assertions.assertEquals(1, numBatches);
+        Assertions.assertEquals(54, sum2.getValue());
 
         //Testing batch size of 3 with chains and uneven last batch
         Sum sum3 = new IntegerSum(0);
@@ -837,13 +843,13 @@ public class UnifiedSetWithHashingStrategyTest extends AbstractUnifiedSetTestCas
         {
             set3.batchForEach(new SumProcedure<>(sum3), i, numBatches2);
         }
-        Assert.assertEquals(32, sum3.getValue());
+        Assertions.assertEquals(32, sum3.getValue());
 
         //Test batchForEach on empty set, it should simply do nothing and not throw any exceptions
         Sum sum4 = new IntegerSum(0);
         UnifiedSetWithHashingStrategy<Integer> set4 = UnifiedSetWithHashingStrategy.newSet(INTEGER_HASHING_STRATEGY);
         set4.batchForEach(new SumProcedure<>(sum4), 0, set4.getBatchCount(1));
-        Assert.assertEquals(0, sum4.getValue());
+        Assertions.assertEquals(0, sum4.getValue());
     }
 
     @Override
@@ -858,24 +864,24 @@ public class UnifiedSetWithHashingStrategyTest extends AbstractUnifiedSetTestCas
             MutableSet<Integer> set = UnifiedSetWithHashingStrategy.newSet(
                     INTEGER_HASHING_STRATEGY, SIZE).withAll(COLLISIONS.subList(0, i));
             Object[] objects = set.toArray();
-            Assert.assertEquals(set, UnifiedSet.newSetWith(objects));
+            Assertions.assertEquals(set, UnifiedSet.newSetWith(objects));
         }
 
         MutableSet<Integer> deepChain = UnifiedSetWithHashingStrategy.newSetWith(
                 INTEGER_HASHING_STRATEGY, COLLISION_1, COLLISION_2, COLLISION_3, COLLISION_4, COLLISION_5, COLLISION_6);
-        Assert.assertArrayEquals(new Integer[]{COLLISION_1, COLLISION_2, COLLISION_3, COLLISION_4, COLLISION_5, COLLISION_6}, deepChain.toArray());
+        Assertions.assertArrayEquals(new Integer[]{COLLISION_1, COLLISION_2, COLLISION_3, COLLISION_4, COLLISION_5, COLLISION_6}, deepChain.toArray());
 
         MutableSet<Integer> minimumChain = UnifiedSetWithHashingStrategy.newSetWith(
                 INTEGER_HASHING_STRATEGY, COLLISION_1, COLLISION_2);
         minimumChain.remove(COLLISION_2);
-        Assert.assertArrayEquals(new Integer[]{COLLISION_1}, minimumChain.toArray());
+        Assertions.assertArrayEquals(new Integer[]{COLLISION_1}, minimumChain.toArray());
 
         MutableSet<Integer> set = UnifiedSetWithHashingStrategy.newSetWith(
                 INTEGER_HASHING_STRATEGY, COLLISION_1, COLLISION_2, COLLISION_3, COLLISION_4);
         Integer[] target = {Integer.valueOf(1), Integer.valueOf(1), Integer.valueOf(1), Integer.valueOf(1), Integer.valueOf(1), Integer.valueOf(1)};
         Integer[] actual = set.toArray(target);
         ArrayIterate.sort(actual, actual.length, Comparators.safeNullsHigh(Integer::compareTo));
-        Assert.assertArrayEquals(new Integer[]{COLLISION_1, 1, COLLISION_2, COLLISION_3, COLLISION_4, null}, actual);
+        Assertions.assertArrayEquals(new Integer[]{COLLISION_1, 1, COLLISION_2, COLLISION_3, COLLISION_4, null}, actual);
     }
 
     @Test
@@ -888,14 +894,14 @@ public class UnifiedSetWithHashingStrategyTest extends AbstractUnifiedSetTestCas
             Iterator<Integer> iterator = actual.iterator();
             for (int j = 0; j <= i; j++)
             {
-                Assert.assertTrue(iterator.hasNext());
+                Assertions.assertTrue(iterator.hasNext());
                 iterator.next();
             }
             iterator.remove();
 
             MutableSet<Integer> expected = UnifiedSetWithHashingStrategy.newSet(INTEGER_HASHING_STRATEGY, MORE_COLLISIONS);
             expected.remove(MORE_COLLISIONS.get(i));
-            Assert.assertEquals(expected, actual);
+            Assertions.assertEquals(expected, actual);
         }
 
         // remove the last element from within a 2-level long chain that is fully populated
@@ -907,7 +913,7 @@ public class UnifiedSetWithHashingStrategyTest extends AbstractUnifiedSetTestCas
             iterator1.next();
         }
         iterator1.remove();
-        Assert.assertEquals(UnifiedSetWithHashingStrategy.newSetWith(
+        Assertions.assertEquals(UnifiedSetWithHashingStrategy.newSetWith(
                 INTEGER_HASHING_STRATEGY, COLLISION_1, COLLISION_2, COLLISION_3, COLLISION_4, COLLISION_5, COLLISION_6), set);
 
         // remove the second-to-last element from a 2-level long chain that that has one empty slot
@@ -917,7 +923,7 @@ public class UnifiedSetWithHashingStrategyTest extends AbstractUnifiedSetTestCas
             iterator2.next();
         }
         iterator2.remove();
-        Assert.assertEquals(UnifiedSetWithHashingStrategy.newSetWith(
+        Assertions.assertEquals(UnifiedSetWithHashingStrategy.newSetWith(
                 INTEGER_HASHING_STRATEGY, COLLISION_1, COLLISION_2, COLLISION_3, COLLISION_4, COLLISION_5), set);
 
         //Testing removing the last element in a fully populated chained bucket
@@ -943,30 +949,30 @@ public class UnifiedSetWithHashingStrategyTest extends AbstractUnifiedSetTestCas
                 HashingStrategies.<Key>defaultStrategy()).with(key, duplicateKey1);
         Verify.assertSize(1, set1);
         Verify.assertContains(key, set1);
-        Assert.assertSame(key, set1.getFirst());
+        Assertions.assertSame(key, set1.getFirst());
 
         Key duplicateKey2 = new Key("key");
         MutableSet<Key> set2 = UnifiedSetWithHashingStrategy.newSet(
                 HashingStrategies.<Key>defaultStrategy()).with(key, duplicateKey1, duplicateKey2);
         Verify.assertSize(1, set2);
         Verify.assertContains(key, set2);
-        Assert.assertSame(key, set2.getFirst());
+        Assertions.assertSame(key, set2.getFirst());
 
         Key duplicateKey3 = new Key("key");
         MutableSet<Key> set3 = UnifiedSetWithHashingStrategy.newSet(
                 HashingStrategies.<Key>defaultStrategy()).with(key, new Key("not a dupe"), duplicateKey3);
         Verify.assertSize(2, set3);
         Verify.assertContainsAll(set3, key, new Key("not a dupe"));
-        Assert.assertSame(key, set3.detect(key::equals));
+        Assertions.assertSame(key, set3.detect(key::equals));
     }
 
     @Test
     public void withSameIfNotModified()
     {
         UnifiedSetWithHashingStrategy<Integer> integers = UnifiedSetWithHashingStrategy.newSet(INTEGER_HASHING_STRATEGY);
-        Assert.assertEquals(UnifiedSet.newSetWith(1, 2), integers.with(1, 2));
-        Assert.assertEquals(UnifiedSet.newSetWith(1, 2, 3, 4), integers.with(2, 3, 4));
-        Assert.assertSame(integers, integers.with(5, 6, 7));
+        Assertions.assertEquals(UnifiedSet.newSetWith(1, 2), integers.with(1, 2));
+        Assertions.assertEquals(UnifiedSet.newSetWith(1, 2, 3, 4), integers.with(2, 3, 4));
+        Assertions.assertSame(integers, integers.with(5, 6, 7));
     }
 
     @Override
@@ -976,11 +982,12 @@ public class UnifiedSetWithHashingStrategyTest extends AbstractUnifiedSetTestCas
         super.retainAll();
 
         MutableSet<Object> setWithNull = this.newWith((Object) null);
-        Assert.assertFalse(setWithNull.retainAll(FastList.newListWith((Object) null)));
-        Assert.assertEquals(UnifiedSet.newSetWith((Object) null), setWithNull);
+        Assertions.assertFalse(setWithNull.retainAll(FastList.newListWith((Object) null)));
+        Assertions.assertEquals(UnifiedSet.newSetWith((Object) null), setWithNull);
     }
 
     @Override
+    @Test
     public void getFirst()
     {
         super.getFirst();
@@ -989,11 +996,12 @@ public class UnifiedSetWithHashingStrategyTest extends AbstractUnifiedSetTestCas
         for (int i = 1; i <= size - 1; i++)
         {
             MutableSet<Integer> unifiedSet = UnifiedSetWithHashingStrategy.newSet(INTEGER_HASHING_STRATEGY, 1).withAll(MORE_COLLISIONS.subList(0, i));
-            Assert.assertSame(MORE_COLLISIONS.get(0), unifiedSet.getFirst());
+            Assertions.assertSame(MORE_COLLISIONS.get(0), unifiedSet.getFirst());
         }
     }
 
     @Override
+    @Test
     public void getLast()
     {
         super.getLast();
@@ -1002,11 +1010,11 @@ public class UnifiedSetWithHashingStrategyTest extends AbstractUnifiedSetTestCas
         for (int i = 1; i <= size - 1; i++)
         {
             MutableSet<Integer> unifiedSet = UnifiedSetWithHashingStrategy.newSet(INTEGER_HASHING_STRATEGY, 1).withAll(MORE_COLLISIONS.subList(0, i));
-            Assert.assertSame(MORE_COLLISIONS.get(i - 1), unifiedSet.getLast());
+            Assertions.assertSame(MORE_COLLISIONS.get(i - 1), unifiedSet.getLast());
         }
 
         MutableSet<Integer> chainedWithOneSlot = UnifiedSetWithHashingStrategy.newSetWith(INTEGER_HASHING_STRATEGY, COLLISION_1, COLLISION_2);
         chainedWithOneSlot.remove(COLLISION_2);
-        Assert.assertSame(COLLISION_1, chainedWithOneSlot.getLast());
+        Assertions.assertSame(COLLISION_1, chainedWithOneSlot.getLast());
     }
 }
