@@ -64,11 +64,12 @@ import com.gs.collections.impl.math.Sum;
 import com.gs.collections.impl.multimap.list.FastListMultimap;
 import com.gs.collections.impl.test.Verify;
 import com.gs.collections.impl.tuple.Tuples;
-import org.junit.Assert;
-import org.junit.Test;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.Test;
 
 import static com.gs.collections.impl.factory.Iterables.iList;
 import static com.gs.collections.impl.factory.Iterables.mList;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 
 /**
  * JUnit test for {@link ArrayListIterate}.
@@ -92,7 +93,7 @@ public class ArrayListIterateTest
     public void testThisIsNotAnArrayList()
     {
         ThisIsNotAnArrayList<Integer> undertest = new ThisIsNotAnArrayList<>(FastList.newListWith(1, 2, 3));
-        Assert.assertNotSame(undertest.getClass(), ArrayList.class);
+        Assertions.assertNotSame(undertest.getClass(), ArrayList.class);
     }
 
     @Test
@@ -129,12 +130,12 @@ public class ArrayListIterateTest
         ThisIsNotAnArrayList<Integer> notAnArrayList = this.newNotAnArrayList(1, 2, 3, 4, 5, 6, 7, 8, 9, 10);
         Integer[] target1 = {1, 2, null, null};
         ArrayListIterate.toArray(notAnArrayList, target1, 2, 2);
-        Assert.assertArrayEquals(target1, new Integer[]{1, 2, 1, 2});
+        Assertions.assertArrayEquals(target1, new Integer[]{1, 2, 1, 2});
 
         ArrayList<Integer> arrayList = this.newArrayList(1, 2, 3, 4, 5, 6, 7, 8, 9, 10);
         Integer[] target2 = {1, 2, null, null};
         ArrayListIterate.toArray(arrayList, target2, 2, 2);
-        Assert.assertArrayEquals(target2, new Integer[]{1, 2, 1, 2});
+        Assertions.assertArrayEquals(target2, new Integer[]{1, 2, 1, 2});
     }
 
     @Test
@@ -156,10 +157,10 @@ public class ArrayListIterateTest
         ArrayList<Integer> integers = Interval.oneTo(5).addAllTo(new ArrayList<>());
         ArrayList<Integer> results = new ArrayList<>();
         ArrayListIterate.forEach(integers, 0, 4, results::add);
-        Assert.assertEquals(integers, results);
+        Assertions.assertEquals(integers, results);
         MutableList<Integer> reverseResults = Lists.mutable.of();
         ArrayListIterate.forEach(integers, 4, 0, reverseResults::add);
-        Assert.assertEquals(ListIterate.reverseThis(integers), reverseResults);
+        Assertions.assertEquals(ListIterate.reverseThis(integers), reverseResults);
         Verify.assertThrows(IndexOutOfBoundsException.class, () -> ArrayListIterate.forEach(integers, 4, -1, reverseResults::add));
         Verify.assertThrows(IndexOutOfBoundsException.class, () -> ArrayListIterate.forEach(integers, -1, 4, reverseResults::add));
     }
@@ -171,10 +172,10 @@ public class ArrayListIterateTest
         ArrayList<Integer> optimisableList = Interval.oneTo(105).addAllTo(new ArrayList<>());
         ArrayList<Integer> results = new ArrayList<>();
         ArrayListIterate.forEach(optimisableList, 0, 4, results::add);
-        Assert.assertEquals(expected, results);
+        Assertions.assertEquals(expected, results);
         MutableList<Integer> reverseResults = Lists.mutable.of();
         ArrayListIterate.forEach(optimisableList, 4, 0, reverseResults::add);
-        Assert.assertEquals(ListIterate.reverseThis(expected), reverseResults);
+        Assertions.assertEquals(ListIterate.reverseThis(expected), reverseResults);
         Verify.assertThrows(IndexOutOfBoundsException.class, () -> ArrayListIterate.forEach(optimisableList, 104, -1, reverseResults::add));
         Verify.assertThrows(IndexOutOfBoundsException.class, () -> ArrayListIterate.forEach(optimisableList, -1, 4, reverseResults::add));
     }
@@ -185,11 +186,11 @@ public class ArrayListIterateTest
         ArrayList<Integer> integers = Interval.oneTo(5).addAllTo(new ArrayList<>());
         ArrayList<Integer> results = new ArrayList<>();
         ArrayListIterate.forEachWithIndex(integers, 0, 4, ObjectIntProcedures.fromProcedure(results::add));
-        Assert.assertEquals(integers, results);
+        Assertions.assertEquals(integers, results);
         MutableList<Integer> reverseResults = Lists.mutable.of();
         ObjectIntProcedure<Integer> objectIntProcedure = ObjectIntProcedures.fromProcedure(reverseResults::add);
         ArrayListIterate.forEachWithIndex(integers, 4, 0, objectIntProcedure);
-        Assert.assertEquals(ListIterate.reverseThis(integers), reverseResults);
+        Assertions.assertEquals(ListIterate.reverseThis(integers), reverseResults);
         Verify.assertThrows(IndexOutOfBoundsException.class, () -> ArrayListIterate.forEachWithIndex(integers, 4, -1, objectIntProcedure));
         Verify.assertThrows(IndexOutOfBoundsException.class, () -> ArrayListIterate.forEachWithIndex(integers, -1, 4, objectIntProcedure));
     }
@@ -201,11 +202,11 @@ public class ArrayListIterateTest
         ArrayList<Integer> expected = Interval.oneTo(105).addAllTo(new ArrayList<>());
         ArrayList<Integer> results = new ArrayList<>();
         ArrayListIterate.forEachWithIndex(optimisableList, 0, 104, ObjectIntProcedures.fromProcedure(results::add));
-        Assert.assertEquals(expected, results);
+        Assertions.assertEquals(expected, results);
         MutableList<Integer> reverseResults = Lists.mutable.of();
         ObjectIntProcedure<Integer> objectIntProcedure = ObjectIntProcedures.fromProcedure(reverseResults::add);
         ArrayListIterate.forEachWithIndex(expected, 104, 0, objectIntProcedure);
-        Assert.assertEquals(ListIterate.reverseThis(expected), reverseResults);
+        Assertions.assertEquals(ListIterate.reverseThis(expected), reverseResults);
         Verify.assertThrows(IndexOutOfBoundsException.class, () -> ArrayListIterate.forEachWithIndex(expected, 104, -1, objectIntProcedure));
         Verify.assertThrows(IndexOutOfBoundsException.class, () -> ArrayListIterate.forEachWithIndex(expected, -1, 104, objectIntProcedure));
     }
@@ -216,7 +217,7 @@ public class ArrayListIterateTest
         ArrayList<Integer> integers = Interval.oneTo(5).addAllTo(new ArrayList<>());
         MutableList<Integer> reverseResults = Lists.mutable.of();
         ArrayListIterate.reverseForEach(integers, reverseResults::add);
-        Assert.assertEquals(ListIterate.reverseThis(integers), reverseResults);
+        Assertions.assertEquals(ListIterate.reverseThis(integers), reverseResults);
     }
 
     @Test
@@ -225,14 +226,14 @@ public class ArrayListIterateTest
         ArrayList<Integer> integers = new ArrayList<>();
         MutableList<Integer> results = Lists.mutable.of();
         ArrayListIterate.reverseForEach(integers, results::add);
-        Assert.assertEquals(integers, results);
+        Assertions.assertEquals(integers, results);
     }
 
     @Test
     public void injectInto()
     {
         ArrayList<Integer> list = this.newArrayList(1, 2, 3);
-        Assert.assertEquals(Integer.valueOf(1 + 1 + 2 + 3),
+        Assertions.assertEquals(Integer.valueOf(1 + 1 + 2 + 3),
                 ArrayListIterate.injectInto(1, list, AddFunction.INTEGER));
     }
 
@@ -240,14 +241,14 @@ public class ArrayListIterateTest
     public void injectIntoOver100()
     {
         ArrayList<Integer> list = this.oneHundredAndOneOnes();
-        Assert.assertEquals(Integer.valueOf(102), ArrayListIterate.injectInto(1, list, AddFunction.INTEGER));
+        Assertions.assertEquals(Integer.valueOf(102), ArrayListIterate.injectInto(1, list, AddFunction.INTEGER));
     }
 
     @Test
     public void injectIntoDoubleOver100()
     {
         ArrayList<Integer> list = this.oneHundredAndOneOnes();
-        Assert.assertEquals(102.0, ArrayListIterate.injectInto(1.0d, list, AddFunction.INTEGER_TO_DOUBLE), 0.0001);
+        Assertions.assertEquals(102.0, ArrayListIterate.injectInto(1.0d, list, AddFunction.INTEGER_TO_DOUBLE), 0.0001);
     }
 
     private ArrayList<Integer> oneHundredAndOneOnes()
@@ -259,14 +260,14 @@ public class ArrayListIterateTest
     public void injectIntoIntegerOver100()
     {
         ArrayList<Integer> list = this.oneHundredAndOneOnes();
-        Assert.assertEquals(102, ArrayListIterate.injectInto(1, list, AddFunction.INTEGER_TO_INT));
+        Assertions.assertEquals(102, ArrayListIterate.injectInto(1, list, AddFunction.INTEGER_TO_INT));
     }
 
     @Test
     public void injectIntoLongOver100()
     {
         ArrayList<Integer> list = this.oneHundredAndOneOnes();
-        Assert.assertEquals(102, ArrayListIterate.injectInto(1L, list, AddFunction.INTEGER_TO_LONG));
+        Assertions.assertEquals(102, ArrayListIterate.injectInto(1L, list, AddFunction.INTEGER_TO_LONG));
     }
 
     @Test
@@ -276,8 +277,8 @@ public class ArrayListIterateTest
         list.add(1.0);
         list.add(2.0);
         list.add(3.0);
-        Assert.assertEquals(
-                new Double(7.0),
+        Assertions.assertEquals(
+                Double.valueOf(7.0),
                 ArrayListIterate.injectInto(1.0, list, AddFunction.DOUBLE));
     }
 
@@ -288,8 +289,8 @@ public class ArrayListIterateTest
         list.add(1.0f);
         list.add(2.0f);
         list.add(3.0f);
-        Assert.assertEquals(
-                new Float(7.0f),
+        Assertions.assertEquals(
+                Float.valueOf(7.0f),
                 ArrayListIterate.injectInto(1.0f, list, AddFunction.FLOAT));
     }
 
@@ -300,7 +301,7 @@ public class ArrayListIterateTest
         list.add("1");
         list.add("2");
         list.add("3");
-        Assert.assertEquals("0123", ArrayListIterate.injectInto("0", list, AddFunction.STRING));
+        Assertions.assertEquals("0123", ArrayListIterate.injectInto("0", list, AddFunction.STRING));
     }
 
     @Test
@@ -310,7 +311,7 @@ public class ArrayListIterateTest
         list.add("1");
         list.add("12");
         list.add("123");
-        Assert.assertEquals(Integer.valueOf(3), ArrayListIterate.injectInto(Integer.MIN_VALUE, list, MaxSizeFunction.STRING));
+        Assertions.assertEquals(Integer.valueOf(3), ArrayListIterate.injectInto(Integer.MIN_VALUE, list, MaxSizeFunction.STRING));
     }
 
     @Test
@@ -320,7 +321,7 @@ public class ArrayListIterateTest
         list.add("1");
         list.add("12");
         list.add("123");
-        Assert.assertEquals(Integer.valueOf(1), ArrayListIterate.injectInto(Integer.MAX_VALUE, list, MinSizeFunction.STRING));
+        Assertions.assertEquals(Integer.valueOf(1), ArrayListIterate.injectInto(Integer.MAX_VALUE, list, MinSizeFunction.STRING));
     }
 
     @Test
@@ -348,7 +349,7 @@ public class ArrayListIterateTest
     {
         ArrayList<Integer> list = this.createIntegerList();
         MutableBooleanList actual = ArrayListIterate.collectBoolean(list, PrimitiveFunctions.integerIsPositive());
-        Assert.assertEquals(BooleanArrayList.newListWith(false, false, true), actual);
+        Assertions.assertEquals(BooleanArrayList.newListWith(false, false, true), actual);
     }
 
     @Test
@@ -357,8 +358,8 @@ public class ArrayListIterateTest
         ArrayList<Integer> list = this.createIntegerList();
         MutableBooleanList target = new BooleanArrayList();
         MutableBooleanList actual = ArrayListIterate.collectBoolean(list, PrimitiveFunctions.integerIsPositive(), target);
-        Assert.assertSame("Target list sent as parameter not returned", target, actual);
-        Assert.assertEquals(BooleanArrayList.newListWith(false, false, true), actual);
+        Assertions.assertSame(target, actual, "Target list sent as parameter not returned");
+        Assertions.assertEquals(BooleanArrayList.newListWith(false, false, true), actual);
     }
 
     @Test
@@ -372,7 +373,7 @@ public class ArrayListIterateTest
         {
             expected.add(true);
         }
-        Assert.assertEquals(expected, actual);
+        Assertions.assertEquals(expected, actual);
     }
 
     @Test
@@ -387,8 +388,8 @@ public class ArrayListIterateTest
         {
             expected.add(true);
         }
-        Assert.assertEquals(expected, actual);
-        Assert.assertSame("Target sent as parameter was not returned as result", target, actual);
+        Assertions.assertEquals(expected, actual);
+        Assertions.assertSame(target, actual, "Target sent as parameter was not returned as result");
     }
 
     @Test
@@ -396,7 +397,7 @@ public class ArrayListIterateTest
     {
         ArrayList<Integer> list = this.createIntegerList();
         MutableByteList actual = ArrayListIterate.collectByte(list, PrimitiveFunctions.unboxIntegerToByte());
-        Assert.assertEquals(ByteArrayList.newListWith((byte) -1, (byte) 0, (byte) 4), actual);
+        Assertions.assertEquals(ByteArrayList.newListWith((byte) -1, (byte) 0, (byte) 4), actual);
     }
 
     @Test
@@ -405,8 +406,8 @@ public class ArrayListIterateTest
         ArrayList<Integer> list = this.createIntegerList();
         MutableByteList target = new ByteArrayList();
         MutableByteList actual = ArrayListIterate.collectByte(list, PrimitiveFunctions.unboxIntegerToByte(), target);
-        Assert.assertSame("Target list sent as parameter not returned", target, actual);
-        Assert.assertEquals(ByteArrayList.newListWith((byte) -1, (byte) 0, (byte) 4), actual);
+        Assertions.assertSame(target, actual, "Target list sent as parameter not returned");
+        Assertions.assertEquals(ByteArrayList.newListWith((byte) -1, (byte) 0, (byte) 4), actual);
     }
 
     @Test
@@ -419,7 +420,7 @@ public class ArrayListIterateTest
         {
             expected.add((byte) i);
         }
-        Assert.assertEquals(expected, actual);
+        Assertions.assertEquals(expected, actual);
     }
 
     @Test
@@ -433,8 +434,8 @@ public class ArrayListIterateTest
         {
             expected.add((byte) i);
         }
-        Assert.assertEquals(expected, actual);
-        Assert.assertSame("Target sent as parameter was not returned as result", target, actual);
+        Assertions.assertEquals(expected, actual);
+        Assertions.assertSame(target, actual, "Target sent as parameter was not returned as result");
     }
 
     @Test
@@ -442,7 +443,7 @@ public class ArrayListIterateTest
     {
         ArrayList<Integer> list = this.createIntegerList();
         MutableCharList actual = ArrayListIterate.collectChar(list, PrimitiveFunctions.unboxIntegerToChar());
-        Assert.assertEquals(CharArrayList.newListWith((char) -1, (char) 0, (char) 4), actual);
+        Assertions.assertEquals(CharArrayList.newListWith((char) -1, (char) 0, (char) 4), actual);
     }
 
     @Test
@@ -451,8 +452,8 @@ public class ArrayListIterateTest
         ArrayList<Integer> list = this.createIntegerList();
         MutableCharList target = new CharArrayList();
         MutableCharList actual = ArrayListIterate.collectChar(list, PrimitiveFunctions.unboxIntegerToChar(), target);
-        Assert.assertSame("Target list sent as parameter not returned", target, actual);
-        Assert.assertEquals(CharArrayList.newListWith((char) -1, (char) 0, (char) 4), actual);
+        Assertions.assertSame(target, actual, "Target list sent as parameter not returned");
+        Assertions.assertEquals(CharArrayList.newListWith((char) -1, (char) 0, (char) 4), actual);
     }
 
     @Test
@@ -465,7 +466,7 @@ public class ArrayListIterateTest
         {
             expected.add((char) i);
         }
-        Assert.assertEquals(expected, actual);
+        Assertions.assertEquals(expected, actual);
     }
 
     @Test
@@ -479,8 +480,8 @@ public class ArrayListIterateTest
         {
             expected.add((char) i);
         }
-        Assert.assertEquals(expected, actual);
-        Assert.assertSame("Target sent as parameter was not returned as result", target, actual);
+        Assertions.assertEquals(expected, actual);
+        Assertions.assertSame(target, actual, "Target sent as parameter was not returned as result");
     }
 
     @Test
@@ -488,7 +489,7 @@ public class ArrayListIterateTest
     {
         ArrayList<Integer> list = this.createIntegerList();
         MutableDoubleList actual = ArrayListIterate.collectDouble(list, PrimitiveFunctions.unboxIntegerToDouble());
-        Assert.assertEquals(DoubleArrayList.newListWith(-1.0d, 0.0d, 4.0d), actual);
+        Assertions.assertEquals(DoubleArrayList.newListWith(-1.0d, 0.0d, 4.0d), actual);
     }
 
     @Test
@@ -497,8 +498,8 @@ public class ArrayListIterateTest
         ArrayList<Integer> list = this.createIntegerList();
         MutableDoubleList target = new DoubleArrayList();
         MutableDoubleList actual = ArrayListIterate.collectDouble(list, PrimitiveFunctions.unboxIntegerToDouble(), target);
-        Assert.assertSame("Target list sent as parameter not returned", target, actual);
-        Assert.assertEquals(DoubleArrayList.newListWith(-1.0d, 0.0d, 4.0d), actual);
+        Assertions.assertSame(target, actual, "Target list sent as parameter not returned");
+        Assertions.assertEquals(DoubleArrayList.newListWith(-1.0d, 0.0d, 4.0d), actual);
     }
 
     @Test
@@ -511,7 +512,7 @@ public class ArrayListIterateTest
         {
             expected.add((double) i);
         }
-        Assert.assertEquals(expected, actual);
+        Assertions.assertEquals(expected, actual);
     }
 
     @Test
@@ -525,8 +526,8 @@ public class ArrayListIterateTest
         {
             expected.add((double) i);
         }
-        Assert.assertEquals(expected, actual);
-        Assert.assertSame("Target sent as parameter was not returned as result", target, actual);
+        Assertions.assertEquals(expected, actual);
+        Assertions.assertSame(target, actual, "Target sent as parameter was not returned as result");
     }
 
     @Test
@@ -534,7 +535,7 @@ public class ArrayListIterateTest
     {
         ArrayList<Integer> list = this.createIntegerList();
         MutableFloatList actual = ArrayListIterate.collectFloat(list, PrimitiveFunctions.unboxIntegerToFloat());
-        Assert.assertEquals(FloatArrayList.newListWith(-1.0f, 0.0f, 4.0f), actual);
+        Assertions.assertEquals(FloatArrayList.newListWith(-1.0f, 0.0f, 4.0f), actual);
     }
 
     @Test
@@ -543,8 +544,8 @@ public class ArrayListIterateTest
         ArrayList<Integer> list = this.createIntegerList();
         MutableFloatList target = new FloatArrayList();
         MutableFloatList actual = ArrayListIterate.collectFloat(list, PrimitiveFunctions.unboxIntegerToFloat(), target);
-        Assert.assertSame("Target list sent as parameter not returned", target, actual);
-        Assert.assertEquals(FloatArrayList.newListWith(-1.0f, 0.0f, 4.0f), actual);
+        Assertions.assertSame(target, actual, "Target list sent as parameter not returned");
+        Assertions.assertEquals(FloatArrayList.newListWith(-1.0f, 0.0f, 4.0f), actual);
     }
 
     @Test
@@ -557,7 +558,7 @@ public class ArrayListIterateTest
         {
             expected.add((float) i);
         }
-        Assert.assertEquals(expected, actual);
+        Assertions.assertEquals(expected, actual);
     }
 
     @Test
@@ -571,8 +572,8 @@ public class ArrayListIterateTest
         {
             expected.add((float) i);
         }
-        Assert.assertEquals(expected, actual);
-        Assert.assertSame("Target sent as parameter was not returned as result", target, actual);
+        Assertions.assertEquals(expected, actual);
+        Assertions.assertSame(target, actual, "Target sent as parameter was not returned as result");
     }
 
     @Test
@@ -580,7 +581,7 @@ public class ArrayListIterateTest
     {
         ArrayList<Integer> list = this.createIntegerList();
         MutableIntList actual = ArrayListIterate.collectInt(list, PrimitiveFunctions.unboxIntegerToInt());
-        Assert.assertEquals(IntArrayList.newListWith(-1, 0, 4), actual);
+        Assertions.assertEquals(IntArrayList.newListWith(-1, 0, 4), actual);
     }
 
     @Test
@@ -589,8 +590,8 @@ public class ArrayListIterateTest
         ArrayList<Integer> list = this.createIntegerList();
         MutableIntList target = new IntArrayList();
         MutableIntList actual = ArrayListIterate.collectInt(list, PrimitiveFunctions.unboxIntegerToInt(), target);
-        Assert.assertSame("Target list sent as parameter not returned", target, actual);
-        Assert.assertEquals(IntArrayList.newListWith(-1, 0, 4), actual);
+        Assertions.assertSame(target, actual, "Target list sent as parameter not returned");
+        Assertions.assertEquals(IntArrayList.newListWith(-1, 0, 4), actual);
     }
 
     @Test
@@ -603,7 +604,7 @@ public class ArrayListIterateTest
         {
             expected.add(i);
         }
-        Assert.assertEquals(expected, actual);
+        Assertions.assertEquals(expected, actual);
     }
 
     @Test
@@ -617,8 +618,8 @@ public class ArrayListIterateTest
         {
             expected.add(i);
         }
-        Assert.assertEquals(expected, actual);
-        Assert.assertSame("Target sent as parameter was not returned as result", target, actual);
+        Assertions.assertEquals(expected, actual);
+        Assertions.assertSame(target, actual, "Target sent as parameter was not returned as result");
     }
 
     @Test
@@ -626,7 +627,7 @@ public class ArrayListIterateTest
     {
         ArrayList<Integer> list = this.createIntegerList();
         MutableLongList actual = ArrayListIterate.collectLong(list, PrimitiveFunctions.unboxIntegerToLong());
-        Assert.assertEquals(LongArrayList.newListWith(-1L, 0L, 4L), actual);
+        Assertions.assertEquals(LongArrayList.newListWith(-1L, 0L, 4L), actual);
     }
 
     @Test
@@ -635,8 +636,8 @@ public class ArrayListIterateTest
         ArrayList<Integer> list = this.createIntegerList();
         MutableLongList target = new LongArrayList();
         MutableLongList actual = ArrayListIterate.collectLong(list, PrimitiveFunctions.unboxIntegerToLong(), target);
-        Assert.assertSame("Target list sent as parameter not returned", target, actual);
-        Assert.assertEquals(LongArrayList.newListWith(-1L, 0L, 4L), actual);
+        Assertions.assertSame(target, actual, "Target list sent as parameter not returned");
+        Assertions.assertEquals(LongArrayList.newListWith(-1L, 0L, 4L), actual);
     }
 
     @Test
@@ -649,7 +650,7 @@ public class ArrayListIterateTest
         {
             expected.add((long) i);
         }
-        Assert.assertEquals(expected, actual);
+        Assertions.assertEquals(expected, actual);
     }
 
     @Test
@@ -663,8 +664,8 @@ public class ArrayListIterateTest
         {
             expected.add((long) i);
         }
-        Assert.assertEquals(expected, actual);
-        Assert.assertSame("Target sent as parameter was not returned as result", target, actual);
+        Assertions.assertEquals(expected, actual);
+        Assertions.assertSame(target, actual, "Target sent as parameter was not returned as result");
     }
 
     @Test
@@ -672,7 +673,7 @@ public class ArrayListIterateTest
     {
         ArrayList<Integer> list = this.createIntegerList();
         MutableShortList actual = ArrayListIterate.collectShort(list, PrimitiveFunctions.unboxIntegerToShort());
-        Assert.assertEquals(ShortArrayList.newListWith((short) -1, (short) 0, (short) 4), actual);
+        Assertions.assertEquals(ShortArrayList.newListWith((short) -1, (short) 0, (short) 4), actual);
     }
 
     @Test
@@ -681,8 +682,8 @@ public class ArrayListIterateTest
         ArrayList<Integer> list = this.createIntegerList();
         MutableShortList target = new ShortArrayList();
         MutableShortList actual = ArrayListIterate.collectShort(list, PrimitiveFunctions.unboxIntegerToShort(), target);
-        Assert.assertSame("Target list sent as parameter not returned", target, actual);
-        Assert.assertEquals(ShortArrayList.newListWith((short) -1, (short) 0, (short) 4), actual);
+        Assertions.assertSame(target, actual, "Target list sent as parameter not returned");
+        Assertions.assertEquals(ShortArrayList.newListWith((short) -1, (short) 0, (short) 4), actual);
     }
 
     @Test
@@ -695,7 +696,7 @@ public class ArrayListIterateTest
         {
             expected.add((short) i);
         }
-        Assert.assertEquals(expected, actual);
+        Assertions.assertEquals(expected, actual);
     }
 
     @Test
@@ -709,8 +710,8 @@ public class ArrayListIterateTest
         {
             expected.add((short) i);
         }
-        Assert.assertEquals(expected, actual);
-        Assert.assertSame("Target sent as parameter was not returned as result", target, actual);
+        Assertions.assertEquals(expected, actual);
+        Assertions.assertSame(target, actual, "Target sent as parameter was not returned as result");
     }
 
     private ArrayList<Integer> createIntegerList()
@@ -746,7 +747,7 @@ public class ArrayListIterateTest
     {
         ArrayList<Integer> list = this.getIntegerList();
         Iterate.sortThis(list);
-        ArrayListIterate.forEachWithIndex(list, (object, index) -> Assert.assertEquals(index, object - 1));
+        ArrayListIterate.forEachWithIndex(list, (object, index) -> Assertions.assertEquals(index, object - 1));
     }
 
     @Test
@@ -754,7 +755,7 @@ public class ArrayListIterateTest
     {
         ArrayList<Integer> list = new ArrayList<>(Interval.oneTo(101));
         Iterate.sortThis(list);
-        ArrayListIterate.forEachWithIndex(list, (object, index) -> Assert.assertEquals(index, object - 1));
+        ArrayListIterate.forEachWithIndex(list, (object, index) -> Assertions.assertEquals(index, object - 1));
     }
 
     @Test
@@ -811,73 +812,73 @@ public class ArrayListIterateTest
         ArrayList<String> list2 = new ArrayList<>(mList("a", "b"));
         ArrayListIterate.forEachInBoth(list1, list2, (argument1, argument2) -> list.add(Tuples.twin(argument1, argument2)));
 
-        Assert.assertEquals(FastList.newListWith(Tuples.twin("1", "a"), Tuples.twin("2", "b")), list);
+        Assertions.assertEquals(FastList.newListWith(Tuples.twin("1", "a"), Tuples.twin("2", "b")), list);
     }
 
     @Test
     public void detect()
     {
         ArrayList<Integer> list = this.getIntegerList();
-        Assert.assertEquals(Integer.valueOf(1), ArrayListIterate.detect(list, Integer.valueOf(1)::equals));
+        Assertions.assertEquals(Integer.valueOf(1), ArrayListIterate.detect(list, Integer.valueOf(1)::equals));
         //noinspection CachedNumberConstructorCall,UnnecessaryBoxing
         ArrayList<Integer> list2 =
-                this.newArrayList(1, new Integer(2), 2);  // test relies on having a unique instance of "2"
-        Assert.assertSame(list2.get(1), ArrayListIterate.detect(list2, Integer.valueOf(2)::equals));
+                this.newArrayList(1, Integer.valueOf(2), 2);  // test relies on having a unique instance of "2"
+        Assertions.assertSame(list2.get(1), ArrayListIterate.detect(list2, Integer.valueOf(2)::equals));
     }
 
     @Test
     public void detectOver100()
     {
         ArrayList<Integer> list = new ArrayList<>(Interval.oneTo(101));
-        Assert.assertEquals(Integer.valueOf(1), ArrayListIterate.detect(list, Integer.valueOf(1)::equals));
+        Assertions.assertEquals(Integer.valueOf(1), ArrayListIterate.detect(list, Integer.valueOf(1)::equals));
     }
 
     @Test
     public void detectWith()
     {
         ArrayList<Integer> list = this.getIntegerList();
-        Assert.assertEquals(Integer.valueOf(1), ArrayListIterate.detectWith(list, Object::equals, 1));
+        Assertions.assertEquals(Integer.valueOf(1), ArrayListIterate.detectWith(list, Object::equals, 1));
         //noinspection CachedNumberConstructorCall,UnnecessaryBoxing
         ArrayList<Integer> list2 =
-                this.newArrayList(1, new Integer(2), 2);  // test relies on having a unique instance of "2"
-        Assert.assertSame(list2.get(1), ArrayListIterate.detectWith(list2, Object::equals, 2));
+                this.newArrayList(1, Integer.valueOf(2), 2);  // test relies on having a unique instance of "2"
+        Assertions.assertSame(list2.get(1), ArrayListIterate.detectWith(list2, Object::equals, 2));
     }
 
     @Test
     public void detectWithOver100()
     {
         ArrayList<Integer> list = new ArrayList<>(Interval.oneTo(101));
-        Assert.assertEquals(Integer.valueOf(1), ArrayListIterate.detectWith(list, Object::equals, 1));
+        Assertions.assertEquals(Integer.valueOf(1), ArrayListIterate.detectWith(list, Object::equals, 1));
     }
 
     @Test
     public void detectIfNone()
     {
         ArrayList<Integer> list = this.getIntegerList();
-        Assert.assertEquals(Integer.valueOf(7), ArrayListIterate.detectIfNone(list, Integer.valueOf(6)::equals, 7));
-        Assert.assertEquals(Integer.valueOf(2), ArrayListIterate.detectIfNone(list, Integer.valueOf(2)::equals, 7));
+        Assertions.assertEquals(Integer.valueOf(7), ArrayListIterate.detectIfNone(list, Integer.valueOf(6)::equals, 7));
+        Assertions.assertEquals(Integer.valueOf(2), ArrayListIterate.detectIfNone(list, Integer.valueOf(2)::equals, 7));
     }
 
     @Test
     public void detectIfNoneOver100()
     {
         ArrayList<Integer> list = new ArrayList<>(Interval.oneTo(101));
-        Assert.assertNull(ArrayListIterate.detectIfNone(list, Integer.valueOf(102)::equals, null));
+        Assertions.assertNull(ArrayListIterate.detectIfNone(list, Integer.valueOf(102)::equals, null));
     }
 
     @Test
     public void detectWithIfNone()
     {
         ArrayList<Integer> list = this.getIntegerList();
-        Assert.assertEquals(Integer.valueOf(7), ArrayListIterate.detectWithIfNone(list, Object::equals, 6, 7));
-        Assert.assertEquals(Integer.valueOf(2), ArrayListIterate.detectWithIfNone(list, Object::equals, 2, 7));
+        Assertions.assertEquals(Integer.valueOf(7), ArrayListIterate.detectWithIfNone(list, Object::equals, 6, 7));
+        Assertions.assertEquals(Integer.valueOf(2), ArrayListIterate.detectWithIfNone(list, Object::equals, 2, 7));
     }
 
     @Test
     public void detectWithIfNoneOver100()
     {
         ArrayList<Integer> list = new ArrayList<>(Interval.oneTo(101));
-        Assert.assertNull(ArrayListIterate.detectWithIfNone(list, Object::equals, 102, null));
+        Assertions.assertNull(ArrayListIterate.detectWithIfNone(list, Object::equals, 102, null));
     }
 
     @Test
@@ -938,13 +939,13 @@ public class ArrayListIterateTest
         ArrayList<Integer> target = new ArrayList<>();
         ArrayListIterate.distinct(list, target);
         Verify.assertListsEqual(FastList.newListWith(9, 4, 7, 5, 6, 2), target);
-        Assert.assertEquals(FastList.newListWith(9, 4, 7, 7, 5, 6, 2, 4), list);
+        Assertions.assertEquals(FastList.newListWith(9, 4, 7, 7, 5, 6, 2, 4), list);
 
         ArrayList<Integer> list2 = new ArrayList<>(Interval.oneTo(103));
         list2.add(103);
         ArrayList<Integer> target2 = new ArrayList<>();
         List<Integer> result2 = ArrayListIterate.distinct(list2, target2);
-        Assert.assertEquals(Interval.fromTo(1, 103), result2);
+        Assertions.assertEquals(Interval.fromTo(1, 103), result2);
     }
 
     @Test
@@ -953,12 +954,12 @@ public class ArrayListIterateTest
         ArrayList<String> list = new ArrayList<>();
         list.addAll(FastList.newListWith("A", "a", "b", "c", "B", "D", "e", "e", "E", "D"));
         list = ArrayListIterate.distinct(list, HashingStrategies.fromFunction(String::toLowerCase));
-        Assert.assertEquals(FastList.newListWith("A", "b", "c", "D", "e"), list);
+        Assertions.assertEquals(FastList.newListWith("A", "b", "c", "D", "e"), list);
 
         ArrayList<Integer> list2 = new ArrayList<>(Interval.oneTo(103));
         list2.add(103);
         List<Integer> result2 = ArrayListIterate.distinct(list2, HashingStrategies.fromFunction(String::valueOf));
-        Assert.assertEquals(Interval.fromTo(1, 103), result2);
+        Assertions.assertEquals(Interval.fromTo(1, 103), result2);
     }
 
     @Test
@@ -967,7 +968,7 @@ public class ArrayListIterateTest
         ArrayList<Number> list = new ArrayList<>(Interval.oneTo(101));
         list.add(102.0);
         MutableList<Double> results = ArrayListIterate.selectInstancesOf(list, Double.class);
-        Assert.assertEquals(iList(102.0), results);
+        Assertions.assertEquals(iList(102.0), results);
     }
 
     public static final class CollectionCreator
@@ -997,7 +998,7 @@ public class ArrayListIterateTest
 
         MutableList<Integer> target1 = Lists.mutable.of();
         MutableList<Integer> results2 = ArrayListIterate.flatCollect(list, CollectionCreator::getCollection, target1);
-        Assert.assertSame(results2, target1);
+        Assertions.assertSame(results2, target1);
 
         Verify.assertListsEqual(FastList.newListWith(1, 1, 2, 2), results2);
     }
@@ -1043,13 +1044,13 @@ public class ArrayListIterateTest
     {
         ArrayList<Integer> smallList = new ArrayList<>(Interval.oneTo(99));
         PartitionMutableList<Integer> smallPartition = ArrayListIterate.partition(smallList, Predicates.in(Interval.oneToBy(99, 2)));
-        Assert.assertEquals(Interval.oneToBy(99, 2), smallPartition.getSelected());
-        Assert.assertEquals(Interval.fromToBy(2, 98, 2), smallPartition.getRejected());
+        Assertions.assertEquals(Interval.oneToBy(99, 2), smallPartition.getSelected());
+        Assertions.assertEquals(Interval.fromToBy(2, 98, 2), smallPartition.getRejected());
 
         ArrayList<Integer> bigList = new ArrayList<>(Interval.oneTo(101));
         PartitionMutableList<Integer> bigPartition = ArrayListIterate.partition(bigList, Predicates.in(Interval.oneToBy(101, 2)));
-        Assert.assertEquals(Interval.oneToBy(101, 2), bigPartition.getSelected());
-        Assert.assertEquals(Interval.fromToBy(2, 100, 2), bigPartition.getRejected());
+        Assertions.assertEquals(Interval.oneToBy(101, 2), bigPartition.getSelected());
+        Assertions.assertEquals(Interval.fromToBy(2, 100, 2), bigPartition.getRejected());
     }
 
     @Test
@@ -1057,109 +1058,109 @@ public class ArrayListIterateTest
     {
         ArrayList<Integer> smallList = new ArrayList<>(Interval.oneTo(99));
         PartitionMutableList<Integer> smallPartition = ArrayListIterate.partitionWith(smallList, Predicates2.in(), Interval.oneToBy(99, 2));
-        Assert.assertEquals(Interval.oneToBy(99, 2), smallPartition.getSelected());
-        Assert.assertEquals(Interval.fromToBy(2, 98, 2), smallPartition.getRejected());
+        Assertions.assertEquals(Interval.oneToBy(99, 2), smallPartition.getSelected());
+        Assertions.assertEquals(Interval.fromToBy(2, 98, 2), smallPartition.getRejected());
 
         ArrayList<Integer> bigList = new ArrayList<>(Interval.oneTo(101));
         PartitionMutableList<Integer> bigPartition = ArrayListIterate.partitionWith(bigList, Predicates2.in(), Interval.oneToBy(101, 2));
-        Assert.assertEquals(Interval.oneToBy(101, 2), bigPartition.getSelected());
-        Assert.assertEquals(Interval.fromToBy(2, 100, 2), bigPartition.getRejected());
+        Assertions.assertEquals(Interval.oneToBy(101, 2), bigPartition.getSelected());
+        Assertions.assertEquals(Interval.fromToBy(2, 100, 2), bigPartition.getRejected());
     }
 
     @Test
     public void anySatisfyWith()
     {
         ArrayList<Integer> list = this.getIntegerList();
-        Assert.assertTrue(ArrayListIterate.anySatisfyWith(list, Predicates2.instanceOf(), Integer.class));
-        Assert.assertFalse(ArrayListIterate.anySatisfyWith(list, Predicates2.instanceOf(), Double.class));
+        Assertions.assertTrue(ArrayListIterate.anySatisfyWith(list, Predicates2.instanceOf(), Integer.class));
+        Assertions.assertFalse(ArrayListIterate.anySatisfyWith(list, Predicates2.instanceOf(), Double.class));
     }
 
     @Test
     public void anySatisfy()
     {
         ArrayList<Integer> list = this.getIntegerList();
-        Assert.assertTrue(ArrayListIterate.anySatisfy(list, Integer.class::isInstance));
-        Assert.assertFalse(ArrayListIterate.anySatisfy(list, Double.class::isInstance));
+        Assertions.assertTrue(ArrayListIterate.anySatisfy(list, Integer.class::isInstance));
+        Assertions.assertFalse(ArrayListIterate.anySatisfy(list, Double.class::isInstance));
     }
 
     @Test
     public void anySatisfyWithOver100()
     {
         ArrayList<Integer> list = new ArrayList<>(Interval.oneTo(101));
-        Assert.assertTrue(ArrayListIterate.anySatisfyWith(list, Predicates2.instanceOf(), Integer.class));
-        Assert.assertFalse(ArrayListIterate.anySatisfyWith(list, Predicates2.instanceOf(), Double.class));
+        Assertions.assertTrue(ArrayListIterate.anySatisfyWith(list, Predicates2.instanceOf(), Integer.class));
+        Assertions.assertFalse(ArrayListIterate.anySatisfyWith(list, Predicates2.instanceOf(), Double.class));
     }
 
     @Test
     public void anySatisfyOver100()
     {
         ArrayList<Integer> list = new ArrayList<>(Interval.oneTo(101));
-        Assert.assertTrue(ArrayListIterate.anySatisfy(list, Integer.class::isInstance));
-        Assert.assertFalse(ArrayListIterate.anySatisfy(list, Double.class::isInstance));
+        Assertions.assertTrue(ArrayListIterate.anySatisfy(list, Integer.class::isInstance));
+        Assertions.assertFalse(ArrayListIterate.anySatisfy(list, Double.class::isInstance));
     }
 
     @Test
     public void allSatisfyWith()
     {
         ArrayList<Integer> list = this.getIntegerList();
-        Assert.assertTrue(ArrayListIterate.allSatisfyWith(list, Predicates2.instanceOf(), Integer.class));
-        Assert.assertFalse(ArrayListIterate.allSatisfyWith(list, Predicates2.greaterThan(), 2));
+        Assertions.assertTrue(ArrayListIterate.allSatisfyWith(list, Predicates2.instanceOf(), Integer.class));
+        Assertions.assertFalse(ArrayListIterate.allSatisfyWith(list, Predicates2.greaterThan(), 2));
     }
 
     @Test
     public void allSatisfy()
     {
         ArrayList<Integer> list = this.getIntegerList();
-        Assert.assertTrue(ArrayListIterate.allSatisfy(list, Integer.class::isInstance));
-        Assert.assertFalse(ArrayListIterate.allSatisfy(list, Predicates.greaterThan(2)));
+        Assertions.assertTrue(ArrayListIterate.allSatisfy(list, Integer.class::isInstance));
+        Assertions.assertFalse(ArrayListIterate.allSatisfy(list, Predicates.greaterThan(2)));
     }
 
     @Test
     public void allSatisfyWithOver100()
     {
         ArrayList<Integer> list = new ArrayList<>(Interval.oneTo(101));
-        Assert.assertTrue(ArrayListIterate.allSatisfyWith(list, Predicates2.instanceOf(), Integer.class));
-        Assert.assertFalse(ArrayListIterate.allSatisfyWith(list, Predicates2.greaterThan(), 2));
+        Assertions.assertTrue(ArrayListIterate.allSatisfyWith(list, Predicates2.instanceOf(), Integer.class));
+        Assertions.assertFalse(ArrayListIterate.allSatisfyWith(list, Predicates2.greaterThan(), 2));
     }
 
     @Test
     public void allSatisfyOver100()
     {
         ArrayList<Integer> list = new ArrayList<>(Interval.oneTo(101));
-        Assert.assertTrue(ArrayListIterate.allSatisfy(list, Integer.class::isInstance));
-        Assert.assertFalse(ArrayListIterate.allSatisfy(list, Predicates.greaterThan(2)));
+        Assertions.assertTrue(ArrayListIterate.allSatisfy(list, Integer.class::isInstance));
+        Assertions.assertFalse(ArrayListIterate.allSatisfy(list, Predicates.greaterThan(2)));
     }
 
     @Test
     public void noneSatisfyOver100()
     {
         ArrayList<Integer> list = new ArrayList<>(Interval.oneTo(101));
-        Assert.assertFalse(ArrayListIterate.noneSatisfy(list, Integer.class::isInstance));
-        Assert.assertTrue(ArrayListIterate.noneSatisfy(list, Predicates.greaterThan(150)));
+        Assertions.assertFalse(ArrayListIterate.noneSatisfy(list, Integer.class::isInstance));
+        Assertions.assertTrue(ArrayListIterate.noneSatisfy(list, Predicates.greaterThan(150)));
     }
 
     @Test
     public void noneSatisfyWithOver100()
     {
         ArrayList<Integer> list = new ArrayList<>(Interval.oneTo(101));
-        Assert.assertFalse(ArrayListIterate.noneSatisfyWith(list, Predicates2.instanceOf(), Integer.class));
-        Assert.assertTrue(ArrayListIterate.noneSatisfyWith(list, Predicates2.greaterThan(), 150));
+        Assertions.assertFalse(ArrayListIterate.noneSatisfyWith(list, Predicates2.instanceOf(), Integer.class));
+        Assertions.assertTrue(ArrayListIterate.noneSatisfyWith(list, Predicates2.greaterThan(), 150));
     }
 
     @Test
     public void countWith()
     {
         ArrayList<Integer> list = this.getIntegerList();
-        Assert.assertEquals(5, ArrayListIterate.countWith(list, Predicates2.instanceOf(), Integer.class));
-        Assert.assertEquals(0, ArrayListIterate.countWith(list, Predicates2.instanceOf(), Double.class));
+        Assertions.assertEquals(5, ArrayListIterate.countWith(list, Predicates2.instanceOf(), Integer.class));
+        Assertions.assertEquals(0, ArrayListIterate.countWith(list, Predicates2.instanceOf(), Double.class));
     }
 
     @Test
     public void countWithOver100()
     {
         ArrayList<Integer> list = new ArrayList<>(Interval.oneTo(101));
-        Assert.assertEquals(101, ArrayListIterate.countWith(list, Predicates2.instanceOf(), Integer.class));
-        Assert.assertEquals(0, ArrayListIterate.countWith(list, Predicates2.instanceOf(), Double.class));
+        Assertions.assertEquals(101, ArrayListIterate.countWith(list, Predicates2.instanceOf(), Integer.class));
+        Assertions.assertEquals(0, ArrayListIterate.countWith(list, Predicates2.instanceOf(), Double.class));
     }
 
     @Test
@@ -1167,7 +1168,7 @@ public class ArrayListIterateTest
     {
         ArrayList<Integer> list = new ArrayList<>(Interval.oneTo(101));
         ArrayList<Class<?>> result = ArrayListIterate.collectIf(list, Integer.valueOf(101)::equals, Object::getClass);
-        Assert.assertEquals(FastList.newListWith(Integer.class), result);
+        Assertions.assertEquals(FastList.newListWith(Integer.class), result);
     }
 
     @Test
@@ -1177,7 +1178,7 @@ public class ArrayListIterateTest
         ArrayList<String> result = ArrayListIterate.collectWith(list, (argument1, argument2) -> argument1.equals(argument2) ? "101" : null, 101);
         Verify.assertSize(101, result);
         Verify.assertContainsAll(result, null, "101");
-        Assert.assertEquals(100, Iterate.count(result, Predicates.isNull()));
+        Assertions.assertEquals(100, Iterate.count(result, Predicates.isNull()));
     }
 
     @Test
@@ -1186,11 +1187,11 @@ public class ArrayListIterateTest
         ArrayList<Integer> list = new ArrayList<>(Interval.toReverseList(1, 101));
         list.add(3);
         list.add(2);
-        Assert.assertEquals(100, ArrayListIterate.detectIndex(list, Integer.valueOf(1)::equals));
-        Assert.assertEquals(99, ArrayListIterate.detectIndex(list, Integer.valueOf(2)::equals));
-        Assert.assertEquals(98, ArrayListIterate.detectIndex(list, Integer.valueOf(3)::equals));
-        Assert.assertEquals(0, Iterate.detectIndex(list, Integer.valueOf(101)::equals));
-        Assert.assertEquals(-1, Iterate.detectIndex(list, Integer.valueOf(200)::equals));
+        Assertions.assertEquals(100, ArrayListIterate.detectIndex(list, Integer.valueOf(1)::equals));
+        Assertions.assertEquals(99, ArrayListIterate.detectIndex(list, Integer.valueOf(2)::equals));
+        Assertions.assertEquals(98, ArrayListIterate.detectIndex(list, Integer.valueOf(3)::equals));
+        Assertions.assertEquals(0, Iterate.detectIndex(list, Integer.valueOf(101)::equals));
+        Assertions.assertEquals(-1, Iterate.detectIndex(list, Integer.valueOf(200)::equals));
     }
 
     @Test
@@ -1199,11 +1200,11 @@ public class ArrayListIterateTest
         ArrayList<Integer> list = new ArrayList<>(Interval.toReverseList(1, 5));
         list.add(3);
         list.add(2);
-        Assert.assertEquals(4, ArrayListIterate.detectIndex(list, Integer.valueOf(1)::equals));
-        Assert.assertEquals(3, ArrayListIterate.detectIndex(list, Integer.valueOf(2)::equals));
-        Assert.assertEquals(2, ArrayListIterate.detectIndex(list, Integer.valueOf(3)::equals));
-        Assert.assertEquals(0, Iterate.detectIndex(list, Integer.valueOf(5)::equals));
-        Assert.assertEquals(-1, Iterate.detectIndex(list, Integer.valueOf(10)::equals));
+        Assertions.assertEquals(4, ArrayListIterate.detectIndex(list, Integer.valueOf(1)::equals));
+        Assertions.assertEquals(3, ArrayListIterate.detectIndex(list, Integer.valueOf(2)::equals));
+        Assertions.assertEquals(2, ArrayListIterate.detectIndex(list, Integer.valueOf(3)::equals));
+        Assertions.assertEquals(0, Iterate.detectIndex(list, Integer.valueOf(5)::equals));
+        Assertions.assertEquals(-1, Iterate.detectIndex(list, Integer.valueOf(10)::equals));
     }
 
     @Test
@@ -1212,11 +1213,11 @@ public class ArrayListIterateTest
         ArrayList<Integer> list = new ArrayList<>(Interval.toReverseList(1, 101));
         list.add(3);
         list.add(2);
-        Assert.assertEquals(100, ArrayListIterate.detectLastIndex(list, Integer.valueOf(1)::equals));
-        Assert.assertEquals(102, ArrayListIterate.detectLastIndex(list, Integer.valueOf(2)::equals));
-        Assert.assertEquals(101, ArrayListIterate.detectLastIndex(list, Integer.valueOf(3)::equals));
-        Assert.assertEquals(0, ArrayListIterate.detectLastIndex(list, Integer.valueOf(101)::equals));
-        Assert.assertEquals(-1, ArrayListIterate.detectLastIndex(list, Integer.valueOf(200)::equals));
+        Assertions.assertEquals(100, ArrayListIterate.detectLastIndex(list, Integer.valueOf(1)::equals));
+        Assertions.assertEquals(102, ArrayListIterate.detectLastIndex(list, Integer.valueOf(2)::equals));
+        Assertions.assertEquals(101, ArrayListIterate.detectLastIndex(list, Integer.valueOf(3)::equals));
+        Assertions.assertEquals(0, ArrayListIterate.detectLastIndex(list, Integer.valueOf(101)::equals));
+        Assertions.assertEquals(-1, ArrayListIterate.detectLastIndex(list, Integer.valueOf(200)::equals));
     }
 
     @Test
@@ -1225,29 +1226,29 @@ public class ArrayListIterateTest
         ArrayList<Integer> list = new ArrayList<>(Interval.toReverseList(1, 5));
         list.add(3);
         list.add(2);
-        Assert.assertEquals(4, ArrayListIterate.detectLastIndex(list, Integer.valueOf(1)::equals));
-        Assert.assertEquals(6, ArrayListIterate.detectLastIndex(list, Integer.valueOf(2)::equals));
-        Assert.assertEquals(5, ArrayListIterate.detectLastIndex(list, Integer.valueOf(3)::equals));
-        Assert.assertEquals(0, ArrayListIterate.detectLastIndex(list, Integer.valueOf(5)::equals));
-        Assert.assertEquals(-1, ArrayListIterate.detectLastIndex(list, Integer.valueOf(10)::equals));
+        Assertions.assertEquals(4, ArrayListIterate.detectLastIndex(list, Integer.valueOf(1)::equals));
+        Assertions.assertEquals(6, ArrayListIterate.detectLastIndex(list, Integer.valueOf(2)::equals));
+        Assertions.assertEquals(5, ArrayListIterate.detectLastIndex(list, Integer.valueOf(3)::equals));
+        Assertions.assertEquals(0, ArrayListIterate.detectLastIndex(list, Integer.valueOf(5)::equals));
+        Assertions.assertEquals(-1, ArrayListIterate.detectLastIndex(list, Integer.valueOf(10)::equals));
     }
 
     @Test
     public void detectIndexWithOver100()
     {
         ArrayList<Integer> list = new ArrayList<>(Interval.toReverseList(1, 101));
-        Assert.assertEquals(100, Iterate.detectIndexWith(list, Object::equals, 1));
-        Assert.assertEquals(0, Iterate.detectIndexWith(list, Object::equals, 101));
-        Assert.assertEquals(-1, Iterate.detectIndexWith(list, Object::equals, 200));
+        Assertions.assertEquals(100, Iterate.detectIndexWith(list, Object::equals, 1));
+        Assertions.assertEquals(0, Iterate.detectIndexWith(list, Object::equals, 101));
+        Assertions.assertEquals(-1, Iterate.detectIndexWith(list, Object::equals, 200));
     }
 
     @Test
     public void detectIndexWithSmallList()
     {
         ArrayList<Integer> list = new ArrayList<>(Interval.toReverseList(1, 5));
-        Assert.assertEquals(4, Iterate.detectIndexWith(list, Object::equals, 1));
-        Assert.assertEquals(0, Iterate.detectIndexWith(list, Object::equals, 5));
-        Assert.assertEquals(-1, Iterate.detectIndexWith(list, Object::equals, 10));
+        Assertions.assertEquals(4, Iterate.detectIndexWith(list, Object::equals, 1));
+        Assertions.assertEquals(0, Iterate.detectIndexWith(list, Object::equals, 5));
+        Assertions.assertEquals(-1, Iterate.detectIndexWith(list, Object::equals, 10));
     }
 
     @Test
@@ -1257,7 +1258,7 @@ public class ArrayListIterateTest
         Integer parameter = 2;
         Function3<Sum, Integer, Integer, Sum> function = (sum, element, withValue) -> sum.add((element.intValue() - element.intValue()) * withValue.intValue());
         Sum sumOfDoubledValues = ArrayListIterate.injectIntoWith(result, this.getOver100IntegerList(), function, parameter);
-        Assert.assertEquals(0, sumOfDoubledValues.getValue().intValue());
+        Assertions.assertEquals(0, sumOfDoubledValues.getValue().intValue());
     }
 
     @Test
@@ -1353,10 +1354,12 @@ public class ArrayListIterateTest
         Verify.assertListsEqual(FastList.newList(list1).take(Integer.MAX_VALUE), ArrayListIterate.take(list1, Integer.MAX_VALUE));
     }
 
-    @Test(expected = IllegalArgumentException.class)
+    @Test
     public void take_throws()
     {
-        ArrayListIterate.take(this.getIntegerList(), -1);
+        assertThrows(IllegalArgumentException.class, () -> {
+            ArrayListIterate.take(this.getIntegerList(), -1);
+        });
     }
 
     @Test
@@ -1391,10 +1394,12 @@ public class ArrayListIterateTest
         Verify.assertListsEqual(expected5, ArrayListIterate.take(list2, Integer.MAX_VALUE, FastList.newListWith(-1)));
     }
 
-    @Test(expected = IllegalArgumentException.class)
+    @Test
     public void take_target_throws()
     {
-        ArrayListIterate.take(this.getIntegerList(), -1, FastList.newList());
+        assertThrows(IllegalArgumentException.class, () -> {
+            ArrayListIterate.take(this.getIntegerList(), -1, FastList.newList());
+        });
     }
 
     @Test
@@ -1402,15 +1407,15 @@ public class ArrayListIterateTest
     {
         ArrayList<Integer> arrayList = new ArrayList<>(Interval.oneTo(100));
 
-        Assert.assertEquals(
+        Assertions.assertEquals(
                 iList(1, 2, 3),
                 ArrayListIterate.takeWhile(arrayList, Predicates.lessThan(4)));
 
-        Assert.assertEquals(
+        Assertions.assertEquals(
                 Interval.fromTo(1, 100),
                 ArrayListIterate.takeWhile(arrayList, Predicates.lessThan(1000)));
 
-        Assert.assertEquals(
+        Assertions.assertEquals(
                 iList(),
                 ArrayListIterate.takeWhile(arrayList, Predicates.lessThan(0)));
     }
@@ -1437,10 +1442,12 @@ public class ArrayListIterateTest
         Verify.assertListsEqual(FastList.newList(list1).drop(Integer.MAX_VALUE), ArrayListIterate.drop(list1, Integer.MAX_VALUE));
     }
 
-    @Test(expected = IllegalArgumentException.class)
+    @Test
     public void drop_throws()
     {
-        ArrayListIterate.drop(this.getIntegerList(), -1);
+        assertThrows(IllegalArgumentException.class, () -> {
+            ArrayListIterate.drop(this.getIntegerList(), -1);
+        });
     }
 
     @Test
@@ -1485,10 +1492,12 @@ public class ArrayListIterateTest
         Verify.assertListsEqual(FastList.newListWith(-1), ArrayListIterate.drop(list2, Integer.MAX_VALUE, FastList.newListWith(-1)));
     }
 
-    @Test(expected = IllegalArgumentException.class)
+    @Test
     public void drop_target_throws()
     {
-        ArrayListIterate.drop(this.getIntegerList(), -1, FastList.newList());
+        assertThrows(IllegalArgumentException.class, () -> {
+            ArrayListIterate.drop(this.getIntegerList(), -1, FastList.newList());
+        });
     }
 
     @Test
@@ -1496,15 +1505,15 @@ public class ArrayListIterateTest
     {
         ArrayList<Integer> arrayList = new ArrayList<>(Interval.oneTo(100));
 
-        Assert.assertEquals(
+        Assertions.assertEquals(
                 Interval.fromTo(4, 100),
                 ArrayListIterate.dropWhile(arrayList, Predicates.lessThan(4)));
 
-        Assert.assertEquals(
+        Assertions.assertEquals(
                 iList(),
                 ArrayListIterate.dropWhile(arrayList, Predicates.lessThan(1000)));
 
-        Assert.assertEquals(
+        Assertions.assertEquals(
                 Interval.fromTo(1, 100),
                 ArrayListIterate.dropWhile(arrayList, Predicates.lessThan(0)));
     }
@@ -1515,16 +1524,16 @@ public class ArrayListIterateTest
         ArrayList<Integer> arrayList = new ArrayList<>(Interval.oneTo(100));
 
         PartitionMutableList<Integer> partition1 = ArrayListIterate.partitionWhile(arrayList, Predicates.lessThan(4));
-        Assert.assertEquals(iList(1, 2, 3), partition1.getSelected());
-        Assert.assertEquals(Interval.fromTo(4, 100), partition1.getRejected());
+        Assertions.assertEquals(iList(1, 2, 3), partition1.getSelected());
+        Assertions.assertEquals(Interval.fromTo(4, 100), partition1.getRejected());
 
         PartitionMutableList<Integer> partition2 = ArrayListIterate.partitionWhile(arrayList, Predicates.lessThan(0));
-        Assert.assertEquals(iList(), partition2.getSelected());
-        Assert.assertEquals(Interval.fromTo(1, 100), partition2.getRejected());
+        Assertions.assertEquals(iList(), partition2.getSelected());
+        Assertions.assertEquals(Interval.fromTo(1, 100), partition2.getRejected());
 
         PartitionMutableList<Integer> partition3 = ArrayListIterate.partitionWhile(arrayList, Predicates.lessThan(1000));
-        Assert.assertEquals(Interval.fromTo(1, 100), partition3.getSelected());
-        Assert.assertEquals(iList(), partition3.getRejected());
+        Assertions.assertEquals(Interval.fromTo(1, 100), partition3.getSelected());
+        Assertions.assertEquals(iList(), partition3.getRejected());
     }
 
     @Test
@@ -1532,15 +1541,15 @@ public class ArrayListIterateTest
     {
         ArrayList<Integer> arrayList = new ArrayList<>(Interval.oneTo(101));
 
-        Assert.assertEquals(
+        Assertions.assertEquals(
                 iList(1, 2, 3),
                 ArrayListIterate.takeWhile(arrayList, Predicates.lessThan(4)));
 
-        Assert.assertEquals(
+        Assertions.assertEquals(
                 Interval.fromTo(1, 101),
                 ArrayListIterate.takeWhile(arrayList, Predicates.lessThan(1000)));
 
-        Assert.assertEquals(
+        Assertions.assertEquals(
                 iList(),
                 ArrayListIterate.takeWhile(arrayList, Predicates.lessThan(0)));
     }
@@ -1550,15 +1559,15 @@ public class ArrayListIterateTest
     {
         ArrayList<Integer> arrayList = new ArrayList<>(Interval.oneTo(101));
 
-        Assert.assertEquals(
+        Assertions.assertEquals(
                 Interval.fromTo(4, 101),
                 ArrayListIterate.dropWhile(arrayList, Predicates.lessThan(4)));
 
-        Assert.assertEquals(
+        Assertions.assertEquals(
                 iList(),
                 ArrayListIterate.dropWhile(arrayList, Predicates.lessThan(1000)));
 
-        Assert.assertEquals(
+        Assertions.assertEquals(
                 Interval.fromTo(1, 101),
                 ArrayListIterate.dropWhile(arrayList, Predicates.lessThan(0)));
     }
@@ -1569,16 +1578,16 @@ public class ArrayListIterateTest
         ArrayList<Integer> arrayList = new ArrayList<>(Interval.oneTo(101));
 
         PartitionMutableList<Integer> partition1 = ArrayListIterate.partitionWhile(arrayList, Predicates.lessThan(4));
-        Assert.assertEquals(iList(1, 2, 3), partition1.getSelected());
-        Assert.assertEquals(Interval.fromTo(4, 101), partition1.getRejected());
+        Assertions.assertEquals(iList(1, 2, 3), partition1.getSelected());
+        Assertions.assertEquals(Interval.fromTo(4, 101), partition1.getRejected());
 
         PartitionMutableList<Integer> partition2 = ArrayListIterate.partitionWhile(arrayList, Predicates.lessThan(0));
-        Assert.assertEquals(iList(), partition2.getSelected());
-        Assert.assertEquals(Interval.fromTo(1, 101), partition2.getRejected());
+        Assertions.assertEquals(iList(), partition2.getSelected());
+        Assertions.assertEquals(Interval.fromTo(1, 101), partition2.getRejected());
 
         PartitionMutableList<Integer> partition3 = ArrayListIterate.partitionWhile(arrayList, Predicates.lessThan(1000));
-        Assert.assertEquals(Interval.fromTo(1, 101), partition3.getSelected());
-        Assert.assertEquals(iList(), partition3.getRejected());
+        Assertions.assertEquals(Interval.fromTo(1, 101), partition3.getSelected());
+        Assertions.assertEquals(iList(), partition3.getRejected());
     }
 
     private ArrayList<Integer> newArrayList(Integer... items)
@@ -1597,7 +1606,7 @@ public class ArrayListIterateTest
         ArrayList<Integer> list = new ArrayList<>(Interval.toReverseList(1, 105));
         MutableMultimap<String, Integer> target = new FastListMultimap<>();
         MutableMultimap<String, Integer> result = ArrayListIterate.groupBy(list, String::valueOf, target);
-        Assert.assertEquals(result.get("105"), FastList.newListWith(105));
+        Assertions.assertEquals(result.get("105"), FastList.newListWith(105));
     }
 
     @Test
@@ -1607,62 +1616,70 @@ public class ArrayListIterateTest
         Function<Integer, Iterable<String>> function = object -> FastList.newListWith(object.toString(), object.toString() + '*');
         MutableMultimap<String, Integer> target = new FastListMultimap<>();
         MutableMultimap<String, Integer> result = ArrayListIterate.groupByEach(list, function, target);
-        Assert.assertEquals(result.get("105"), FastList.newListWith(105));
-        Assert.assertEquals(result.get("105*"), FastList.newListWith(105));
+        Assertions.assertEquals(result.get("105"), FastList.newListWith(105));
+        Assertions.assertEquals(result.get("105*"), FastList.newListWith(105));
     }
 
     @Test
     public void groupByUniqueKeyWithOptimisedList()
     {
         ArrayList<Integer> list1 = new ArrayList<>(Interval.toReverseList(1, 3));
-        Assert.assertEquals(
+        Assertions.assertEquals(
                 UnifiedMap.newWithKeysValues(1, 1, 2, 2, 3, 3),
                 ArrayListIterate.groupByUniqueKey(list1, id -> id));
         ArrayList<Integer> list2 = new ArrayList<>(Interval.toReverseList(1, 105));
-        Assert.assertEquals(
+        Assertions.assertEquals(
                 Lists.mutable.ofAll(list2).groupByUniqueKey(id -> id),
                 ArrayListIterate.groupByUniqueKey(list2, id -> id));
     }
 
-    @Test(expected = IllegalArgumentException.class)
+    @Test
     public void groupByUniqueKey_throws_for_null()
     {
-        ArrayListIterate.groupByUniqueKey(null, id -> id);
+        assertThrows(IllegalArgumentException.class, () -> {
+            ArrayListIterate.groupByUniqueKey(null, id -> id);
+        });
     }
 
-    @Test(expected = IllegalStateException.class)
+    @Test
     public void groupByUniqueKeyUniqueKey_throws_for_duplicate()
     {
-        ArrayList<Integer> list = new ArrayList<>(Interval.toReverseList(1, 105));
-        list.add(2);
-        ArrayListIterate.groupByUniqueKey(list, id -> id);
+        assertThrows(IllegalStateException.class, () -> {
+            ArrayList<Integer> list = new ArrayList<>(Interval.toReverseList(1, 105));
+            list.add(2);
+            ArrayListIterate.groupByUniqueKey(list, id -> id);
+        });
     }
 
     @Test
     public void groupByUniqueKeyWithOptimisedList_target()
     {
         ArrayList<Integer> list1 = new ArrayList<>(Interval.toReverseList(1, 3));
-        Assert.assertEquals(
+        Assertions.assertEquals(
                 UnifiedMap.newWithKeysValues(0, 0, 1, 1, 2, 2, 3, 3),
                 ArrayListIterate.groupByUniqueKey(list1, id -> id, UnifiedMap.newWithKeysValues(0, 0)));
 
         ArrayList<Integer> list2 = new ArrayList<>(Interval.toReverseList(1, 105));
-        Assert.assertEquals(
+        Assertions.assertEquals(
                 Lists.mutable.ofAll(list2).groupByUniqueKey(id -> id, UnifiedMap.newWithKeysValues(0, 0)),
                 ArrayListIterate.groupByUniqueKey(list2, id -> id, UnifiedMap.newWithKeysValues(0, 0)));
     }
 
-    @Test(expected = IllegalArgumentException.class)
+    @Test
     public void groupByUniqueKey_target_throws_for_null()
     {
-        ArrayListIterate.groupByUniqueKey(null, id -> id, UnifiedMap.newWithKeysValues(0, 0));
+        assertThrows(IllegalArgumentException.class, () -> {
+            ArrayListIterate.groupByUniqueKey(null, id -> id, UnifiedMap.newWithKeysValues(0, 0));
+        });
     }
 
-    @Test(expected = IllegalStateException.class)
+    @Test
     public void groupByUniqueKeyUniqueKey_target_throws_for_duplicate()
     {
-        ArrayList<Integer> list = new ArrayList<>(Interval.toReverseList(1, 105));
-        ArrayListIterate.groupByUniqueKey(list, id -> id, UnifiedMap.newWithKeysValues(2, 2));
+        assertThrows(IllegalStateException.class, () -> {
+            ArrayList<Integer> list = new ArrayList<>(Interval.toReverseList(1, 105));
+            ArrayListIterate.groupByUniqueKey(list, id -> id, UnifiedMap.newWithKeysValues(2, 2));
+        });
     }
 
     @Test
@@ -1672,7 +1689,7 @@ public class ArrayListIterateTest
 
         ArrayList<Integer> result = ArrayListIterate.flatCollect(list, new CollectionWrappingFunction<>(),
                 new ArrayList<>());
-        Assert.assertEquals(105, result.get(0).intValue());
+        Assertions.assertEquals(105, result.get(0).intValue());
     }
 
     private static class CollectionWrappingFunction<T> implements Function<T, Collection<T>>
