@@ -46,10 +46,11 @@ import com.gs.collections.impl.test.Verify;
 import com.gs.collections.impl.utility.ArrayListIterate;
 import com.gs.collections.impl.utility.Iterate;
 import com.gs.collections.impl.utility.ListIterate;
-import org.junit.Assert;
-import org.junit.Test;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.Test;
 
 import static com.gs.collections.impl.factory.Iterables.*;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 
 /**
  * JUnit test for {@link IterableIterate}.
@@ -60,7 +61,7 @@ public class IterableIterateTest
     public void injectInto()
     {
         Iterable<Integer> iterable = new IterableAdapter<>(iList(1, 2, 3));
-        Assert.assertEquals(
+        Assertions.assertEquals(
                 1 + 1 + 2 + 3,
                 Iterate.injectInto(1, iterable, AddFunction.INTEGER).intValue());
     }
@@ -74,14 +75,14 @@ public class IterableIterateTest
             list.add(1);
         }
         Iterable<Integer> iterable = new IterableAdapter<>(list);
-        Assert.assertEquals(32, Iterate.injectInto(1, iterable, AddFunction.INTEGER).intValue());
+        Assertions.assertEquals(32, Iterate.injectInto(1, iterable, AddFunction.INTEGER).intValue());
     }
 
     @Test
     public void injectIntoDouble()
     {
         Iterable<Double> iterable = new IterableAdapter<>(iList(1.0, 2.0, 3.0));
-        Assert.assertEquals(
+        Assertions.assertEquals(
                 1.0 + 1.0 + 2.0 + 3.0,
                 Iterate.injectInto(1.0, iterable, AddFunction.DOUBLE).doubleValue(),
                 0.0);
@@ -91,21 +92,21 @@ public class IterableIterateTest
     public void injectIntoString()
     {
         Iterable<String> iterable = new IterableAdapter<>(iList("1", "2", "3"));
-        Assert.assertEquals("0123", Iterate.injectInto("0", iterable, AddFunction.STRING));
+        Assertions.assertEquals("0123", Iterate.injectInto("0", iterable, AddFunction.STRING));
     }
 
     @Test
     public void injectIntoMaxString()
     {
         Iterable<String> iterable = new IterableAdapter<>(iList("1", "12", "123"));
-        Assert.assertEquals(3, Iterate.injectInto(Integer.MIN_VALUE, iterable, MaxSizeFunction.STRING).intValue());
+        Assertions.assertEquals(3, Iterate.injectInto(Integer.MIN_VALUE, iterable, MaxSizeFunction.STRING).intValue());
     }
 
     @Test
     public void injectIntoMinString()
     {
         Iterable<String> iterable = new IterableAdapter<>(iList("1", "12", "123"));
-        Assert.assertEquals(1, Iterate.injectInto(Integer.MAX_VALUE, iterable, MinSizeFunction.STRING).intValue());
+        Assertions.assertEquals(1, Iterate.injectInto(Integer.MAX_VALUE, iterable, MinSizeFunction.STRING).intValue());
     }
 
     @Test
@@ -113,7 +114,7 @@ public class IterableIterateTest
     {
         Iterable<Boolean> iterable = new IterableAdapter<>(iList(Boolean.TRUE, Boolean.FALSE, null));
         Collection<String> result = Iterate.collect(iterable, String::valueOf);
-        Assert.assertEquals(iList("true", "false", "null"), result);
+        Assertions.assertEquals(iList("true", "false", "null"), result);
     }
 
     @Test
@@ -121,7 +122,7 @@ public class IterableIterateTest
     {
         Iterable<Boolean> iterable = new IterableAdapter<>(iList(Boolean.TRUE, Boolean.FALSE, null));
         Collection<String> result = Iterate.collect(iterable, String::valueOf, FastList.<String>newList());
-        Assert.assertEquals(iList("true", "false", "null"), result);
+        Assertions.assertEquals(iList("true", "false", "null"), result);
     }
 
     @Test
@@ -129,7 +130,7 @@ public class IterableIterateTest
     {
         Iterable<Integer> iterable = new IterableAdapter<>(Interval.oneTo(31));
         Collection<Class<?>> result = Iterate.collect(iterable, Object::getClass);
-        Assert.assertEquals(Collections.nCopies(31, Integer.class), result);
+        Assertions.assertEquals(Collections.nCopies(31, Integer.class), result);
     }
 
     private List<Integer> getIntegerList()
@@ -141,28 +142,28 @@ public class IterableIterateTest
     public void forEachWithIndex()
     {
         Iterable<Integer> iterable = new IterableAdapter<>(Iterate.sortThis(this.getIntegerList()));
-        Iterate.forEachWithIndex(iterable, (object, index) -> Assert.assertEquals(index, object - 1));
+        Iterate.forEachWithIndex(iterable, (object, index) -> Assertions.assertEquals(index, object - 1));
     }
 
     @Test
     public void forEachWithIndexOver30()
     {
         Iterable<Integer> iterable = new IterableAdapter<>(Iterate.sortThis(Interval.oneTo(31).toList()));
-        Iterate.forEachWithIndex(iterable, (object, index) -> Assert.assertEquals(index, object - 1));
+        Iterate.forEachWithIndex(iterable, (object, index) -> Assertions.assertEquals(index, object - 1));
     }
 
     @Test
     public void detect()
     {
         Iterable<Integer> iterable = new IterableAdapter<>(this.getIntegerList());
-        Assert.assertEquals(1, Iterate.detect(iterable, Integer.valueOf(1)::equals).intValue());
+        Assertions.assertEquals(1, Iterate.detect(iterable, Integer.valueOf(1)::equals).intValue());
         //noinspection CachedNumberConstructorCall,UnnecessaryBoxing
-        Integer firstInt = new Integer(2);
+        Integer firstInt = Integer.valueOf(2);
         //noinspection CachedNumberConstructorCall,UnnecessaryBoxing
-        Integer secondInt = new Integer(2);
-        Assert.assertNotSame(firstInt, secondInt);
+        Integer secondInt = Integer.valueOf(2);
+        Assertions.assertNotSame(firstInt, secondInt);
         ImmutableList<Integer> list2 = iList(1, firstInt, secondInt);
-        Assert.assertSame(list2.get(1), Iterate.detect(list2, Integer.valueOf(2)::equals));
+        Assertions.assertSame(list2.get(1), Iterate.detect(list2, Integer.valueOf(2)::equals));
     }
 
     @Test
@@ -170,56 +171,56 @@ public class IterableIterateTest
     {
         List<Integer> list = Interval.oneTo(31);
         Iterable<Integer> iterable = new IterableAdapter<>(list);
-        Assert.assertEquals(1, Iterate.detect(iterable, Integer.valueOf(1)::equals).intValue());
+        Assertions.assertEquals(1, Iterate.detect(iterable, Integer.valueOf(1)::equals).intValue());
     }
 
     @Test
     public void detectWith()
     {
         Iterable<Integer> iterable = new IterableAdapter<>(this.getIntegerList());
-        Assert.assertEquals(1, Iterate.detectWith(iterable, Object::equals, 1).intValue());
+        Assertions.assertEquals(1, Iterate.detectWith(iterable, Object::equals, 1).intValue());
         //noinspection CachedNumberConstructorCall,UnnecessaryBoxing
-        Integer firstInt = new Integer(2);
+        Integer firstInt = Integer.valueOf(2);
         //noinspection CachedNumberConstructorCall,UnnecessaryBoxing
-        Integer secondInt = new Integer(2);
-        Assert.assertNotSame(firstInt, secondInt);
+        Integer secondInt = Integer.valueOf(2);
+        Assertions.assertNotSame(firstInt, secondInt);
         ImmutableList<Integer> list2 = iList(1, firstInt, secondInt);
-        Assert.assertSame(list2.get(1), Iterate.detectWith(list2, Object::equals, 2));
+        Assertions.assertSame(list2.get(1), Iterate.detectWith(list2, Object::equals, 2));
     }
 
     @Test
     public void detectWithOver30()
     {
         Iterable<Integer> iterable = new IterableAdapter<>(Interval.oneTo(31));
-        Assert.assertEquals(1, Iterate.detectWith(iterable, Object::equals, 1).intValue());
+        Assertions.assertEquals(1, Iterate.detectWith(iterable, Object::equals, 1).intValue());
     }
 
     @Test
     public void detectIfNone()
     {
         Iterable<Integer> iterable = new IterableAdapter<>(this.getIntegerList());
-        Assert.assertNull(Iterate.detectIfNone(iterable, Integer.valueOf(6)::equals, null));
+        Assertions.assertNull(Iterate.detectIfNone(iterable, Integer.valueOf(6)::equals, null));
     }
 
     @Test
     public void detectIfNoneOver30()
     {
         Iterable<Integer> iterable = new IterableAdapter<>(Interval.oneTo(31));
-        Assert.assertNull(Iterate.detectIfNone(iterable, Integer.valueOf(32)::equals, null));
+        Assertions.assertNull(Iterate.detectIfNone(iterable, Integer.valueOf(32)::equals, null));
     }
 
     @Test
     public void detectWithIfNone()
     {
         Iterable<Integer> iterable = new IterableAdapter<>(this.getIntegerList());
-        Assert.assertNull(Iterate.detectWithIfNone(iterable, Object::equals, 6, null));
+        Assertions.assertNull(Iterate.detectWithIfNone(iterable, Object::equals, 6, null));
     }
 
     @Test
     public void detectWithIfNoneOver30()
     {
         Iterable<Integer> iterable = new IterableAdapter<>(Interval.oneTo(31));
-        Assert.assertNull(Iterate.detectWithIfNone(iterable, Object::equals, 32, null));
+        Assertions.assertNull(Iterate.detectWithIfNone(iterable, Object::equals, 32, null));
     }
 
     @Test
@@ -253,15 +254,15 @@ public class IterableIterateTest
 
         Iterable<Integer> iterable1 = FastList.newListWith(1, 2, 5, 7, 7, 4);
         MutableList<Integer> result2 = IterableIterate.distinct(iterable1);
-        Assert.assertEquals(result2, FastList.newListWith(1, 2, 5, 7, 4));
+        Assertions.assertEquals(result2, FastList.newListWith(1, 2, 5, 7, 4));
 
         Iterable<Integer> iterable2 = new IterableAdapter<>(Interval.oneTo(2));
         MutableList<Integer> result3 = IterableIterate.distinct(iterable2);
-        Assert.assertEquals(result3, FastList.newListWith(1, 2));
+        Assertions.assertEquals(result3, FastList.newListWith(1, 2));
 
         Iterable<Integer> iterable3 = new IterableAdapter<>(FastList.newListWith(2, 2, 4, 5));
         MutableList<Integer> result4 = IterableIterate.distinct(iterable3);
-        Assert.assertEquals(result4, FastList.newListWith(2, 4, 5));
+        Assertions.assertEquals(result4, FastList.newListWith(2, 4, 5));
     }
 
     @Test
@@ -270,7 +271,7 @@ public class IterableIterateTest
         MutableList<String> list = FastList.newList();
         list.addAll(FastList.newListWith("A", "a", "b", "c", "B", "D", "e", "e", "E", "D"));
         list = IterableIterate.distinct(list, HashingStrategies.fromFunction(String::toLowerCase));
-        Assert.assertEquals(FastList.newListWith("A", "b", "c", "D", "e"), list);
+        Assertions.assertEquals(FastList.newListWith("A", "b", "c", "D", "e"), list);
     }
 
     @Test
@@ -300,7 +301,7 @@ public class IterableIterateTest
     {
         Iterable<Number> iterable = new IterableAdapter<>(FastList.<Number>newListWith(1, 2.0, 3, 4.0, 5));
         Collection<Integer> result = Iterate.selectInstancesOf(iterable, Integer.class);
-        Assert.assertEquals(iList(1, 3, 5), result);
+        Assertions.assertEquals(iList(1, 3, 5), result);
     }
 
     @Test
@@ -310,7 +311,7 @@ public class IterableIterateTest
         Iterable<Integer> iterable = new IterableAdapter<>(Interval.oneTo(5));
         Function3<Sum, Integer, Integer, Sum> function = (sum, element, withValue) -> sum.add(element.intValue() * withValue.intValue());
         Sum sumOfDoubledValues = Iterate.injectIntoWith(result, iterable, function, 2);
-        Assert.assertEquals(30, sumOfDoubledValues.getValue().intValue());
+        Assertions.assertEquals(30, sumOfDoubledValues.getValue().intValue());
     }
 
     @Test
@@ -318,8 +319,8 @@ public class IterableIterateTest
     {
         Iterable<Integer> iterable = new IterableAdapter<>(this.getIntegerList());
         Twin<MutableList<Integer>> result = Iterate.selectAndRejectWith(iterable, Predicates2.in(), iList(1));
-        Assert.assertEquals(iList(1), result.getOne());
-        Assert.assertEquals(iList(5, 4, 3, 2), result.getTwo());
+        Assertions.assertEquals(iList(1), result.getOne());
+        Assertions.assertEquals(iList(5, 4, 3, 2), result.getTwo());
     }
 
     @Test
@@ -327,64 +328,64 @@ public class IterableIterateTest
     {
         Iterable<Integer> iterable = new IterableAdapter<>(this.getIntegerList());
         PartitionIterable<Integer> partition = Iterate.partition(iterable, IntegerPredicates.isEven());
-        Assert.assertEquals(iList(4, 2), partition.getSelected());
-        Assert.assertEquals(iList(5, 3, 1), partition.getRejected());
+        Assertions.assertEquals(iList(4, 2), partition.getSelected());
+        Assertions.assertEquals(iList(5, 3, 1), partition.getRejected());
     }
 
     @Test
     public void anySatisfyWith()
     {
         Iterable<Integer> iterable = new IterableAdapter<>(this.getIntegerList());
-        Assert.assertTrue(Iterate.anySatisfyWith(iterable, Predicates2.instanceOf(), Integer.class));
-        Assert.assertFalse(Iterate.anySatisfyWith(iterable, Predicates2.instanceOf(), Double.class));
+        Assertions.assertTrue(Iterate.anySatisfyWith(iterable, Predicates2.instanceOf(), Integer.class));
+        Assertions.assertFalse(Iterate.anySatisfyWith(iterable, Predicates2.instanceOf(), Double.class));
     }
 
     @Test
     public void anySatisfy()
     {
         Iterable<Integer> iterable = new IterableAdapter<>(this.getIntegerList());
-        Assert.assertTrue(Iterate.anySatisfy(iterable, Integer.class::isInstance));
-        Assert.assertFalse(Iterate.anySatisfy(iterable, Double.class::isInstance));
+        Assertions.assertTrue(Iterate.anySatisfy(iterable, Integer.class::isInstance));
+        Assertions.assertFalse(Iterate.anySatisfy(iterable, Double.class::isInstance));
     }
 
     @Test
     public void allSatisfyWith()
     {
         Iterable<Integer> iterable = new IterableAdapter<>(this.getIntegerList());
-        Assert.assertTrue(Iterate.allSatisfyWith(iterable, Predicates2.instanceOf(), Integer.class));
-        Assert.assertFalse(Iterate.allSatisfyWith(iterable, Predicates2.<Integer>greaterThan(), 2));
+        Assertions.assertTrue(Iterate.allSatisfyWith(iterable, Predicates2.instanceOf(), Integer.class));
+        Assertions.assertFalse(Iterate.allSatisfyWith(iterable, Predicates2.<Integer>greaterThan(), 2));
     }
 
     @Test
     public void allSatisfy()
     {
         Iterable<Integer> iterable = new IterableAdapter<>(this.getIntegerList());
-        Assert.assertTrue(Iterate.allSatisfy(iterable, Integer.class::isInstance));
-        Assert.assertFalse(Iterate.allSatisfy(iterable, Predicates.greaterThan(2)));
+        Assertions.assertTrue(Iterate.allSatisfy(iterable, Integer.class::isInstance));
+        Assertions.assertFalse(Iterate.allSatisfy(iterable, Predicates.greaterThan(2)));
     }
 
     @Test
     public void noneSatisfy()
     {
         Iterable<Integer> iterable = new IterableAdapter<>(this.getIntegerList());
-        Assert.assertTrue(Iterate.noneSatisfy(iterable, String.class::isInstance));
-        Assert.assertFalse(Iterate.noneSatisfy(iterable, Predicates.greaterThan(0)));
+        Assertions.assertTrue(Iterate.noneSatisfy(iterable, String.class::isInstance));
+        Assertions.assertFalse(Iterate.noneSatisfy(iterable, Predicates.greaterThan(0)));
     }
 
     @Test
     public void noneSatisfyWith()
     {
         Iterable<Integer> iterable = new IterableAdapter<>(this.getIntegerList());
-        Assert.assertTrue(Iterate.noneSatisfyWith(iterable, Predicates2.instanceOf(), String.class));
-        Assert.assertFalse(Iterate.noneSatisfyWith(iterable, Predicates2.<Integer>greaterThan(), 0));
+        Assertions.assertTrue(Iterate.noneSatisfyWith(iterable, Predicates2.instanceOf(), String.class));
+        Assertions.assertFalse(Iterate.noneSatisfyWith(iterable, Predicates2.<Integer>greaterThan(), 0));
     }
 
     @Test
     public void countWith()
     {
         Iterable<Integer> iterable = new IterableAdapter<>(this.getIntegerList());
-        Assert.assertEquals(5, Iterate.countWith(iterable, Predicates2.instanceOf(), Integer.class));
-        Assert.assertEquals(0, Iterate.countWith(iterable, Predicates2.instanceOf(), Double.class));
+        Assertions.assertEquals(5, Iterate.countWith(iterable, Predicates2.instanceOf(), Integer.class));
+        Assertions.assertEquals(0, Iterate.countWith(iterable, Predicates2.instanceOf(), Double.class));
     }
 
     @Test
@@ -392,7 +393,7 @@ public class IterableIterateTest
     {
         Iterable<Integer> iterable = new IterableAdapter<>(this.getIntegerList());
         Collection<Integer> results = Iterate.selectWith(iterable, Predicates2.instanceOf(), Integer.class);
-        Assert.assertEquals(iList(5, 4, 3, 2, 1), results);
+        Assertions.assertEquals(iList(5, 4, 3, 2, 1), results);
         Verify.assertSize(5, results);
     }
 
@@ -402,7 +403,7 @@ public class IterableIterateTest
         Iterable<Integer> iterable = new IterableAdapter<>(this.getIntegerList());
         MutableList<Integer> results =
                 Iterate.selectWith(iterable, Predicates2.instanceOf(), Integer.class, FastList.<Integer>newList());
-        Assert.assertEquals(iList(5, 4, 3, 2, 1), results);
+        Assertions.assertEquals(iList(5, 4, 3, 2, 1), results);
         Verify.assertSize(5, results);
     }
 
@@ -411,7 +412,7 @@ public class IterableIterateTest
     {
         Iterable<Integer> iterable = new IterableAdapter<>(Interval.oneTo(31));
         Collection<Class<?>> result = Iterate.collectIf(iterable, Integer.valueOf(31)::equals, Object::getClass);
-        Assert.assertEquals(iList(Integer.class), result);
+        Assertions.assertEquals(iList(Integer.class), result);
     }
 
     @Test
@@ -420,7 +421,7 @@ public class IterableIterateTest
         Iterable<Integer> iterable = new IterableAdapter<>(Interval.oneTo(31));
         Collection<Class<?>> result =
                 Iterate.collectIf(iterable, Integer.valueOf(31)::equals, Object::getClass, FastList.<Class<?>>newList());
-        Assert.assertEquals(iList(Integer.class), result);
+        Assertions.assertEquals(iList(Integer.class), result);
     }
 
     @Test
@@ -439,8 +440,8 @@ public class IterableIterateTest
     {
         MutableList<Integer> list = Interval.toReverseList(1, 31);
         Iterable<Integer> iterable = new IterableAdapter<>(list);
-        Assert.assertEquals(30, Iterate.detectIndex(iterable, Integer.valueOf(1)::equals));
-        Assert.assertEquals(0, Iterate.detectIndex(iterable, Integer.valueOf(31)::equals));
+        Assertions.assertEquals(30, Iterate.detectIndex(iterable, Integer.valueOf(1)::equals));
+        Assertions.assertEquals(0, Iterate.detectIndex(iterable, Integer.valueOf(31)::equals));
     }
 
     @Test
@@ -448,8 +449,8 @@ public class IterableIterateTest
     {
         MutableList<Integer> list = Interval.toReverseList(1, 31);
         Iterable<Integer> iterable = new IterableAdapter<>(list);
-        Assert.assertEquals(30, Iterate.detectIndexWith(iterable, Object::equals, 1));
-        Assert.assertEquals(0, Iterate.detectIndexWith(iterable, Object::equals, 31));
+        Assertions.assertEquals(30, Iterate.detectIndexWith(iterable, Object::equals, 1));
+        Assertions.assertEquals(0, Iterate.detectIndexWith(iterable, Object::equals, 31));
     }
 
     @Test
@@ -460,7 +461,7 @@ public class IterableIterateTest
         List<Integer> integers = Interval.oneTo(31);
         Function3<Sum, Integer, Integer, Sum> function = (sum, element, withValue) -> sum.add((element.intValue() - element.intValue()) * withValue.intValue());
         Sum sumOfDoubledValues = Iterate.injectIntoWith(result, integers, function, parameter);
-        Assert.assertEquals(0, sumOfDoubledValues.getValue().intValue());
+        Assertions.assertEquals(0, sumOfDoubledValues.getValue().intValue());
     }
 
     @Test
@@ -498,17 +499,17 @@ public class IterableIterateTest
         MutableList<Integer> objects1 = mList(1, 2, 3, null);
         Iterable<Integer> iterable = new IterableAdapter<>(objects1);
         Iterate.removeIfWith(iterable, (each5, ignored5) -> each5 == null, null);
-        Assert.assertEquals(iList(1, 2, 3), objects1);
+        Assertions.assertEquals(iList(1, 2, 3), objects1);
 
         MutableList<Integer> objects2 = mList(null, 1, 2, 3);
         Iterable<Integer> iterable4 = new IterableAdapter<>(objects2);
         Iterate.removeIfWith(iterable4, (each4, ignored4) -> each4 == null, null);
-        Assert.assertEquals(iList(1, 2, 3), objects2);
+        Assertions.assertEquals(iList(1, 2, 3), objects2);
 
         MutableList<Integer> objects3 = mList(1, null, 2, 3);
         Iterable<Integer> iterable3 = new IterableAdapter<>(objects3);
         Iterate.removeIfWith(iterable3, (each3, ignored3) -> each3 == null, null);
-        Assert.assertEquals(iList(1, 2, 3), objects3);
+        Assertions.assertEquals(iList(1, 2, 3), objects3);
 
         MutableList<Integer> objects4 = mList(null, null, null, (Integer) null);
         Iterable<Integer> iterable2 = new IterableAdapter<>(objects4);
@@ -517,12 +518,12 @@ public class IterableIterateTest
 
         MutableList<Integer> objects5 = mList(null, 1, 2, 3, null);
         Iterate.removeIfWith(objects5, (each1, ignored1) -> each1 == null, null);
-        Assert.assertEquals(iList(1, 2, 3), objects5);
+        Assertions.assertEquals(iList(1, 2, 3), objects5);
 
         MutableList<Integer> objects6 = mList(1, 2, 3);
         Iterable<Integer> iterable1 = new IterableAdapter<>(objects6);
         Iterate.removeIfWith(iterable1, (each, ignored) -> each == null, null);
-        Assert.assertEquals(iList(1, 2, 3), objects6);
+        Assertions.assertEquals(iList(1, 2, 3), objects6);
     }
 
     @Test
@@ -531,7 +532,7 @@ public class IterableIterateTest
         MutableList<Integer> newCollection = Lists.mutable.of();
         IterableAdapter<Integer> iterable = new IterableAdapter<>(Interval.oneTo(10));
         Iterate.forEach(iterable, newCollection::add);
-        Assert.assertEquals(Interval.oneTo(10), newCollection);
+        Assertions.assertEquals(Interval.oneTo(10), newCollection);
     }
 
     @Test
@@ -540,7 +541,7 @@ public class IterableIterateTest
         Sum result = new IntegerSum(0);
         Iterable<Integer> integers = new IterableAdapter<>(Interval.oneTo(5));
         Iterate.forEachWith(integers, (each, parm) -> result.add(each.intValue() * parm.intValue()), 2);
-        Assert.assertEquals(30, result.getValue().intValue());
+        Assertions.assertEquals(30, result.getValue().intValue());
     }
 
     @Test
@@ -548,7 +549,7 @@ public class IterableIterateTest
     {
         Iterable<Boolean> iterable =
                 new IterableAdapter<>(FastList.<Boolean>newList().with(Boolean.TRUE, Boolean.FALSE));
-        Assert.assertEquals(
+        Assertions.assertEquals(
                 FastList.newListWith("true", "false"),
                 Iterate.collectWith(iterable, (argument1, argument2) -> Boolean.toString(argument1.booleanValue() && argument2.booleanValue()), Boolean.TRUE));
     }
@@ -558,7 +559,7 @@ public class IterableIterateTest
     {
         Iterable<Boolean> iterable =
                 new IterableAdapter<>(FastList.<Boolean>newList().with(Boolean.TRUE, Boolean.FALSE));
-        Assert.assertEquals(
+        Assertions.assertEquals(
                 FastList.newListWith("true", "false"),
                 Iterate.collectWith(iterable, (argument1, argument2) -> Boolean.toString(argument1.booleanValue() && argument2.booleanValue()), Boolean.TRUE, new ArrayList<>()));
     }
@@ -569,12 +570,12 @@ public class IterableIterateTest
         List<Integer> list = this.getIntegerList();
         Iterable<Integer> iterable = new IterableAdapter<>(list);
         Verify.assertEmpty(Iterate.take(iterable, 0));
-        Assert.assertEquals(FastList.newListWith(5), Iterate.take(iterable, 1));
-        Assert.assertEquals(FastList.newListWith(5, 4), Iterate.take(iterable, 2));
-        Assert.assertEquals(list, Iterate.take(iterable, 5));
-        Assert.assertEquals(list, Iterate.take(iterable, 6));
-        Assert.assertEquals(list, Iterate.take(iterable, Integer.MAX_VALUE));
-        Assert.assertNotSame(iterable, Iterate.take(iterable, Integer.MAX_VALUE));
+        Assertions.assertEquals(FastList.newListWith(5), Iterate.take(iterable, 1));
+        Assertions.assertEquals(FastList.newListWith(5, 4), Iterate.take(iterable, 2));
+        Assertions.assertEquals(list, Iterate.take(iterable, 5));
+        Assertions.assertEquals(list, Iterate.take(iterable, 6));
+        Assertions.assertEquals(list, Iterate.take(iterable, Integer.MAX_VALUE));
+        Assertions.assertNotSame(iterable, Iterate.take(iterable, Integer.MAX_VALUE));
     }
 
     @Test
@@ -583,16 +584,20 @@ public class IterableIterateTest
         Verify.assertEmpty(Iterate.take(new IterableAdapter<>(FastList.<Integer>newList()), 2));
     }
 
-    @Test(expected = IllegalArgumentException.class)
+    @Test
     public void take_negative_throws()
     {
-        Iterate.take(new IterableAdapter<>(FastList.<Integer>newList()), -1);
+        assertThrows(IllegalArgumentException.class, () -> {
+            Iterate.take(new IterableAdapter<>(FastList.<Integer>newList()), -1);
+        });
     }
 
-    @Test(expected = IllegalArgumentException.class)
+    @Test
     public void take_target_negative_throws()
     {
-        IterableIterate.take(new IterableAdapter<>(FastList.<Integer>newList()), -1, FastList.<Integer>newList());
+        assertThrows(IllegalArgumentException.class, () -> {
+            IterableIterate.take(new IterableAdapter<>(FastList.<Integer>newList()), -1, FastList.<Integer>newList());
+        });
     }
 
     @Test
@@ -600,10 +605,10 @@ public class IterableIterateTest
     {
         List<Integer> list = this.getIntegerList();
         Iterable<Integer> iterable = new IterableAdapter<>(list);
-        Assert.assertEquals(FastList.newListWith(5, 4, 3, 2, 1), Iterate.drop(iterable, 0));
-        Assert.assertEquals(FastList.newListWith(4, 3, 2, 1), Iterate.drop(iterable, 1));
-        Assert.assertEquals(FastList.newListWith(3, 2, 1), Iterate.drop(iterable, 2));
-        Assert.assertEquals(FastList.newListWith(1), Iterate.drop(iterable, 4));
+        Assertions.assertEquals(FastList.newListWith(5, 4, 3, 2, 1), Iterate.drop(iterable, 0));
+        Assertions.assertEquals(FastList.newListWith(4, 3, 2, 1), Iterate.drop(iterable, 1));
+        Assertions.assertEquals(FastList.newListWith(3, 2, 1), Iterate.drop(iterable, 2));
+        Assertions.assertEquals(FastList.newListWith(1), Iterate.drop(iterable, 4));
         Verify.assertEmpty(Iterate.drop(iterable, 5));
         Verify.assertEmpty(Iterate.drop(iterable, 6));
         Verify.assertEmpty(Iterate.drop(iterable, Integer.MAX_VALUE));
@@ -615,16 +620,20 @@ public class IterableIterateTest
         Verify.assertEmpty(Iterate.drop(new IterableAdapter<>(FastList.<Integer>newList()), 2));
     }
 
-    @Test(expected = IllegalArgumentException.class)
+    @Test
     public void drop_negative_throws()
     {
-        Iterate.drop(new IterableAdapter<>(FastList.<Integer>newList()), -1);
+        assertThrows(IllegalArgumentException.class, () -> {
+            Iterate.drop(new IterableAdapter<>(FastList.<Integer>newList()), -1);
+        });
     }
 
-    @Test(expected = IllegalArgumentException.class)
+    @Test
     public void drop_target_negative_throws()
     {
-        IterableIterate.drop(new IterableAdapter<>(FastList.<Integer>newList()), -1, FastList.<Integer>newList());
+        assertThrows(IllegalArgumentException.class, () -> {
+            IterableIterate.drop(new IterableAdapter<>(FastList.<Integer>newList()), -1, FastList.<Integer>newList());
+        });
     }
 
     private static final class IterableAdapter<E>
@@ -648,28 +657,28 @@ public class IterableIterateTest
     public void maxWithoutComparator()
     {
         Iterable<Integer> iterable = FastList.newListWith(1, 5, 2, 99, 7);
-        Assert.assertEquals(99, IterableIterate.max(iterable).intValue());
+        Assertions.assertEquals(99, IterableIterate.max(iterable).intValue());
     }
 
     @Test
     public void minWithoutComparator()
     {
         Iterable<Integer> iterable = FastList.newListWith(99, 5, 2, 1, 7);
-        Assert.assertEquals(1, IterableIterate.min(iterable).intValue());
+        Assertions.assertEquals(1, IterableIterate.min(iterable).intValue());
     }
 
     @Test
     public void max()
     {
         Iterable<Integer> iterable = FastList.newListWith(1, 5, 2, 99, 7);
-        Assert.assertEquals(99, IterableIterate.max(iterable, Integer::compareTo).intValue());
+        Assertions.assertEquals(99, IterableIterate.max(iterable, Integer::compareTo).intValue());
     }
 
     @Test
     public void min()
     {
         Iterable<Integer> iterable = FastList.newListWith(99, 5, 2, 1, 7);
-        Assert.assertEquals(1, IterableIterate.min(iterable, Integer::compareTo).intValue());
+        Assertions.assertEquals(1, IterableIterate.min(iterable, Integer::compareTo).intValue());
     }
 
     @Test
@@ -685,7 +694,7 @@ public class IterableIterateTest
     {
         MutableList<Integer> results = Lists.mutable.of();
         IterableIterate.forEach(integers, 0, 4, results::add);
-        Assert.assertEquals(integers, results);
+        Assertions.assertEquals(integers, results);
         MutableList<Integer> reverseResults = Lists.mutable.of();
 
         Verify.assertThrows(IndexOutOfBoundsException.class, () -> ListIterate.forEach(integers, 4, -1, reverseResults::add));
@@ -704,7 +713,7 @@ public class IterableIterateTest
     {
         MutableList<Integer> results = Lists.mutable.of();
         IterableIterate.forEachWithIndex(integers, 0, 4, ObjectIntProcedures.fromProcedure(results::add));
-        Assert.assertEquals(integers, results);
+        Assertions.assertEquals(integers, results);
         MutableList<Integer> reverseResults = Lists.mutable.of();
         ObjectIntProcedure<Integer> objectIntProcedure = ObjectIntProcedures.fromProcedure(reverseResults::add);
         Verify.assertThrows(IllegalArgumentException.class, () -> IterableIterate.forEachWithIndex(integers, 4, -1, objectIntProcedure));
